--- a/src/locales/ca.json
+++ b/src/locales/ca.json
@@ -56,7 +56,7 @@
   "show_me_gender": "Mostra’m gènere",
   "my_photos_are": "Les meves fotos són",
   "add_at_least_2_photos_to_continue": "Afegiu almenys 2 fotos per continuar",
-  "enable_location": "Habilitar la ubicació",
+  "enable_location": "Activar la ubicació",
   "you_will_need_to_enable_your_location_order_to_use_heartLinks": "Haureu d’habilitar la vostra comanda d’ubicació per utilitzar els enllaços de cor",
   "allow_location": "Permetre la ubicació",
   "tell_me_more": "Explica'm més",
@@ -148,7 +148,7 @@
   "only_people_you_have_liked_will_see_me": "Només la gent que us ha agradat em veurà",
   "only_wi-fi_only": "Només Wi-Fi només",
   "on_wi-fi_and_mobile_data": "En dades Wi-Fi i mòbils",
-  "never_auto_play_videos": "No reproduïu mai els vídeos",
+  "never_auto_play_videos": "No reproduïu mai vídeos",
   "show_me_top_picks": "Mostra’m les millors opcions",
   "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Engegar -lo us permetrà mostrar -vos com a selecció superior destacada a altres usuaris propers",
   "activity_status": "Estat de l'activitat",
@@ -194,7 +194,7 @@
   "do_you_have_pets": "Tens mascotes",
   "are_you_a_smoker?": "Ets fumador?",
   "do_you_exercise?": "Feu exercici?",
-  "do_you_follow_any_diet?": "Seguiu alguna dieta?",
+  "do_you_follow_any_diet?": "Segueixes alguna dieta?",
   "how_active_you_are_on_social_media?": "Quina actiu esteu a les xarxes socials?",
   "how_often_do_you_drink_alcohol?": "Amb quina freqüència beu alcohol?",
   "how_are_your_sleeping_habits?": "Com són els vostres hàbits de son?",
@@ -207,7 +207,7 @@
   "communication_style": "Estil de comunicació",
   "love_languages": "Idiomes d’amor",
   "life_style": "Estil de vida",
-  "pets_free": "Pets gratuït",
+  "pets_free": "Mascotes gratis",
   "drink_beer": "Beu cervesa",
   "are_you_a_smoker": "Ets fumador",
   "practice": "Pràctica",
@@ -240,7 +240,7 @@
   "interests": "Interessos",
   "my_gender": "el meu gènere",
   "my_orientation": "La meva orientació",
-  "version_x.y.z": "Versió X.Y.Z",
+  "version_{number}": "Versió {número}",
   "km": "km",
   "mi": "mi",
   "live_at_{nameAddress}": "En directe a {nameaddress}",
@@ -266,7 +266,7 @@
   "smoker": "Fumador",
   "not_lovers": "No amants",
   "no_romance": "Sense romanç",
-  "love_novels": "Love Novel·les",
+  "love_novels": "Novel·les d’amor",
   "answer_question": "Respondre pregunta",
   "optimise_pairing": "Optimitzar el maridatge",
   "connecting": "Connectant",
@@ -277,7 +277,7 @@
   "likes_you": "T'agrada",
   "prioritized_likes": "Likes prioritzats",
   "everyone_you_like_will_see_you_soon": "Tothom que us agradi ens veurà aviat",
-  "match_instantly_with_people_who_already_like_you": "Coincideix amb l’instant amb persones que ja t’agraden",
+  "match_instantly_with_people_who_already_like_you": "Coincideix amb instantàniament amb persones que ja t’agraden",
   "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Inclou les millors opcions, likes il·limitats, un augment d’1 mes, 5 sopars gratuïts com cada setmana, rebobineu i passaport",
   "message_before_matching": "Missatge abans de coincidir",
   "99+_people_already_like_you": "99 persones més ja t’agraden",
@@ -287,16 +287,16 @@
   "see_as_many_likes_as_you_want": "Mireu tants gustos com vulgueu",
   "1_free_boost_every_month": "1 impuls gratuït cada mes",
   "choose_who_see_you": "Trieu qui us veiem",
-  "5_free_supper_likes_very_week": "5 El sopar gratuït li agrada molt la setmana",
+  "5_free_supper_likes_very_week": "5 Sopar gratuït li agrada molt la setmana",
   "you're_3x_more_likely_to_get_a_match": "És més probable que tinguis un partit",
   "online_now": "En línia ara",
   "like": "M'AGRADA",
   "nope": "Nota",
   "supper_like": "Sopar com",
   "add_living": "Afegir viu",
+  "create_new": "Crea un nou",
   "99+_like": "99+ com",
   "for_you": "Per a tu",
-  "create_new": "Crea un nou",
   "months": "mesos",
   "usd/months": "USD/mesos",
   "sale": "Rebaixa",
@@ -317,11 +317,13 @@
   "please_provide_more_details_about_what_you_are_reporting": "Proporcioneu més detalls sobre el que informeu",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Si sortiu, haureu de tornar a registrar el vostre compte i suprimir tota la informació.",
   "invalid_date_of_birth": "Data de naixement no vàlida",
+  "save": "Estalviar",
+  "find_someone_that_also_looking_for_love_as_you": "Troba algú que també busqui amor com tu",
   "are_you_sure_you_want_to_sign_out?": "Esteu segur que voleu iniciar la sessió?",
   "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Els usuaris compatibles us continuaran veient a la darrera ubicació identificada.",
   "delete_my_account": "Suprimeix el meu compte",
   "if_you_want_to_keep_the_account_but_not_visible_to_others,_you_can_choose_to_hide_the_account._you_can_disable_this_feature_in_the_settings.": "Si voleu conservar el compte, però no visible per als altres, podeu optar per ocultar el compte. Podeu desactivar aquesta funció a la configuració.",
-  "please_verify": "Verifiqueu -ho",
+  "please_verify": "Verifiqueu",
   "help_us_protect_the_tinder_community_by_proving_you're_using_an_original_photo._you_just_need_to_record_a_selfie_video._if_your_selfie_video_matches_your_profile_photo,_you'll_be_verified!": "Ajudeu -nos a protegir la comunitat Tinder demostrant que utilitzeu una foto original. Només cal gravar un vídeo selfie. Si el vostre vídeo selfie coincideix amb la vostra foto de perfil, se us comprovarà.",
   "maybe_later": "Potser després",
   "how_it_works": "Com funciona",
@@ -329,5 +331,17 @@
   "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "Mantindrem la vostra informació bàsica de reconeixement facial o \"plantilles\", un cop finalitzada la verificació fotogràfica (normalment finalitzada en 24 hores). No emmagatzemem els vostres vídeos selfie.",
   "invalid_image": "Imatge no vàlida",
   "your_photo_does_not_match.please_select_a_photo_again": "La vostra foto no coincideix. Si us plau, seleccioneu una foto de nou",
-  "learn_more_about_how_it_works": "Obteniu més informació sobre com funciona"
+  "learn_more_about_how_it_works": "Obteniu més informació sobre com funciona",
+  "before_you_continue...": "Abans de continuar ...",
+  "prepare_the_space": "Prepareu l’espai",
+  "choose_a_place_with_enough_light": "Trieu un lloc amb prou llum",
+  "avoid_glare_and_backlit": "Eviteu l'enlluernament i el retrocés",
+  "prepare_the_pose": "Prepareu la postura",
+  "looking_directly_at_the_camera": "Mirant directament la càmera",
+  "remove_hats,_sunglasses,_and_face_coverings": "Traieu els barrets, les ulleres de sol i els revestiments de la cara",
+  "oh!": "Oh!",
+  "we_cannot_record_your_video._please_try_again.": "No podem gravar el vostre vídeo. Siusplau torna-ho a provar.",
+  "increase_screen_brightness": "Augmenta la brillantor de la pantalla",
+  "photo_verified": "Foto verificada",
+  "please_choose_a_reason": "Trieu un motiu"
 }
