--- a/src/locales/da.json
+++ b/src/locales/da.json
@@ -5,14 +5,14 @@
   "log_in_with_facebook": "Login med Facebook",
   "log_in_with_phone_number": "Log ind med telefonnummer",
   "trouble_logging_in?": "Problemer med at logge ind?",
-  "by_clicking_'login',_you_agree_with_our_terms._learn_how_we_process_your_data_in_our": "Ved at klikke på 'login' er du enig i vores vilkår. Lære, hvordan vi behandler dine data i vores",
+  "by_clicking_'login',_you_agree_with_our_terms._learn_how_we_process_your_data_in_our": "Ved at klikke på 'login' er du enig med vores vilkår. Lære, hvordan vi behandler dine data i vores",
   "privacy_policy": "Fortrolighedspolitik",
   "and": "og",
   "cookies_policy": "Cookies -politik",
   "my_number_is": "Mit nummer er",
   "phone_number": "Telefonnummer",
   "please_enter_a_valid_phone_number": "Indtast venligst et gyldigt telefonnummer",
-  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Når du trykker på 'Fortsæt', sender Heartlink en tekst med verifikationskode. Meddelelse og datahastigheder, der er parret.",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Når du trykker på 'Fortsæt', sender HeartLink en tekst med verifikationskode. Meddelelse og datahastigheder, der er parret.",
   "the_verified_phone_number_can_be_used_to_log_in.": "Det verificerede telefonnummer kan bruges til at logge ind.",
   "learn_what_happens_when_your_number_changes.": "Lær hvad der sker, når dit nummer ændres.",
   "continue": "Blive ved",
@@ -65,7 +65,7 @@
   "want_to_avoid_someone_you_know_on_heartLink?": "Vil du undgå nogen, du kender på Heartlink?",
   "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Det er let - del din enheds kontakt med hjertelink, når du bruger denne funktion til at vælge, hvem du vil undgå",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Vi gemmer din blokerede kontakt for at forhindre dig i at se hinanden, hvis din kontakt har en konto med den samme information, du giver. Du kan stoppe med at dele med os i dine indstillinger.",
-  "learn_more_here,_including_how_heartLink_process_your_contacts": "Lær mere her, herunder hvordan hjertelink behandler dine kontakter",
+  "learn_more_here,_including_how_heartLink_process_your_contacts": "Lær mere her, inklusive hvordan hjertelink behandler dine kontakter",
   "share_{nameUser}_profile": "Del {NameUser} profil",
   "see_what_a_friend_thinks": "Se hvad en ven synes",
   "report_{nameUser}": "Rapport {NameUser}",
@@ -95,12 +95,12 @@
   "level_up_everyone_action_you_take_on_heartLink": "Niveau op alle handlinger, du tager på hjertelink",
   "get_read_receipt_package": "Få læst kvitteringspakke",
   "stay_up_to_date": "Hold dig ajour",
-  "know_when_your_messages_have_been_read_with_read_receipt": "Ved, hvornår dine beskeder er blevet læst med læst kvittering",
+  "know_when_your_messages_have_been_read_with_read_receipt": "Ved, hvornår dine beskeder er blevet læst med læse kvittering",
   "most_popular": "MEST POPULÆRE",
   "read_receipt": "Læs kvitteringen",
   "recurring_billing,_cancel_anytime": "Tilbagevendende fakturering, annuller når som helst",
   "get_boost_package": "Få boost -pakke",
-  "skip_the_queue": "Spring køen over",
+  "skip_the_queue": "Spring over køen",
   "always_on_top_profile_in_your_area_for_30_mins_to_get_more_matches": "Altid på topprofil i dit område i 30 minutter for at få flere kampe",
   "boost_my_profile": "Øge min profil",
   "get_a_gold_package": "Få en guldpakke",
@@ -240,7 +240,7 @@
   "interests": "Interesser",
   "my_gender": "Mit køn",
   "my_orientation": "min orientering",
-  "version_x.y.z": "Version X.Y.Z",
+  "version_{number}": "Version {nummer}",
   "km": "km",
   "mi": "mi",
   "live_at_{nameAddress}": "Live at {NameAddress}",
@@ -277,7 +277,7 @@
   "likes_you": "Kan lide dig",
   "prioritized_likes": "Prioriterede likes",
   "everyone_you_like_will_see_you_soon": "Alle, du kan lide, ser dig snart",
-  "match_instantly_with_people_who_already_like_you": "Match øjeblikkeligt med mennesker, der allerede kan lide dig",
+  "match_instantly_with_people_who_already_like_you": "Match øjeblikkeligt med folk, der allerede kan lide dig",
   "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Inkluderet topvalg, ubegrænsede likes, 1 Free Boost hver måned, 5 gratis aftensmad som hver uge, spole tilbage og pas",
   "message_before_matching": "Besked inden matching",
   "99+_people_already_like_you": "99+ mennesker kan allerede lide dig",
@@ -294,9 +294,9 @@
   "nope": "NIX",
   "supper_like": "Aftensmad kan lide",
   "add_living": "Tilføj levende",
+  "create_new": "Lav ny",
   "99+_like": "99+ som",
   "for_you": "For dig",
-  "create_new": "Lav ny",
   "months": "måneder",
   "usd/months": "USD/måneder",
   "sale": "Salg",
@@ -317,6 +317,8 @@
   "please_provide_more_details_about_what_you_are_reporting": "Giv flere detaljer om, hvad du rapporterer",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Hvis du forlader, bliver du nødt til at omregistrere din konto og slette alle oplysninger.",
   "invalid_date_of_birth": "Ugyldig fødselsdato",
+  "save": "Gemme",
+  "find_someone_that_also_looking_for_love_as_you": "Find nogen, der også leder efter kærlighed som dig",
   "are_you_sure_you_want_to_sign_out?": "Er du sikker på, at du vil logge ud?",
   "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Kompatible brugere vil fortsat se dig på det sidst identificerede sted.",
   "delete_my_account": "Slet min konto",
@@ -329,5 +331,17 @@
   "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "Vi opbevarer dine grundlæggende oplysninger om ansigtsgenkendelse eller \"skabeloner\", efter afslutningen af ​​fotobekræftelse (normalt afsluttet inden for 24 timer). Vi gemmer ikke dine selfie -videoer.",
   "invalid_image": "Ugyldigt billede",
   "your_photo_does_not_match.please_select_a_photo_again": "Dit foto stemmer ikke overens. Vælg et foto igen",
-  "learn_more_about_how_it_works": "Lær mere om, hvordan det fungerer"
+  "learn_more_about_how_it_works": "Lær mere om, hvordan det fungerer",
+  "before_you_continue...": "Før du fortsætter ...",
+  "prepare_the_space": "Forbered pladsen",
+  "choose_a_place_with_enough_light": "Vælg et sted med nok lys",
+  "avoid_glare_and_backlit": "Undgå blænding og baggrundsbelyst",
+  "prepare_the_pose": "Forbered poseringen",
+  "looking_directly_at_the_camera": "Ser direkte på kameraet",
+  "remove_hats,_sunglasses,_and_face_coverings": "Fjern hatte, solbriller og ansigtsbelægninger",
+  "oh!": "Åh!",
+  "we_cannot_record_your_video._please_try_again.": "Vi kan ikke optage din video. Prøv igen.",
+  "increase_screen_brightness": "Forøg skærmens lysstyrke",
+  "photo_verified": "Foto verificeret",
+  "please_choose_a_reason": "Vælg en grund"
 }
