--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -21,9 +21,9 @@
   "resend_code": "Code wiedergeben",
   "invalid_code._please_try_again": "Ungültiger Code. Bitte versuche es erneut",
   "what's_your_email?": "Wie ist deine E-Mailadresse?",
-  "don't_lose_access_to_your_account,_verify_your_email": "Verlieren Sie keinen Zugriff auf Ihr Konto, überprüfen Sie Ihre E -Mail",
+  "don't_lose_access_to_your_account,_verify_your_email": "Verlieren Sie keinen Zugriff auf Ihr Konto. Überprüfen Sie Ihre E -Mail",
   "verify_instantly_by_connecting_your_google_account": "Überprüfen Sie sofort, indem Sie Ihr Google -Konto verbinden",
-  "i_want_to_receive_news,_updates_and_offers_from_heartLink": "Ich möchte Neuigkeiten, Updates und Angebote von Heartlink erhalten",
+  "i_want_to_receive_news,_updates_and_offers_from_heartLink": "Ich möchte Neuigkeiten, Updates und Angebote von HeartLink erhalten",
   "enter_email": "Email eingeben",
   "welcome_to_heartLink": "Willkommen bei Heartlink",
   "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "Bitte befolgen Sie unsere Regeln, um mehr Spaß zu haben und gemeinsam eine großartige Community aufzubauen",
@@ -57,7 +57,7 @@
   "my_photos_are": "Meine Fotos sind",
   "add_at_least_2_photos_to_continue": "Fügen Sie mindestens 2 Fotos hinzu, um fortzufahren",
   "enable_location": "Aktiviere Standort",
-  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "Sie müssen Ihre Standortbestellung ermöglichen, Heartlinks zu verwenden",
+  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "Sie müssen Ihren Standort bestellen, Heartlinks zu verwenden",
   "allow_location": "Standort zulassen",
   "tell_me_more": "Erzähl mir mehr",
   "meet_people_nearby": "Treffen Sie Leute in der Nähe",
@@ -74,7 +74,7 @@
   "what_is_the_reason_for_your_report?": "Was ist der Grund für Ihren Bericht?",
   "please_choose_1_reason": "Bitte wählen Sie 1 Grund",
   "we_won't_let_puddink_know_that_you_reported_them": "Wir werden Puddink nicht wissen lassen, dass Sie sie gemeldet haben",
-  "can_you_tell_us_what_happened?": "Kannst du uns sagen, was passiert ist?",
+  "can_you_tell_us_what_happened?": "Können Sie uns sagen, was passiert ist?",
   "would_you_mind_sharing_more_details_with_us?": "Würde es Ihnen etwas ausmachen, weitere Details mit uns zu teilen?",
   "add_a_comment": "Einen Kommentar hinzufügen",
   "are_you_sure_about_the_content_of_this_report?": "Sind Sie sich über den Inhalt dieses Berichts sicher?",
@@ -95,9 +95,9 @@
   "level_up_everyone_action_you_take_on_heartLink": "Stufen Sie alle Aktionen auf, die Sie mit Heartlink übernehmen",
   "get_read_receipt_package": "Holen Sie sich Lese -Quittungspaket",
   "stay_up_to_date": "Auf dem Laufenden bleiben",
-  "know_when_your_messages_have_been_read_with_read_receipt": "Wissen Sie, wann Ihre Nachrichten mit Lesequittung gelesen wurden",
+  "know_when_your_messages_have_been_read_with_read_receipt": "Wissen Sie, wann Ihre Nachrichten mit Lese -Quittung gelesen wurden",
   "most_popular": "AM BELIEBTESTEN",
-  "read_receipt": "Quittung lesen",
+  "read_receipt": "Read -Quittung",
   "recurring_billing,_cancel_anytime": "Wiederkehrende Abrechnung, jederzeit abbrechen",
   "get_boost_package": "Holen Sie sich Boost -Paket",
   "skip_the_queue": "Überspringen Sie die Warteschlange",
@@ -105,19 +105,19 @@
   "boost_my_profile": "Steigst mein Profil",
   "get_a_gold_package": "Holen Sie sich ein Goldpaket",
   "5_free_supper_like_weekly": "5 kostenloses Abendessen wie wöchentlich",
-  "get_supper_likes_package": "Holen Sie sich Paket für das Abendessen mag",
-  "stand_out_with_super_like": "Fällt mit super wie ab",
+  "get_supper_likes_package": "Holen Sie sich Paket für das Abendessen Likes",
+  "stand_out_with_super_like": "Fällt mit Super -Like ab",
   "3x_chance_to_get_a_match": "3x Chance, ein Match zu bekommen",
   "get_supper_likes": "Holen Sie sich Abendmesser",
   "get_silver_package": "Holen Sie sich Silberpaket",
   "unlimited_likes": "Unbegrenzte Likes",
-  "send_as_many_likes_as_you_want": "Senden Sie so viele Likes, wie Sie möchten",
+  "send_as_many_likes_as_you_want": "Senden Sie so viele Vorlieben, wie Sie möchten",
   "control_your_profile": "Steuern Sie Ihr Profil",
   "limit_what_others_see_with_dating_plus": "Begrenzen Sie das, was andere mit Dating Plus sehen",
   "choose_who_sees_you": "Wählen Sie, wer Sie sieht",
   "only_be_shown_to_people_you've_liked": "Werden nur Leuten gezeigt, die Sie gemocht haben",
   "like_profile_around_the_world": "Wie ein Profil auf der ganzen Welt",
-  "passport_to_anywhere": "Pass zu einem überall",
+  "passport_to_anywhere": "Reisepass zu einem überall",
   "unlimited_rewinds": "Unbegrenzte Rückspulen",
   "go_back_and_try_again": "Geh zurück und versuche es erneut",
   "turn_off_ads": "Anzeigen ausschalten",
@@ -141,10 +141,10 @@
   "balance_recommendations": "Ausgleichsempfehlungen",
   "see_the_most_relevant_people_to_you_(default_settings)": "Siehe die relevantesten Personen an Sie (Standardeinstellungen)",
   "recently_active": "Kürzlich aktiv",
-  "see_the_most_recently_active_people_first": "Sehen Sie zuerst die zuletzt aktiven Personen an",
+  "see_the_most_recently_active_people_first": "Sehen Sie zuerst die zuletzt aktiven Menschen",
   "standard": "Standard",
   "only_be_shown_to_certain_types_of_people_for_individual_recommendations": "Werden nur bestimmte Arten von Personen für individuelle Empfehlungen gezeigt",
-  "only_people_i've_liked": "Nur Leute, die ich gemocht habe",
+  "only_people_i've_liked": "Nur Leute, die ich mochte",
   "only_people_you_have_liked_will_see_me": "Nur Leute, die Sie gemocht haben, werden mich sehen",
   "only_wi-fi_only": "Nur nur Wi-Fi",
   "on_wi-fi_and_mobile_data": "Auf Wi-Fi und mobilen Daten",
@@ -161,7 +161,7 @@
   "choose_the_theme_you_like_most": "Wählen Sie das Thema, das Ihnen am meisten gefällt",
   "log_out": "AUSLOGGEN",
   "delete_account": "KONTO LÖSCHEN",
-  "add_video,_pic_or_logo_toget_4%_closer_to_completing_your_profile_and_you_may_even_get_more_likes": "Fügen Sie Video, Bild oder Logo hinzu 4% näher am Fertigstellen Ihres Profils und Sie können sogar mehr Likes erhalten",
+  "add_video,_pic_or_logo_toget_4%_closer_to_completing_your_profile_and_you_may_even_get_more_likes": "Fügen Sie Video, Bild oder Logo hinzu, 4% näher am Fertigstellen Ihres Profils und Sie können sogar mehr Likes erhalten",
   "add_media": "Medien hinzufügen",
   "upload_photo": "Foto hochladen",
   "upload_loop": "Schleife hochladen",
@@ -234,19 +234,19 @@
   "select_to_3": "Wählen Sie bis 3",
   "control_profile": "Steuerungsprofil",
   "don't_show_my_age": "Zeigen Sie mein Alter nicht",
-  "don't_show_my_distance": "Zeigen Sie meine Entfernung nicht",
+  "don't_show_my_distance": "Zeigen Sie meine Distanz nicht",
   "show_{nameScream}_on_my_profile": "Zeigen Sie in meinem Profil {namescream} an",
   "you_are_not_enter_the_phone_number": "Sie sind nicht die Telefonnummer eingeben",
   "interests": "Interessen",
   "my_gender": "Mein Geschlecht",
   "my_orientation": "meine Orientierung",
-  "version_x.y.z": "Version X.Y.Z",
+  "version_{number}": "Versionsnummer}",
   "km": "km",
   "mi": "mi",
   "live_at_{nameAddress}": "Lebe bei {nameaddress}",
   "{numberKilometers}_{unit}_away": "{Numberkilometer} {Einheit} weg",
   "verified": "Verifiziert",
-  "heartLink": "Herzverbindung",
+  "heartLink": "Herzgliede",
   "don't_worry_-_we_won't_tell_this_person": "Mach dir keine Sorgen - wir werden es dieser Person nicht sagen",
   "finding_people_near_you...": "Leute in deiner Nähe finden ...",
   "let's_be_friend": "Lass uns Freunde sein",
@@ -259,7 +259,7 @@
   "share_idea": "Idee teilen",
   "answer_tough_questions_instead_of_opening_sentences!_your_responses_will_appear_on_the_blind_date_interface_and_can_be_used_to_start_a_conversation": "Beantworten Sie schwierige Fragen, anstatt Sätze zu öffnen! Ihre Antworten werden auf der Blind Date -Schnittstelle angezeigt und können verwendet werden, um ein Gespräch zu starten",
   "get_ready": "Bereit machen",
-  "questions_and_chat_time_are_limited,_so_think_and_answer_quickly": "Fragen und Chat -Zeit sind begrenzt. Denken Sie also schnell und beantworten Sie schnell",
+  "questions_and_chat_time_are_limited,_so_think_and_answer_quickly": "Fragen und Chatzeit sind begrenzt. Denken Sie also schnell und beantworten Sie schnell",
   "compatible_to_view_profiles": "Kompatibel, um Profile anzuzeigen",
   "after_the_chat_is_over,_you'll_see_the_person's_profile_if_you_both_match": "Nachdem der Chat vorbei ist, sehen Sie das Profil der Person, wenn Sie beide übereinstimmen",
   "i_can't_date_someone_who:": "Ich kann nicht mit jemandem ausgehen, der:",
@@ -294,9 +294,9 @@
   "nope": "NÖ",
   "supper_like": "Abendessen wie",
   "add_living": "Fügen Sie das Leben hinzu",
+  "create_new": "Erstelle neu",
   "99+_like": "99+ mögen",
   "for_you": "Für dich",
-  "create_new": "Erstelle neu",
   "months": "Monate",
   "usd/months": "USD/Monate",
   "sale": "Verkauf",
@@ -317,6 +317,8 @@
   "please_provide_more_details_about_what_you_are_reporting": "Bitte geben Sie weitere Details zur Berichterstattung an, was Sie berichten",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Wenn Sie beenden, müssen Sie Ihr Konto erneut registrieren und alle Informationen löschen.",
   "invalid_date_of_birth": "ungültiges Geburtsdatum",
+  "save": "Speichern",
+  "find_someone_that_also_looking_for_love_as_you": "Finden Sie jemanden, der auch nach Liebe sucht wie Sie",
   "are_you_sure_you_want_to_sign_out?": "Sind Sie sicher, dass Sie sich anmelden möchten?",
   "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Kompatible Benutzer sehen Sie weiterhin am letzten identifizierten Ort.",
   "delete_my_account": "Löschen Sie mein Konto",
@@ -329,5 +331,17 @@
   "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "Nach Abschluss der Fotoüberprüfung (normalerweise innerhalb von 24 Stunden abgeschlossen) werden wir Ihre grundlegenden Information über Gesichtserkennung oder \"Vorlagen\" behalten. Wir speichern Ihre Selfie -Videos nicht.",
   "invalid_image": "Ungültiges Bild",
   "your_photo_does_not_match.please_select_a_photo_again": "Ihr Foto stimmt nicht überein. Bitte wählen Sie ein Foto erneut aus",
-  "learn_more_about_how_it_works": "Erfahren Sie mehr darüber, wie es funktioniert"
+  "learn_more_about_how_it_works": "Erfahren Sie mehr darüber, wie es funktioniert",
+  "before_you_continue...": "Bevor du weiterging ...",
+  "prepare_the_space": "Den Raum vorbereiten",
+  "choose_a_place_with_enough_light": "Wählen Sie einen Ort mit genug Licht",
+  "avoid_glare_and_backlit": "Vermeiden Sie Blendung und Hintergrundbeleuchtung",
+  "prepare_the_pose": "Bereiten Sie die Pose vor",
+  "looking_directly_at_the_camera": "Schauen Sie direkt in die Kamera",
+  "remove_hats,_sunglasses,_and_face_coverings": "Entfernen Sie Hüte, Sonnenbrillen und Gesichtsbedeckungen",
+  "oh!": "Oh!",
+  "we_cannot_record_your_video._please_try_again.": "Wir können Ihr Video nicht aufzeichnen. Bitte versuche es erneut.",
+  "increase_screen_brightness": "Erhöhen Sie die Bildschirmhelligkeit",
+  "photo_verified": "Foto verifiziert",
+  "please_choose_a_reason": "Bitte wählen Sie einen Grund"
 }
