--- a/src/locales/el.json
+++ b/src/locales/el.json
@@ -25,7 +25,7 @@
   "verify_instantly_by_connecting_your_google_account": "Επαληθεύστε αμέσως τη σύνδεση του λογαριασμού σας στο Google",
   "i_want_to_receive_news,_updates_and_offers_from_heartLink": "Θέλω να λάβω νέα, ενημερώσεις και προσφορές από το HeartLink",
   "enter_email": "Εισάγετε ηλεκτρονική διεύθυνση",
-  "welcome_to_heartLink": "Καλώς ήλθατε στο HeartLink",
+  "welcome_to_heartLink": "Καλώς ήλθατε στο Heartlink",
   "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "Ακολουθήστε τους κανόνες μας για να διασκεδάσετε και να οικοδομήσετε μια μεγάλη κοινότητα μαζί",
   "be_yourself": "Να είσαι ο εαυτός σου",
   "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "Βεβαιωθείτε ότι οι φωτογραφίες σας, η ηλικία και το βιογραφικό σας είναι αληθινό σε ποιοι είστε",
@@ -139,13 +139,13 @@
   "control_who_you_see": "Ελέγξτε ποιος βλέπετε",
   "sliver_package": "Πακέτο",
   "balance_recommendations": "Συστάσεις ισορροπίας",
-  "see_the_most_relevant_people_to_you_(default_settings)": "Δείτε τους πιο σχετικούς ανθρώπους σε εσάς (προεπιλεγμένες ρυθμίσεις)",
+  "see_the_most_relevant_people_to_you_(default_settings)": "Δείτε τους πιο σχετικούς ανθρώπους για εσάς (προεπιλεγμένες ρυθμίσεις)",
   "recently_active": "Πρόσφατα ενεργός",
   "see_the_most_recently_active_people_first": "Δείτε πρώτα τους πιο πρόσφατα ενεργούς ανθρώπους",
   "standard": "Πρότυπο",
   "only_be_shown_to_certain_types_of_people_for_individual_recommendations": "Να αποδειχθεί μόνο σε ορισμένους τύπους ατόμων για μεμονωμένες συστάσεις",
   "only_people_i've_liked": "Μόνο άτομα που μου άρεσαν",
-  "only_people_you_have_liked_will_see_me": "Μόνο τα άτομα που σας άρεσαν θα με δουν",
+  "only_people_you_have_liked_will_see_me": "Μόνο άτομα που σας άρεσαν θα με δουν",
   "only_wi-fi_only": "Μόνο Wi-Fi μόνο",
   "on_wi-fi_and_mobile_data": "Σε δεδομένα Wi-Fi και κινητής τηλεφωνίας",
   "never_auto_play_videos": "Never Auto Play Videos",
@@ -165,7 +165,7 @@
   "add_media": "Προσθήκη μέσων",
   "upload_photo": "Ανέβασμα φωτογραφίας",
   "upload_loop": "Μεταφορτώστε βρόχο",
-  "capture_from_camera": "Καταγραφή από κάμερα",
+  "capture_from_camera": "Λειτουργία από την κάμερα",
   "photo": "φωτογραφία",
   "done": "Εγινε",
   "about_me": "ΣΧΕΤΙΚΑ ΜΕ ΜΕΝΑ",
@@ -240,10 +240,10 @@
   "interests": "Τα ενδιαφέροντα",
   "my_gender": "το γένος μου",
   "my_orientation": "ο προσανατολισμός μου",
-  "version_x.y.z": "Έκδοση x.y.z",
+  "version_{number}": "Έκδοση {αριθμός}",
   "km": "km",
   "mi": "μι",
-  "live_at_{nameAddress}": "Ζήστε στο {Nameaddress}",
+  "live_at_{nameAddress}": "Ζήστε στο {NameAddress}",
   "{numberKilometers}_{unit}_away": "{numberKilometers} {Unit} μακριά",
   "verified": "Επαληθευμένος",
   "heartLink": "Καρδιακή σύνδεση",
@@ -275,10 +275,10 @@
   "in_bed": "Στο κρεβάτι",
   "verified_photo": "Επαληθευμένη φωτογραφία",
   "likes_you": "ΤΟΥ ΑΡΕΣΕΙΣ",
-  "prioritized_likes": "Προτεραιότητα που προτιμούν",
+  "prioritized_likes": "Προτιμήσεις που προτιμούν",
   "everyone_you_like_will_see_you_soon": "Όλοι που σας αρέσουν θα σας δουν σύντομα",
   "match_instantly_with_people_who_already_like_you": "Ταιριάζει αμέσως με άτομα που σας αρέσουν ήδη",
-  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Συμπεριλαμβανομένων κορυφαίων επιλογών, απεριόριστων συμπαθειών, 1 χωρίς ώθηση κάθε μήνα, 5 ελεύθερο δείπνο όπως κάθε εβδομάδα, Rewind και Passport",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Συμπεριλαμβανομένων κορυφαίων επιλογών, απεριόριστων προτιμήσεων, 1 χωρίς ώθηση κάθε μήνα, 5 ελεύθερο δείπνο όπως κάθε εβδομάδα, Rewind και Passport",
   "message_before_matching": "Μήνυμα πριν από την αντιστοίχιση",
   "99+_people_already_like_you": "99+ άτομα που μου αρέσουν ήδη",
   "see_who_likes_you_and_match_instantly": "Δείτε ποιος σας αρέσει και ταιριάζει αμέσως",
@@ -294,9 +294,9 @@
   "nope": "ΟΧΙ",
   "supper_like": "Δείπνο",
   "add_living": "Προσθέστε διαβίωση",
+  "create_new": "Δημιουργία νέου",
   "99+_like": "99+ σαν",
   "for_you": "Για σενα",
-  "create_new": "Δημιουργία νέου",
   "months": "μήνες",
   "usd/months": "USD/μήνες",
   "sale": "Πώληση",
@@ -317,6 +317,8 @@
   "please_provide_more_details_about_what_you_are_reporting": "Δώστε περισσότερες λεπτομέρειες σχετικά με το τι αναφέρετε",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Εάν βγείτε από την έξοδο, θα πρέπει να επαναλάβετε τον λογαριασμό σας και να διαγράψετε όλες τις πληροφορίες.",
   "invalid_date_of_birth": "Μη έγκυρη ημερομηνία γέννησης",
+  "save": "Αποθηκεύσετε",
+  "find_someone_that_also_looking_for_love_as_you": "Βρείτε κάποιον που ψάχνει επίσης για αγάπη όπως εσείς",
   "are_you_sure_you_want_to_sign_out?": "Είστε βέβαιοι ότι θέλετε να αποσυνδεθείτε;",
   "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Οι συμβατοί χρήστες θα συνεχίσουν να σας βλέπουν στην τελευταία τοποθεσία.",
   "delete_my_account": "Διάγραψε τον λογαριασμό μου",
@@ -329,5 +331,17 @@
   "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "Θα διατηρήσουμε τις βασικές πληροφορίες αναγνώρισης προσώπου ή \"πρότυπα\", μετά την ολοκλήρωση της επαλήθευσης φωτογραφιών (συνήθως ολοκληρώθηκαν εντός 24 ωρών). Δεν αποθηκεύουμε τα βίντεο selfie σας.",
   "invalid_image": "Μη έγκυρη εικόνα",
   "your_photo_does_not_match.please_select_a_photo_again": "Η φωτογραφία σας δεν ταιριάζει. Επιλέξτε ξανά μια φωτογραφία",
-  "learn_more_about_how_it_works": "Μάθετε περισσότερα για το πώς λειτουργεί"
+  "learn_more_about_how_it_works": "Μάθετε περισσότερα για το πώς λειτουργεί",
+  "before_you_continue...": "Πριν συνεχίσετε ...",
+  "prepare_the_space": "Προετοιμάστε το χώρο",
+  "choose_a_place_with_enough_light": "Επιλέξτε ένα μέρος με αρκετό φως",
+  "avoid_glare_and_backlit": "Αποφύγετε την αντανάκλαση και την πλάτη",
+  "prepare_the_pose": "Προετοιμάστε τη στάση",
+  "looking_directly_at_the_camera": "Κοιτάζοντας απευθείας στην κάμερα",
+  "remove_hats,_sunglasses,_and_face_coverings": "Αφαιρέστε τα καπέλα, τα γυαλιά ηλίου και τα καλύμματα προσώπου",
+  "oh!": "Ω!",
+  "we_cannot_record_your_video._please_try_again.": "Δεν μπορούμε να καταγράψουμε το βίντεό σας. ΠΑΡΑΚΑΛΩ προσπαθησε ξανα.",
+  "increase_screen_brightness": "Αυξήστε τη φωτεινότητα της οθόνης",
+  "photo_verified": "Επαληθευμένη με φωτογραφία",
+  "please_choose_a_reason": "Επιλέξτε έναν λόγο"
 }
