--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -54,7 +54,7 @@
   "my_interests_are": "My interests are",
   "let_everyone_know_what_you're_passionate_about,_by_adding_it_to_your_profile": "Let everyone know what you're passionate about, by adding it to your profile",
   "show_me_gender": "Show me gender",
-  "my_photos_are": "My Photos are",
+  "my_photos_are": "My photos are",
   "add_at_least_2_photos_to_continue": "Add at least 2 photos to continue",
   "enable_location": "Enable Location",
   "you_will_need_to_enable_your_location_order_to_use_heartLinks": "You will need to enable your location order to use HeartLinks",
@@ -240,7 +240,7 @@
   "interests": "Interests",
   "my_gender": "my gender",
   "my_orientation": "my orientation",
-  "version_x.y.z": "Version x.y.z",
+  "version_{number}": "Version {number}",
   "km": "km",
   "mi": "mi",
   "live_at_{nameAddress}": "Live at {nameAddress}",
@@ -294,9 +294,9 @@
   "nope": "NOPE",
   "supper_like": "SUPPER LIKE",
   "add_living": "Add Living",
+  "create_new": "Create New",
   "99+_like": "99+ like",
   "for_you": "For you",
-  "create_new": "Create New",
   "months": "months",
   "usd/months": "USD/Months",
   "sale": "Sale",
@@ -317,6 +317,8 @@
   "please_provide_more_details_about_what_you_are_reporting": "Please provide more details about what you are reporting",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "If you exit you will have to re-register your account and delete all information.",
   "invalid_date_of_birth": "Invalid date of birth",
+  "save": "Save",
+  "find_someone_that_also_looking_for_love_as_you": "Find someone that also looking for love as you",
   "are_you_sure_you_want_to_sign_out?": "Are you sure you want to sign out?",
   "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Compatible users will continue to see you in the last identified location.",
   "delete_my_account": "Delete my account",
@@ -326,8 +328,20 @@
   "maybe_later": "Maybe later",
   "how_it_works": "How it works",
   "our_face_recognition_technology_compares_your_face_in_selfie_videos_with_photos_in_your_profile._we'll_keep_two_screenshots_from_your_selfie_video_for_as_long_as_your_account_is_live_to_test_and_manage_your_photo_verification_feature._we_will_also_keep_the_results_of_the_process_(e.g._photo_verified_or_not).": "Our face recognition technology compares your face in selfie videos with photos in your profile. We'll keep two screenshots from your selfie video for as long as your account is live to test and manage your Photo Verification feature. We will also keep the results of the process (e.g. Photo Verified or not).",
-  "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "We'll keep your basic facial recognition information, or \"templates,\" upon completion of Photo Verification (usually completed within 24 hours). We do not store your selfie videos.",
+  "we'll_keep_your_basic_facial_recognition_information,_or_templates,_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "We'll keep your basic facial recognition information, or templates, upon completion of Photo Verification (usually completed within 24 hours). We do not store your selfie videos.",
   "invalid_image": "Invalid image",
   "your_photo_does_not_match.please_select_a_photo_again": "Your photo does not match.Please select a photo again",
-  "learn_more_about_how_it_works": "Learn more about how it works"
+  "learn_more_about_how_it_works": "Learn more about how it works",
+  "before_you_continue...": "Before you continue...",
+  "prepare_the_space": "Prepare the space",
+  "choose_a_place_with_enough_light": "Choose a place with enough light",
+  "avoid_glare_and_backlit": "Avoid glare and backlit",
+  "prepare_the_pose": "Prepare the pose",
+  "looking_directly_at_the_camera": "Looking directly at the camera",
+  "remove_hats,_sunglasses,_and_face_coverings": "Remove hats, sunglasses, and face coverings",
+  "oh!": "Oh!",
+  "we_cannot_record_your_video._please_try_again.": "We cannot record your video. Please try again.",
+  "increase_screen_brightness": "Increase screen brightness",
+  "photo_verified": "Photo verified",
+  "please_choose_a_reason": "Please choose a reason"
 }
