--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -21,7 +21,7 @@
   "resend_code": "Reenviar codigo",
   "invalid_code._please_try_again": "Codigo invalido. Inténtalo de nuevo",
   "what's_your_email?": "¿Cuál es tu correo electrónico?",
-  "don't_lose_access_to_your_account,_verify_your_email": "No pierda acceso a su cuenta, verifique su correo electrónico",
+  "don't_lose_access_to_your_account,_verify_your_email": "No pierda el acceso a su cuenta, verifique su correo electrónico",
   "verify_instantly_by_connecting_your_google_account": "Verifique instantáneamente conectando su cuenta de Google",
   "i_want_to_receive_news,_updates_and_offers_from_heartLink": "Quiero recibir noticias, actualizaciones y ofertas de HeartLink",
   "enter_email": "Ingrese correo electrónico",
@@ -52,7 +52,7 @@
   "select_up_to_3": "Seleccione hasta 3",
   "skip": "Saltar",
   "my_interests_are": "Mis intereses son",
-  "let_everyone_know_what_you're_passionate_about,_by_adding_it_to_your_profile": "Deje que todos sepan lo que le apasiona, agregándolo a su perfil",
+  "let_everyone_know_what_you're_passionate_about,_by_adding_it_to_your_profile": "Deje que todos sepan lo que le apasiona, agregándolo a su perfil.",
   "show_me_gender": "Muéstrame género",
   "my_photos_are": "Mis fotos son",
   "add_at_least_2_photos_to_continue": "Agregue al menos 2 fotos para continuar",
@@ -60,7 +60,7 @@
   "you_will_need_to_enable_your_location_order_to_use_heartLinks": "Deberá habilitar su pedido de ubicación para usar HeartLinks",
   "allow_location": "Permitir ubicación",
   "tell_me_more": "Dime más",
-  "meet_people_nearby": "Conocer gente cerca",
+  "meet_people_nearby": "Conoce gente cerca",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "Su ubicación se utilizará para mostrar posibles coincidencias cerca de usted.",
   "want_to_avoid_someone_you_know_on_heartLink?": "¿Quieres evitar a alguien que conoces en HeartLink?",
   "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Es fácil: comparta el contacto de su dispositivo con HeartLink cuando use esta función para elegir a quién desea evitar",
@@ -99,10 +99,10 @@
   "most_popular": "MÁS POPULAR",
   "read_receipt": "Leer el recibo",
   "recurring_billing,_cancel_anytime": "Facturación recurrente, cancelar en cualquier momento",
-  "get_boost_package": "Obtener el paquete Boost",
+  "get_boost_package": "Obtener el paquete BOOST",
   "skip_the_queue": "Omitir la cola",
   "always_on_top_profile_in_your_area_for_30_mins_to_get_more_matches": "Siempre en el perfil superior en su área durante 30 minutos para obtener más partidos",
-  "boost_my_profile": "Aumentar mi perfil",
+  "boost_my_profile": "Aumenta mi perfil",
   "get_a_gold_package": "Obtener un paquete de oro",
   "5_free_supper_like_weekly": "5 cena gratis como semanal",
   "get_supper_likes_package": "Obtener el paquete de me gusta de la cena",
@@ -115,7 +115,7 @@
   "control_your_profile": "Controla tu perfil",
   "limit_what_others_see_with_dating_plus": "Limite lo que otros ven con las citas más",
   "choose_who_sees_you": "Elige quién te ve",
-  "only_be_shown_to_people_you've_liked": "Solo se muestra a las personas que les gustó",
+  "only_be_shown_to_people_you've_liked": "Solo te muestran a las personas que te han gustado",
   "like_profile_around_the_world": "Como perfil en todo el mundo",
   "passport_to_anywhere": "Pasaporte a cualquier lugar",
   "unlimited_rewinds": "Rebosios ilimitados",
@@ -156,12 +156,12 @@
   "app_settings": "Ajustes de Aplicacion",
   "show_distance_in": "Mostrar distancia en",
   "language": "Idioma",
-  "chose_the_language_you_want_to_display": "Elegir el idioma que desea mostrar",
+  "chose_the_language_you_want_to_display": "Elija el idioma que desea mostrar",
   "dark_theme": "Tema oscuro",
   "choose_the_theme_you_like_most": "Elija el tema que más le guste",
   "log_out": "CERRAR SESIÓN",
   "delete_account": "BORRAR CUENTA",
-  "add_video,_pic_or_logo_toget_4%_closer_to_completing_your_profile_and_you_may_even_get_more_likes": "Agregue video, foto o logotipo un 4% más cerca de completar su perfil e incluso puede obtener más me gusta",
+  "add_video,_pic_or_logo_toget_4%_closer_to_completing_your_profile_and_you_may_even_get_more_likes": "Agregue video, foto o logotipo toget 4% más cerca de completar su perfil e incluso puede obtener más me gusta",
   "add_media": "Agregar medios",
   "upload_photo": "Subir foto",
   "upload_loop": "Bucle de carga",
@@ -184,7 +184,7 @@
   "basic_information": "INFORMACIÓN BÁSICA",
   "add_more_info_so_people_can_see_your_amazing_pictures": "Agregue más información para que la gente pueda ver sus increíbles fotos",
   "what_is_your_zodiac_sign?": "¿Cuál es tu signo del zodiaco?",
-  "your_education_level?": "Tu nivel de educación?",
+  "your_education_level?": "¿Tu nivel de educación?",
   "do_you_want_to_have_children?": "¿Te gustaría tener hijos?",
   "have_you_been_vaccinated_yet?": "¿Ya has sido vacunado?",
   "what_is_your_personality_type?": "¿Cual es tu tipo de personalidad?",
@@ -240,7 +240,7 @@
   "interests": "Intereses",
   "my_gender": "Mi género",
   "my_orientation": "Mi orientación",
-  "version_x.y.z": "Versión X.Y.Z",
+  "version_{number}": "Número de versión}",
   "km": "km",
   "mi": "mi",
   "live_at_{nameAddress}": "Vivir en {nameaddress}",
@@ -294,9 +294,9 @@
   "nope": "NO",
   "supper_like": "Cenar como",
   "add_living": "Agregar vida",
+  "create_new": "Crear nuevo",
   "99+_like": "99+ como",
   "for_you": "Para ti",
-  "create_new": "Crear nuevo",
   "months": "meses",
   "usd/months": "USD/meses",
   "sale": "Venta",
@@ -317,6 +317,8 @@
   "please_provide_more_details_about_what_you_are_reporting": "Proporcione más detalles sobre lo que está informando",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Si sale, tendrá que volver a registrar su cuenta y eliminar toda la información.",
   "invalid_date_of_birth": "fecha de nacimiento invalida",
+  "save": "Ahorrar",
+  "find_someone_that_also_looking_for_love_as_you": "Encuentra a alguien que también busque amor como tú",
   "are_you_sure_you_want_to_sign_out?": "¿Estás seguro de que quieres cerrar sesión?",
   "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Los usuarios compatibles continuarán viéndolo en la última ubicación identificada.",
   "delete_my_account": "Borrar mi cuenta",
@@ -329,5 +331,17 @@
   "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "Mantendremos su información básica de reconocimiento facial, o \"plantillas\", al finalizar la verificación de fotos (generalmente completada dentro de las 24 horas). No almacenamos tus videos de selfies.",
   "invalid_image": "Imagen inválida",
   "your_photo_does_not_match.please_select_a_photo_again": "Su foto no coincide. Por favor, seleccione una foto nuevamente",
-  "learn_more_about_how_it_works": "Aprenda más sobre cómo funciona"
+  "learn_more_about_how_it_works": "Aprenda más sobre cómo funciona",
+  "before_you_continue...": "Antes de continuar ...",
+  "prepare_the_space": "Preparar el espacio",
+  "choose_a_place_with_enough_light": "Elija un lugar con suficiente luz",
+  "avoid_glare_and_backlit": "Evite el resplandor y la retroiluminación",
+  "prepare_the_pose": "Preparar la pose",
+  "looking_directly_at_the_camera": "Mirando directamente la cámara",
+  "remove_hats,_sunglasses,_and_face_coverings": "Retire los sombreros, las gafas de sol y las cubiertas de la cara",
+  "oh!": "¡Oh!",
+  "we_cannot_record_your_video._please_try_again.": "No podemos grabar su video. Inténtalo de nuevo.",
+  "increase_screen_brightness": "Aumentar el brillo de la pantalla",
+  "photo_verified": "Foto verificada",
+  "please_choose_a_reason": "Por favor elija una razón"
 }
