--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -66,7 +66,7 @@
   "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Il est facile - partagez le contact de votre appareil avec le lien de cœur lorsque vous utilisez cette fonctionnalité pour choisir qui vous souhaitez éviter",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Nous stockons votre contact bloqué pour vous empêcher de vous voir si votre contact a un compte avec le même Infor que vous fournissez. Vous pouvez arrêter de partager avec nous dans vos paramètres.",
   "learn_more_here,_including_how_heartLink_process_your_contacts": "En savoir plus ici, y compris comment le chagrin traite vos contacts",
-  "share_{nameUser}_profile": "Partager {NameUser} Profil",
+  "share_{nameUser}_profile": "Partage {NameUser} Profil",
   "see_what_a_friend_thinks": "Voyez ce qu'un ami pense",
   "report_{nameUser}": "Rapport {NameUser}",
   "away": "loin",
@@ -81,7 +81,7 @@
   "let's_find_people_same_with_your_vibe...": "Faisons des personnes les mêmes avec votre ambiance ...",
   "join_now": "Adhérer maintenant",
   "no_thanks": "NON MERCI",
-  "upgrade_to_gold_to_see_people_who_are_interested_in_you": "Passer à l'or pour voir des gens qui s'intéressent à vous",
+  "upgrade_to_gold_to_see_people_who_are_interested_in_you": "Passer à l'or pour voir des gens qui vous intéressent",
   "no_one_likes_you_yet._done't_worry,_make_sure_you_complete_your_profile_to_other_find_you_faster": "Personne ne vous aime encore. Ne vous inquiétez pas, assurez-vous de compléter votre profil pour vous trouver plus rapidement",
   "see_who_likes_you": "Voyez qui vous aime",
   "recommendations": "Recommandations",
@@ -93,7 +93,7 @@
   "silver_package": "Paquet en argent",
   "gold_package": "Forfait en or",
   "level_up_everyone_action_you_take_on_heartLink": "Augmenter tous les mesures de tout le monde que vous entreprenez en lien de cœur",
-  "get_read_receipt_package": "OBTENIR LE RECORD RÉCONNAGE",
+  "get_read_receipt_package": "Obtenez le package de réception de lecture",
   "stay_up_to_date": "Tiens-toi à jour",
   "know_when_your_messages_have_been_read_with_read_receipt": "Sachez quand vos messages ont été lus avec un reçu de lecture",
   "most_popular": "LE PLUS POPULAIRE",
@@ -119,8 +119,8 @@
   "like_profile_around_the_world": "Comme le profil dans le monde",
   "passport_to_anywhere": "Passeport à n'importe où",
   "unlimited_rewinds": "Rewinds illimité",
-  "go_back_and_try_again": "Retourne et réessayer",
-  "turn_off_ads": "Éteindre les annonces",
+  "go_back_and_try_again": "Revenir en arrière et réessayer",
+  "turn_off_ads": "Désactiver les annonces",
   "have_fun_without_interruptions": "Amusez-vous sans interruptions",
   "settings": "PARAMÈTRES",
   "edit_profile": "Editer le profil",
@@ -145,7 +145,7 @@
   "standard": "Standard",
   "only_be_shown_to_certain_types_of_people_for_individual_recommendations": "Être présenté uniquement à certains types de personnes pour des recommandations individuelles",
   "only_people_i've_liked": "Seules les gens que j'ai aimés",
-  "only_people_you_have_liked_will_see_me": "Seules les personnes que vous avez aimées me verront",
+  "only_people_you_have_liked_will_see_me": "Seules les gens que vous avez aimés me verront",
   "only_wi-fi_only": "Seulement Wi-Fi uniquement",
   "on_wi-fi_and_mobile_data": "Sur les données Wi-Fi et mobiles",
   "never_auto_play_videos": "Jamais de lecture automatique des vidéos",
@@ -165,7 +165,7 @@
   "add_media": "Ajouter des médias",
   "upload_photo": "Envoyer la photo",
   "upload_loop": "Boucle de téléchargement",
-  "capture_from_camera": "Capture à partir de la caméra",
+  "capture_from_camera": "Capture de la caméra",
   "photo": "Photo",
   "done": "Fait",
   "about_me": "SUR MOI",
@@ -182,7 +182,7 @@
   "the_language_i_know": "La langue que je connais",
   "choose_up_to_5_languages_you_know_and_add_to_your_profile": "Choisissez jusqu'à 5 langues que vous connaissez et ajoutez à votre profil",
   "basic_information": "INFORMATIONS DE BASE",
-  "add_more_info_so_people_can_see_your_amazing_pictures": "Ajoutez plus d'informations pour que les gens puissent voir vos photos incroyables",
+  "add_more_info_so_people_can_see_your_amazing_pictures": "Ajoutez plus d'informations pour que les gens puissent voir vos images incroyables",
   "what_is_your_zodiac_sign?": "Quel est ton signe du zodiaque?",
   "your_education_level?": "Votre niveau d'éducation?",
   "do_you_want_to_have_children?": "Voulez-vous avoir des enfants?",
@@ -240,7 +240,7 @@
   "interests": "Intérêts",
   "my_gender": "mon sexe",
   "my_orientation": "Mon orientation",
-  "version_x.y.z": "Version X.Y.Z",
+  "version_{number}": "Numéro de version}",
   "km": "km",
   "mi": "mi",
   "live_at_{nameAddress}": "Vivre à {nameaddress}",
@@ -275,7 +275,7 @@
   "in_bed": "Au lit",
   "verified_photo": "Photo vérifiée",
   "likes_you": "T'AIME BIEN",
-  "prioritized_likes": "Les goûts prioritaires",
+  "prioritized_likes": "Likes prioritaires",
   "everyone_you_like_will_see_you_soon": "Tous ceux que vous aimez vous verront bientôt",
   "match_instantly_with_people_who_already_like_you": "Faites correspondre instantanément avec des gens qui vous aiment déjà",
   "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Y compris les meilleurs choix, les goûts illimités, 1 Boost de 1 mois, 5 souper gratuits comme chaque semaine, le rembobinage et le passeport",
@@ -294,9 +294,9 @@
   "nope": "NON",
   "supper_like": "Souper comme",
   "add_living": "Ajouter la vie",
+  "create_new": "Créer un nouveau",
   "99+_like": "99+ comme",
   "for_you": "Pour toi",
-  "create_new": "Créer un nouveau",
   "months": "mois",
   "usd/months": "USD / mois",
   "sale": "Vente",
@@ -317,6 +317,8 @@
   "please_provide_more_details_about_what_you_are_reporting": "Veuillez fournir plus de détails sur ce que vous signalez",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Si vous sortez, vous devrez réinscrire votre compte et supprimer toutes les informations.",
   "invalid_date_of_birth": "Date de naissance invalide",
+  "save": "Sauvegarder",
+  "find_someone_that_also_looking_for_love_as_you": "Trouvez quelqu'un qui cherche aussi l'amour comme vous",
   "are_you_sure_you_want_to_sign_out?": "Êtes-vous certain de vouloir vous déconnecter?",
   "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Les utilisateurs compatibles continueront de vous voir dans le dernier emplacement identifié.",
   "delete_my_account": "Supprimer mon compte",
@@ -329,5 +331,17 @@
   "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "Nous conserverons vos informations de reconnaissance faciale de base, ou «modèles», à la fin de la vérification photo (généralement terminée dans les 24 heures). Nous ne stockons pas vos vidéos de selfie.",
   "invalid_image": "Image non valide",
   "your_photo_does_not_match.please_select_a_photo_again": "Votre photo ne correspond pas. Veuillez sélectionner une photo à nouveau",
-  "learn_more_about_how_it_works": "En savoir plus sur comment cela fonctionne"
+  "learn_more_about_how_it_works": "En savoir plus sur comment cela fonctionne",
+  "before_you_continue...": "Avant de continuer ...",
+  "prepare_the_space": "Préparer l'espace",
+  "choose_a_place_with_enough_light": "Choisissez un endroit avec suffisamment de lumière",
+  "avoid_glare_and_backlit": "Évitez les reflets et rétro-éclairés",
+  "prepare_the_pose": "Préparer la pose",
+  "looking_directly_at_the_camera": "En regardant directement la caméra",
+  "remove_hats,_sunglasses,_and_face_coverings": "Retirer les chapeaux, les lunettes de soleil et les revêtements de visage",
+  "oh!": "Oh!",
+  "we_cannot_record_your_video._please_try_again.": "Nous ne pouvons pas enregistrer votre vidéo. Veuillez réessayer.",
+  "increase_screen_brightness": "Augmenter la luminosité de l'écran",
+  "photo_verified": "Photo vérifiée",
+  "please_choose_a_reason": "Veuillez choisir une raison"
 }
