--- a/src/locales/hi.json
+++ b/src/locales/hi.json
@@ -78,7 +78,7 @@
   "would_you_mind_sharing_more_details_with_us?": "क्या आप हमारे साथ अधिक विवरण साझा करना चाहेंगे?",
   "add_a_comment": "एक टिप्पणी जोड़ने",
   "are_you_sure_about_the_content_of_this_report?": "क्या आप इस रिपोर्ट की सामग्री के बारे में निश्चित हैं?",
-  "let's_find_people_same_with_your_vibe...": "चलो अपने वाइब के साथ लोगों को वही पाते हैं ...",
+  "let's_find_people_same_with_your_vibe...": "चलो अपने वाइब के साथ लोगों को समान ढूंढते हैं ...",
   "join_now": "अब शामिल हों",
   "no_thanks": "जी नहीं, धन्यवाद",
   "upgrade_to_gold_to_see_people_who_are_interested_in_you": "उन लोगों को देखने के लिए सोने में अपग्रेड करें जो आप में रुचि रखते हैं",
@@ -145,7 +145,7 @@
   "standard": "मानक",
   "only_be_shown_to_certain_types_of_people_for_individual_recommendations": "केवल व्यक्तिगत सिफारिशों के लिए कुछ प्रकार के लोगों को दिखाया गया है",
   "only_people_i've_liked": "केवल वे लोग जो मुझे पसंद हैं",
-  "only_people_you_have_liked_will_see_me": "केवल वे लोग जिन्हें आपने पसंद किया है, मुझे देखेंगे",
+  "only_people_you_have_liked_will_see_me": "केवल वे लोग जिन्हें आपने पसंद किया है, वे मुझे देखेंगे",
   "only_wi-fi_only": "केवल वाई-फाई",
   "on_wi-fi_and_mobile_data": "वाई-फाई और मोबाइल डेटा पर",
   "never_auto_play_videos": "कभी भी ऑटो प्ले वीडियो नहीं",
@@ -156,7 +156,7 @@
   "app_settings": "एप्लिकेशन सेटिंग",
   "show_distance_in": "में दूरी दिखाओ",
   "language": "भाषा",
-  "chose_the_language_you_want_to_display": "जिस भाषा को आप प्रदर्शित करना चाहते हैं उसे चुना",
+  "chose_the_language_you_want_to_display": "उस भाषा को चुना जिसे आप प्रदर्शित करना चाहते हैं",
   "dark_theme": "डार्क थीम",
   "choose_the_theme_you_like_most": "वह विषय चुनें जिसे आप सबसे ज्यादा पसंद करते हैं",
   "log_out": "लॉग आउट",
@@ -240,8 +240,8 @@
   "interests": "रूचियाँ",
   "my_gender": "मेरी लैंगिकता",
   "my_orientation": "मेरा अभिविन्यास",
-  "version_x.y.z": "संस्करण X.Y.Z",
-  "km": "किमी",
+  "version_{number}": "संस्करण संख्या}",
+  "km": "किलोमीटर",
   "mi": "एम आई",
   "live_at_{nameAddress}": "{Nameaddress} पर रहते हैं",
   "{numberKilometers}_{unit}_away": "{NumberKilometers} {यूनिट} दूर",
@@ -284,7 +284,7 @@
   "see_who_likes_you_and_match_instantly": "देखें कि आपको कौन पसंद करता है और तुरंत मेल खाता है",
   "buy_more_top_picks": "अधिक शीर्ष पिक्स खरीदें",
   "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "आप जैसे शीर्ष पिक्स तक पूरी पहुंच प्राप्त करें, असीमित लाइक और अधिक भेजें",
-  "see_as_many_likes_as_you_want": "आप जितनी चाहें उतने पसंद देखें",
+  "see_as_many_likes_as_you_want": "जितने चाहें उतने पसंद देखें",
   "1_free_boost_every_month": "हर महीने 1 मुफ्त बढ़ावा",
   "choose_who_see_you": "चुनें कि आपको कौन देखता है",
   "5_free_supper_likes_very_week": "5 फ्री सपर बहुत सप्ताह पसंद करता है",
@@ -294,15 +294,15 @@
   "nope": "नहीं",
   "supper_like": "की तरह",
   "add_living": "लिविंग जोड़ें",
+  "create_new": "नया निर्माण",
   "99+_like": "99+ की तरह",
   "for_you": "आपके लिए",
-  "create_new": "नया निर्माण",
   "months": "महीने",
   "usd/months": "USD/महीने",
   "sale": "बिक्री",
   "recuring_billing,_cancel_anytime": "बिलिंग को प्राप्त करना, कभी भी रद्द करें",
   "sale_50%": "बिक्री 50%",
-  "get_read_receipt": "रसीद प्राप्त करें",
+  "get_read_receipt": "रसीद पढ़ें",
   "supper_likes": "सपर लाइक",
   "5_free_supper_like_weekly_": "साप्ताहिक की तरह 5 मुक्त रात",
   "or": "या",
@@ -317,6 +317,8 @@
   "please_provide_more_details_about_what_you_are_reporting": "कृपया आप जो रिपोर्ट कर रहे हैं उसके बारे में अधिक जानकारी प्रदान करें",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "यदि आप बाहर निकलते हैं तो आपको अपने खाते को फिर से पंजीकृत करना होगा और सभी जानकारी को हटा देना होगा।",
   "invalid_date_of_birth": "अमान्य जन्म तिथि",
+  "save": "बचाना",
+  "find_someone_that_also_looking_for_love_as_you": "किसी ऐसे व्यक्ति को ढूंढें जो आप के रूप में प्यार की तलाश में है",
   "are_you_sure_you_want_to_sign_out?": "क्या आप द्वारा साइन आउट किया जाना सुनिश्चित है?",
   "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "संगत उपयोगकर्ता आपको अंतिम पहचाने गए स्थान पर देखना जारी रखेंगे।",
   "delete_my_account": "मेरा एकाउंट हटा दो",
@@ -329,5 +331,17 @@
   "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "हम आपकी बुनियादी चेहरे की पहचान की जानकारी, या \"टेम्प्लेट,\", फोटो सत्यापन के पूरा होने पर रखेंगे (आमतौर पर 24 घंटे के भीतर पूरा होता है)। हम आपके सेल्फी वीडियो को स्टोर नहीं करते हैं।",
   "invalid_image": "अमान्य छवि",
   "your_photo_does_not_match.please_select_a_photo_again": "आपका फोटो मेल नहीं खाता है। कृपया फिर से एक फोटो चुनें",
-  "learn_more_about_how_it_works": "यह कैसे काम करता है, इसके बारे में और जानें"
+  "learn_more_about_how_it_works": "यह कैसे काम करता है, इसके बारे में और जानें",
+  "before_you_continue...": "इससे पहले कि आप जारी रखें ...",
+  "prepare_the_space": "अंतरिक्ष तैयार करें",
+  "choose_a_place_with_enough_light": "पर्याप्त प्रकाश के साथ एक जगह चुनें",
+  "avoid_glare_and_backlit": "चकाचौंध और बैकलिट से बचें",
+  "prepare_the_pose": "मुद्रा तैयार करें",
+  "looking_directly_at_the_camera": "सीधे कैमरे को देख रहे हैं",
+  "remove_hats,_sunglasses,_and_face_coverings": "टोपी, धूप का चश्मा, और चेहरे के कवर को हटा दें",
+  "oh!": "ओह!",
+  "we_cannot_record_your_video._please_try_again.": "हम आपका वीडियो रिकॉर्ड नहीं कर सकते। कृपया पुन: प्रयास करें।",
+  "increase_screen_brightness": "स्क्रीन चमक बढ़ाएं",
+  "photo_verified": "फोटो सत्यापित",
+  "please_choose_a_reason": "कृपया एक कारण चुनें"
 }
