--- a/src/locales/hr.json
+++ b/src/locales/hr.json
@@ -38,7 +38,7 @@
   "always_report_bad_behavior": "Uvijek prijavite loše ponašanje",
   "i_agree": "slažem se",
   "are_you_sure?": "Jesi li siguran?",
-  "you_will_exit_this_sign-up_process_and_all_your_information_will_be_deleted?": "Izaći ćete iz ovog postupka prijave i svi vaši podaci bit će izbrisani?",
+  "you_will_exit_this_sign-up_process_and_all_your_information_will_be_deleted?": "Izašli ćete iz ovog postupka prijave i sve vaše podatke bit će izbrisani?",
   "cancel": "Otkazati",
   "apply": "Prijaviti",
   "my_name_is": "Moje ime je",
@@ -58,7 +58,7 @@
   "add_at_least_2_photos_to_continue": "Dodajte najmanje 2 fotografije za nastavak",
   "enable_location": "Omogući mjesto",
   "you_will_need_to_enable_your_location_order_to_use_heartLinks": "Morat ćete omogućiti svoju lokaciju kako biste koristili srčane veze",
-  "allow_location": "Omogućite lokaciju",
+  "allow_location": "Dopustite mjesto",
   "tell_me_more": "Reci mi više",
   "meet_people_nearby": "Upoznajte ljude u blizini",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "Vi lokacija će se koristiti za prikazivanje potencijalnih podudaranja u vašoj blizini.",
@@ -81,7 +81,7 @@
   "let's_find_people_same_with_your_vibe...": "Nađimo ljude isto s vašom vibracijom ...",
   "join_now": "Pridružite se sada",
   "no_thanks": "NE HVALA",
-  "upgrade_to_gold_to_see_people_who_are_interested_in_you": "Nadogradite na zlato kako biste vidjeli ljude koji su zainteresirani za vas",
+  "upgrade_to_gold_to_see_people_who_are_interested_in_you": "Nadogradite na zlato da biste vidjeli ljude koji su zainteresirani za vas",
   "no_one_likes_you_yet._done't_worry,_make_sure_you_complete_your_profile_to_other_find_you_faster": "Još se nitko ne sviđa. Ne brinite se, obavezno ispunite svoj profil drugim pronalaženjem brže",
   "see_who_likes_you": "Pogledajte tko te voliš",
   "recommendations": "Preporuke",
@@ -93,7 +93,7 @@
   "silver_package": "Srebrni paket",
   "gold_package": "Zlatni paket",
   "level_up_everyone_action_you_take_on_heartLink": "Izravnajte sve akcije koje poduzimate na srčanoj liniji",
-  "get_read_receipt_package": "Pročitajte paket primanja",
+  "get_read_receipt_package": "Pročitajte paket primitka",
   "stay_up_to_date": "Ostati u toku",
   "know_when_your_messages_have_been_read_with_read_receipt": "Znajte kada su vaše poruke pročitane s potvrdom o čitanju",
   "most_popular": "NAJPOPULARNIJI",
@@ -118,7 +118,7 @@
   "only_be_shown_to_people_you've_liked": "Biti prikazani samo ljudima koji su vam se svidjeli",
   "like_profile_around_the_world": "Poput profila širom svijeta",
   "passport_to_anywhere": "Putovnica do bilo kojeg mjesta",
-  "unlimited_rewinds": "Neograničeno premotavanje",
+  "unlimited_rewinds": "Neograničeni premotaji",
   "go_back_and_try_again": "Vrati se i pokušajte ponovo",
   "turn_off_ads": "Isključite oglase",
   "have_fun_without_interruptions": "Zabavite se bez prekida",
@@ -150,7 +150,7 @@
   "on_wi-fi_and_mobile_data": "Na Wi-Fi i mobilnim podacima",
   "never_auto_play_videos": "Nikad auto reproducirajte videozapise",
   "show_me_top_picks": "Pokaži mi Top Picks",
-  "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Uključivanje ovoga omogućit će vam da se prikažete kao istaknuti vrhunski odabir ostalih korisnika u vašoj blizini",
+  "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Uključivanje ovoga omogućit će vam da se prikažete kao istaknuti vrhunski odabir drugih korisnika u vašoj blizini",
   "activity_status": "Status aktivnosti",
   "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Dopustite ostalim članovima da vide jeste li nedavno bili aktivni u posljednja 24 sata na srčanom linku. Ako ste to isključili, oni neće moći vidjeti vaš nedavno aktivni status",
   "app_settings": "Postavke aplikacija",
@@ -240,7 +240,7 @@
   "interests": "Interesi",
   "my_gender": "moj spol",
   "my_orientation": "Moja orijentacija",
-  "version_x.y.z": "Verzija X.Y.Z",
+  "version_{number}": "Verzija {broj}",
   "km": "km",
   "mi": "mi",
   "live_at_{nameAddress}": "Živjeti na {nameaddress}",
@@ -268,7 +268,7 @@
   "no_romance": "Nema romantike",
   "love_novels": "Ljubavni romani",
   "answer_question": "Odgovori na pitanje",
-  "optimise_pairing": "Optimizirajte uparivanje",
+  "optimise_pairing": "Optimizirati uparivanje",
   "connecting": "Spoj",
   "the_best_dinner_is_at:": "Najbolja večera je na:",
   "on_the_tray_and_watch_tv": "Na pladnju i gledajte TV",
@@ -283,7 +283,7 @@
   "99+_people_already_like_you": "99+ ljudi već poput vas",
   "see_who_likes_you_and_match_instantly": "Pogledajte tko vas voli i odmah se podudara",
   "buy_more_top_picks": "Kupite više gornjih tipova",
-  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "Potpuni pristup vrhunskim tipovima, poput vas, šaljite neograničene lajkove i više",
+  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "Potpuni pristup vrhunskim tipovima, poput vas, šalju neograničene lajkove i više",
   "see_as_many_likes_as_you_want": "Pogledajte onoliko lajkova koliko želite",
   "1_free_boost_every_month": "1 besplatno pojačanje svakog mjeseca",
   "choose_who_see_you": "Odaberite tko te vidi",
@@ -294,9 +294,9 @@
   "nope": "Ne",
   "supper_like": "Večera poput",
   "add_living": "Dodaj Living",
+  "create_new": "Stvorite novo",
   "99+_like": "99+ kao",
   "for_you": "Za tebe",
-  "create_new": "Stvorite novo",
   "months": "mjeseci",
   "usd/months": "USD/mjeseci",
   "sale": "Prodaja",
@@ -312,11 +312,13 @@
   "delete": "IZBRISATI",
   "get_platinum_package": "Nabavite platinski paket",
   "usd/each": "USD/svaki",
-  "get_gold_package": "Dobiti zlatni paket",
+  "get_gold_package": "Nabavite zlatni paket",
   "search_language": "Jezik pretraživanja",
   "please_provide_more_details_about_what_you_are_reporting": "Navedite više detalja o onome što prijavljujete",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Ako izađete, morat ćete ponovno registrirati svoj račun i izbrisati sve podatke.",
   "invalid_date_of_birth": "Nevažeći datum rođenja",
+  "save": "Uštedjeti",
+  "find_someone_that_also_looking_for_love_as_you": "Pronađite nekoga tko također traži ljubav kao i vi",
   "are_you_sure_you_want_to_sign_out?": "Jeste li sigurni da se želite odjaviti?",
   "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Kompatibilni korisnici i dalje će vas vidjeti na posljednjem identificiranom mjestu.",
   "delete_my_account": "Izbriši moj račun",
@@ -329,5 +331,17 @@
   "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "Pomoć ćemo zadržati vaše osnovne podatke o prepoznavanju lica ili \"predloške\", nakon završetka provjere fotografije (obično dovršene u roku od 24 sata). Ne pohranjujemo vaše selfie videozapise.",
   "invalid_image": "Nevaljana slika",
   "your_photo_does_not_match.please_select_a_photo_again": "Vaša se fotografija ne podudara.pojavite ponovo fotografiju",
-  "learn_more_about_how_it_works": "Saznajte više o tome kako to funkcionira"
+  "learn_more_about_how_it_works": "Saznajte više o tome kako to funkcionira",
+  "before_you_continue...": "Prije nego što nastavite ...",
+  "prepare_the_space": "Pripremite prostor",
+  "choose_a_place_with_enough_light": "Odaberite mjesto s dovoljno svjetla",
+  "avoid_glare_and_backlit": "Izbjegavajte odsjaj i osvjetljenje",
+  "prepare_the_pose": "Pripremite pozu",
+  "looking_directly_at_the_camera": "Gledajući izravno u kameru",
+  "remove_hats,_sunglasses,_and_face_coverings": "Uklonite šešire, sunčane naočale i obloge lica",
+  "oh!": "Oh!",
+  "we_cannot_record_your_video._please_try_again.": "Ne možemo snimiti vaš video. Molim te pokušaj ponovno.",
+  "increase_screen_brightness": "Povećajte svjetlinu zaslona",
+  "photo_verified": "Fotografija provjerena",
+  "please_choose_a_reason": "Molimo odaberite razlog"
 }
