--- a/src/locales/hu.json
+++ b/src/locales/hu.json
@@ -14,7 +14,7 @@
   "please_enter_a_valid_phone_number": "Adjon meg egy érvényes telefonszámot",
   "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Amikor megérinti a „Folytatás” bekapcsolást, a HeartLink egy szöveget küld ellenőrző kóddal. Üzenet- és adatsebesség -társ alkalmazandó.",
   "the_verified_phone_number_can_be_used_to_log_in.": "Az ellenőrzött telefonszám felhasználható a bejelentkezéshez.",
-  "learn_what_happens_when_your_number_changes.": "Tudja meg, mi történik, amikor a számod megváltozik.",
+  "learn_what_happens_when_your_number_changes.": "Tudja meg, mi történik, ha a számod megváltozik.",
   "continue": "Folytatni",
   "my_code_is": "A kódom az",
   "please_enter_code_sent_to": "Kérjük, írja be a küldött kódot",
@@ -64,8 +64,8 @@
   "you_location_will_be_used_to_show_potential_matches_near_you.": "Az Ön helyét a közelben lévő potenciális mérkőzések megjelenítésére fogják használni.",
   "want_to_avoid_someone_you_know_on_heartLink?": "Szeretné elkerülni valakit, akit ismersz a Heart Linknél?",
   "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Könnyű - ossza meg a készülék kapcsolatát a HeartLink -rel, amikor ezt a funkciót használja, hogy kiválasztja, hogy kit akar kerülni",
-  "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Megtisztítjuk a blokkolt kapcsolatfelvételt, hogy megakadályozzuk egymást, ha a kapcsolattartója ugyanolyan információs fiókkal rendelkezik, mint az Ön által. A beállításokban abbahagyhatja velünk a megosztást.",
-  "learn_more_here,_including_how_heartLink_process_your_contacts": "Tudjon meg többet itt, beleértve azt is, hogy hogyan dolgozza fel a Heart Link feldolgozza a kapcsolatait",
+  "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Megtisztítjuk a blokkolt kapcsolatfelvételt, hogy megakadályozzuk egymást, ha a kapcsolattartója ugyanabban az információval rendelkezik, mint az Ön által biztosított. A beállításokban abbahagyhatja velünk a megosztást.",
+  "learn_more_here,_including_how_heartLink_process_your_contacts": "Tudjon meg többet itt, beleértve azt is, hogy a Heart Link hogyan dolgozza fel a kapcsolatait",
   "share_{nameUser}_profile": "Ossza meg a {nameUser} profilt",
   "see_what_a_friend_thinks": "Nézze meg, mit gondol egy barátom",
   "report_{nameUser}": "Jelentés {nameUser}",
@@ -132,11 +132,11 @@
   "no_data": "Nincs adat",
   "add_language": "Adjon hozzá nyelvet",
   "maximum_distance": "Maximális távolság",
-  "only_show_people_in_this_range": "Csak az embereket mutatják be ebben a tartományban",
+  "only_show_people_in_this_range": "Csak az embereknek mutatják be ebben a tartományban",
   "age_range": "Korcsoport",
   "show_me": "Mutasd meg nekem",
   "we_use_these_preferences_to_find_matches._some_match_suggestions_may_not_fall_within_your_desired_parameters": "Ezeket a preferenciákat használjuk a mérkőzések megtalálásához. Néhány mérkőzési javaslat nem tartozik a kívánt paraméterekbe",
-  "control_who_you_see": "Ellenőrizze, ki látja",
+  "control_who_you_see": "Ellenőrizze, akit lát",
   "sliver_package": "Szitáló csomag",
   "balance_recommendations": "Egyenleg ajánlások",
   "see_the_most_relevant_people_to_you_(default_settings)": "Lásd az Ön számára legmegfelelőbb embereket (alapértelmezett beállítások)",
@@ -150,7 +150,7 @@
   "on_wi-fi_and_mobile_data": "Wi-Fi és mobil adatokról",
   "never_auto_play_videos": "Soha ne auto videókat játsszon",
   "show_me_top_picks": "Mutasd meg nekem a legjobb válogatásokat",
-  "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Ennek bekapcsolása lehetővé teszi, hogy kiemelt legfontosabb válogatásként jelenjen meg a közeli más felhasználók számára",
+  "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Ennek bekapcsolása lehetővé teszi, hogy kiemelt legjobb választásként jelenjen meg a közeli más felhasználók számára",
   "activity_status": "Tevékenységi állapot",
   "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Engedje meg, hogy más tagok megtudják, vajon a közelmúltban aktív -e az utolsó 24 órában a Heart Link -en. Ha kikapcsolta ezt, akkor nem fogják látni a közelmúltban aktív állapotát",
   "app_settings": "Alkalmazásbeállítások",
@@ -206,7 +206,7 @@
   "personality_type": "Személyiségtípus",
   "communication_style": "Kommunikációs stílus",
   "love_languages": "Szerelmi nyelvek",
-  "life_style": "Életstílus",
+  "life_style": "Életmód",
   "pets_free": "Háziállatok ingyenesek",
   "drink_beer": "Sört inni",
   "are_you_a_smoker": "Dohányzó vagy",
@@ -228,7 +228,7 @@
   "choose_an_anthem": "Válasszon egy himnuszt",
   "my_top_spotify_artists": "A legfontosabb Spotify művészeim",
   "connect_spotify": "Csatlakoztassa a Spotify -t",
-  "gender": "Nem",
+  "gender": "Nemek",
   "sexual_orientation": "Szexuális irányultság",
   "show_my_sexual_orientation_on_profile": "Mutasd meg a szexuális irányultságomat a profilon",
   "select_to_3": "Válassza ki a 3 -as értéket",
@@ -240,7 +240,7 @@
   "interests": "Érdeklődés",
   "my_gender": "a nemem",
   "my_orientation": "orientációm",
-  "version_x.y.z": "X.Y.Z verzió",
+  "version_{number}": "Verzió {szám}",
   "km": "km",
   "mi": "MI",
   "live_at_{nameAddress}": "Éljen a {nameaddress} oldalon",
@@ -278,30 +278,30 @@
   "prioritized_likes": "A prioritást élvező kedvelt",
   "everyone_you_like_will_see_you_soon": "Mindenki, aki tetszik, hamarosan találkozunk",
   "match_instantly_with_people_who_already_like_you": "Azonnal illeszkedjen azokkal az emberekkel, akik már kedvelnek téged",
-  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Beleértve a legfontosabb válogatásokat, a korlátlan kedvelőket, az 1 -néli lendületet minden hónapban, 5 ingyenes vacsorát, mint minden héten, a visszatekerés és az útlevél",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Beleértve a felső válogatásokat, a korlátlan kedveléseket, az 1 -néli lendületet minden hónapban, 5 ingyenes vacsorát, mint minden héten, visszatekerni és útlevél",
   "message_before_matching": "Üzenet az egyeztetés előtt",
   "99+_people_already_like_you": "99+ ember már kedveled téged",
   "see_who_likes_you_and_match_instantly": "Nézze meg, ki kedvel téged és azonnal egyez",
-  "buy_more_top_picks": "Vásároljon még több felső válogatást",
+  "buy_more_top_picks": "Vásároljon még több válogatást",
   "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "Teljes hozzáférést kapjon a felső válogatásokhoz, mint te, Korlátlan kedvelések küldése és még sok más",
   "see_as_many_likes_as_you_want": "Lásd annyi kedvelést, amennyit csak akar",
   "1_free_boost_every_month": "1 ingyenes lendület minden hónapban",
   "choose_who_see_you": "Válassza ki, ki látja",
   "5_free_supper_likes_very_week": "5 ingyenes vacsora nagyon kedveli a hetet",
-  "you're_3x_more_likely_to_get_a_match": "3x -m vagy nagyobb valószínűséggel kap egyezést",
+  "you're_3x_more_likely_to_get_a_match": "3x -m vagy nagyobb valószínűséggel kapsz egy mérkőzést",
   "online_now": "Online most",
   "like": "MINT",
   "nope": "DEHOGY",
   "supper_like": "Vacsora hasonló",
   "add_living": "Add hozzá a megélhetést",
+  "create_new": "Újat készíteni",
   "99+_like": "99+ kedvelő",
   "for_you": "Neked",
-  "create_new": "Újat készíteni",
   "months": "hónapok",
   "usd/months": "USD/hónapok",
   "sale": "Eladás",
   "recuring_billing,_cancel_anytime": "A számlázás elszámolása, bármikor törölje",
-  "sale_50%": "Eladás 50%",
+  "sale_50%": "50% eladás",
   "get_read_receipt": "Olvassa el a nyugtát",
   "supper_likes": "A vacsora kedveli",
   "5_free_supper_like_weekly_": "5 ingyenes vacsora, mint a hetente",
@@ -317,6 +317,8 @@
   "please_provide_more_details_about_what_you_are_reporting": "Kérjük, adjon további részleteket arról, hogy mit jelent",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Ha kilép, akkor újra regisztrálnia kell a fiókját, és törölnie kell az összes információt.",
   "invalid_date_of_birth": "Érvénytelen születési idő",
+  "save": "Megment",
+  "find_someone_that_also_looking_for_love_as_you": "Keressen valakit, aki szeretetet is keres, mint te",
   "are_you_sure_you_want_to_sign_out?": "Biztos benne, hogy ki kell jelentkezni?",
   "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "A kompatibilis felhasználók továbbra is találkoznak az utolsó azonosított helyen.",
   "delete_my_account": "A fiókom törlése",
@@ -329,5 +331,17 @@
   "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "A fotó -ellenőrzés befejezése után megőrizzük alapvető arcfelismerési adatait, vagy a \"sablonokat\" (általában 24 órán belül kitöltve). Nem tároljuk a szelfi videóit.",
   "invalid_image": "Érvénytelen kép",
   "your_photo_does_not_match.please_select_a_photo_again": "A fényképe nem egyezik. Kérjük, válasszon egy fényképet újra",
-  "learn_more_about_how_it_works": "Tudjon meg többet arról, hogyan működik"
+  "learn_more_about_how_it_works": "Tudjon meg többet arról, hogyan működik",
+  "before_you_continue...": "Mielőtt folytatná ...",
+  "prepare_the_space": "Készítse elő a helyet",
+  "choose_a_place_with_enough_light": "Válasszon egy helyet, amelynek elegendő fény van",
+  "avoid_glare_and_backlit": "Kerülje a tükröződést és a háttérvilágítást",
+  "prepare_the_pose": "Készítse elő a pózot",
+  "looking_directly_at_the_camera": "Közvetlenül a kamerára néz",
+  "remove_hats,_sunglasses,_and_face_coverings": "Távolítsa el a kalapokat, napszemüveget és az arc burkolatát",
+  "oh!": "Ó!",
+  "we_cannot_record_your_video._please_try_again.": "Nem tudjuk rögzíteni a videódat. Kérlek próbáld újra.",
+  "increase_screen_brightness": "Növelje a képernyő fényerejét",
+  "photo_verified": "A fotó ellenőrzött",
+  "please_choose_a_reason": "Kérjük, válasszon egy okot"
 }
