--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -57,7 +57,7 @@
   "my_photos_are": "Le mie foto sono",
   "add_at_least_2_photos_to_continue": "Aggiungi almeno 2 foto per continuare",
   "enable_location": "Abilita posizione",
-  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "Dovrai abilitare il tuo ordine di posizione per utilizzare i pezzi di cuore",
+  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "Dovrai abilitare il tuo ordine di posizione per utilizzare il cuore del cuore",
   "allow_location": "Consentire la posizione",
   "tell_me_more": "Dimmi di più",
   "meet_people_nearby": "Incontra persone nelle vicinanze",
@@ -107,7 +107,7 @@
   "5_free_supper_like_weekly": "5 cena gratuita come settimanalmente",
   "get_supper_likes_package": "Ottieni il pacchetto a cena piace",
   "stand_out_with_super_like": "Distinguere con Super Like",
-  "3x_chance_to_get_a_match": "3x possibilità di avere una partita",
+  "3x_chance_to_get_a_match": "3x possibilità di ottenere una partita",
   "get_supper_likes": "Prendi Mi piace alla cena",
   "get_silver_package": "Ottieni un pacchetto d'argento",
   "unlimited_likes": "Mi piace illimitato",
@@ -156,7 +156,7 @@
   "app_settings": "Impostazioni dell'app",
   "show_distance_in": "Mostra la distanza in",
   "language": "Lingua",
-  "chose_the_language_you_want_to_display": "Ha scelto la lingua che vuoi visualizzare",
+  "chose_the_language_you_want_to_display": "Scegli la lingua che desideri visualizzare",
   "dark_theme": "Tema scuro",
   "choose_the_theme_you_like_most": "Scegli il tema che ti piace di più",
   "log_out": "DISCONNETTERSI",
@@ -176,7 +176,7 @@
   "dating_purposes": "Scopi di appuntamenti",
   "i'm_looking_for": "Sto cercando",
   "empty": "vuoto",
-  "now_i'm_looking_for...": "Adesso sto cercando ...",
+  "now_i'm_looking_for...": "Ora sto cercando ...",
   "share_the_purpose_to_find_'that_person'": "Condividi lo scopo di trovare \"quella persona\"",
   "i_know_languages": "Conosco le lingue",
   "the_language_i_know": "La lingua che conosco",
@@ -240,7 +240,7 @@
   "interests": "Interessi",
   "my_gender": "Il mio genere",
   "my_orientation": "il mio orientamento",
-  "version_x.y.z": "Versione X.Y.Z",
+  "version_{number}": "Numero della versione}",
   "km": "km",
   "mi": "mi",
   "live_at_{nameAddress}": "Live at {nameaddress}",
@@ -281,7 +281,7 @@
   "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Compresi le migliori scelte, Mi piace illimitati, 1 ° miglior ogni mese, 5 Supper GRATUITA come ogni settimana, riavvolgimento e passaporto",
   "message_before_matching": "Messaggio prima di abbinare",
   "99+_people_already_like_you": "Oltre 99 persone già ti piacciono",
-  "see_who_likes_you_and_match_instantly": "Guarda chi piaci e abbinati all'istante",
+  "see_who_likes_you_and_match_instantly": "Guarda a chi piaci e abbinati all'istante",
   "buy_more_top_picks": "Acquista più scelte migliori",
   "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "Ottieni il pieno accesso alle migliori scelte, come te, invia Mi piace illimitato e altro ancora",
   "see_as_many_likes_as_you_want": "Guarda tutti i Mi piace che vuoi",
@@ -294,9 +294,9 @@
   "nope": "NO",
   "supper_like": "Cena come",
   "add_living": "Aggiungi la vita",
+  "create_new": "Creare nuovo",
   "99+_like": "99+ come",
   "for_you": "Per te",
-  "create_new": "Creare nuovo",
   "months": "mesi",
   "usd/months": "USD/MESI",
   "sale": "Vendita",
@@ -314,9 +314,11 @@
   "usd/each": "USD/ciascuno",
   "get_gold_package": "Ottieni un pacchetto d'oro",
   "search_language": "Lingua di ricerca",
-  "please_provide_more_details_about_what_you_are_reporting": "Fornisci maggiori dettagli su ciò che stai segnalando",
+  "please_provide_more_details_about_what_you_are_reporting": "Si prega di fornire maggiori dettagli su ciò che stai segnalando",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Se esci dovrai rinnovare il tuo account ed eliminare tutte le informazioni.",
   "invalid_date_of_birth": "Data di nascita non valida",
+  "save": "Salva",
+  "find_someone_that_also_looking_for_love_as_you": "Trova qualcuno che cerchi anche l'amore come te",
   "are_you_sure_you_want_to_sign_out?": "Sei sicuro di voler uscire?",
   "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Gli utenti compatibili continueranno a vederti nell'ultima posizione identificata.",
   "delete_my_account": "Cancella il mio account",
@@ -329,5 +331,17 @@
   "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "Conserveremo le informazioni di base del riconoscimento facciale o \"modelli\", al completamento della verifica delle foto (di solito completate entro 24 ore). Non archiviamo i tuoi video selfie.",
   "invalid_image": "Immagine non valida",
   "your_photo_does_not_match.please_select_a_photo_again": "La tua foto non corrisponde. Seleziona di nuovo una foto",
-  "learn_more_about_how_it_works": "Scopri di più su come funziona"
+  "learn_more_about_how_it_works": "Scopri di più su come funziona",
+  "before_you_continue...": "Prima di continuare ...",
+  "prepare_the_space": "Preparare lo spazio",
+  "choose_a_place_with_enough_light": "Scegli un posto con abbastanza luce",
+  "avoid_glare_and_backlit": "Evita l'abbagliamento e la retroilluminazione",
+  "prepare_the_pose": "Preparare la posa",
+  "looking_directly_at_the_camera": "Guardando direttamente la fotocamera",
+  "remove_hats,_sunglasses,_and_face_coverings": "Rimuovi cappelli, occhiali da sole e rivestimenti per il viso",
+  "oh!": "OH!",
+  "we_cannot_record_your_video._please_try_again.": "Non possiamo registrare il tuo video. Per favore riprova.",
+  "increase_screen_brightness": "Aumenta la luminosità dello schermo",
+  "photo_verified": "Foto verificata",
+  "please_choose_a_reason": "Si prega di scegliere un motivo"
 }
