--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -5,7 +5,7 @@
   "log_in_with_facebook": "Facebookでログインします",
   "log_in_with_phone_number": "電話番号でログインします",
   "trouble_logging_in?": "ログインするのに問題がありますか？",
-  "by_clicking_'login',_you_agree_with_our_terms._learn_how_we_process_your_data_in_our": "「ログイン」をクリックすると、条件に同意します。データをどのように処理するかを学びます",
+  "by_clicking_'login',_you_agree_with_our_terms._learn_how_we_process_your_data_in_our": "「ログイン」をクリックすると、お客様の用語に同意します。データをどのように処理するかを学びます",
   "privacy_policy": "プライバシーポリシー",
   "and": "と",
   "cookies_policy": "Cookiesポリシー",
@@ -33,7 +33,7 @@
   "don't_be_too_quick_to_give_out_personal_information.": "個人情報を提供しすぎないでください。",
   "date_safety_guidelines": "日付安全ガイドライン",
   "play_it_cool": "かっこいいプレイ",
-  "respect_others_and_treat_them_as_you_would_like_to_be_treated": "他の人を尊重し、あなたが扱われたいと思うようにそれらを扱う",
+  "respect_others_and_treat_them_as_you_would_like_to_be_treated": "他の人を尊重し、あなたが扱われたいと思うように扱う",
   "be_proactive": "積極的に",
   "always_report_bad_behavior": "常に悪い行動を報告してください",
   "i_agree": "同意します",
@@ -43,7 +43,7 @@
   "apply": "申し込み",
   "my_name_is": "私の名前は",
   "your_name": "あなたの名前",
-  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "これはハートリンクでどのように表示されるか、そしてあなたはそれを変更することができません",
+  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "これはハートリンクでどのように表示されるかであり、変更することはできません",
   "my_birthday_is": "私の誕生日は",
   "your_age_will_be_public": "あなたの年齢は公開されます",
   "i_am_a": "私は",
@@ -83,7 +83,7 @@
   "no_thanks": "結構です",
   "upgrade_to_gold_to_see_people_who_are_interested_in_you": "あなたに興味のある人を見るために金にアップグレードする",
   "no_one_likes_you_yet._done't_worry,_make_sure_you_complete_your_profile_to_other_find_you_faster": "まだ誰もあなたを好きではありません。心配しないでください、あなたが他の人にあなたのプロフィールを完成させてくださいあなたをより速く見つけるようにしてください",
-  "see_who_likes_you": "誰があなたが好きな人を見てください",
+  "see_who_likes_you": "誰があなたを好きかを見てください",
   "recommendations": "推奨事項",
   "new_connections": "新しい接続",
   "messages": "メッセージ",
@@ -98,7 +98,7 @@
   "know_when_your_messages_have_been_read_with_read_receipt": "読み取り領収書でメッセージがいつ読まれたかを知る",
   "most_popular": "最も人気のある",
   "read_receipt": "領収書を読んでください",
-  "recurring_billing,_cancel_anytime": "請求の繰り返し、いつでもキャンセルします",
+  "recurring_billing,_cancel_anytime": "請求書の繰り返し、いつでもキャンセルします",
   "get_boost_package": "ブーストパッケージを入手してください",
   "skip_the_queue": "キューをスキップします",
   "always_on_top_profile_in_your_area_for_30_mins_to_get_more_matches": "あなたの地域の常に30分間、より多くの試合を得るためにトッププロフィール",
@@ -111,7 +111,7 @@
   "get_supper_likes": "夕食のいいね",
   "get_silver_package": "シルバーパッケージを入手してください",
   "unlimited_likes": "無制限のいいね",
-  "send_as_many_likes_as_you_want": "好きなだけ好きなだけを送ってください",
+  "send_as_many_likes_as_you_want": "あなたが望むだけ多くのいいねを送ってください",
   "control_your_profile": "プロフィールを制御します",
   "limit_what_others_see_with_dating_plus": "他の人がデートプラスで見るものを制限します",
   "choose_who_sees_you": "誰があなたを見るかを選択してください",
@@ -240,7 +240,7 @@
   "interests": "興味",
   "my_gender": "私の性別",
   "my_orientation": "私のオリエンテーション",
-  "version_x.y.z": "バージョンX.Y.Z",
+  "version_{number}": "バージョンナンバー}",
   "km": "km",
   "mi": "mi",
   "live_at_{nameAddress}": "{nameaddress}に住んでいます",
@@ -261,7 +261,7 @@
   "get_ready": "準備をしてください",
   "questions_and_chat_time_are_limited,_so_think_and_answer_quickly": "質問とチャットの時間は限られているので、すぐに考えて答えます",
   "compatible_to_view_profiles": "プロファイルを表示するのに互換性があります",
-  "after_the_chat_is_over,_you'll_see_the_person's_profile_if_you_both_match": "チャットが終わった後、あなたが両方とも一致する場合、あなたはその人のプロフィールが表示されます",
+  "after_the_chat_is_over,_you'll_see_the_person's_profile_if_you_both_match": "チャットが終わった後、あなたが両方とも一致すると、人のプロフィールが表示されます",
   "i_can't_date_someone_who:": "私は誰かとデートすることはできません：",
   "smoker": "喫煙者",
   "not_lovers": "恋人ではありません",
@@ -276,14 +276,14 @@
   "verified_photo": "検証済みの写真",
   "likes_you": "あなたが好き",
   "prioritized_likes": "優先順位付けされたいいね",
-  "everyone_you_like_will_see_you_soon": "あなたが好きな人は誰でもすぐにあなたに会います",
+  "everyone_you_like_will_see_you_soon": "あなたが好きなみんなはすぐにあなたに会います",
   "match_instantly_with_people_who_already_like_you": "すでにあなたが好きな人とすぐに一致します",
   "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "トップピック、無制限のいいね！、毎月1フリーブースト、毎週の5つの無料夕食、巻き戻しとパスポートを含む",
   "message_before_matching": "一致する前のメッセージ",
   "99+_people_already_like_you": "すでにあなたが好きな99人以上",
-  "see_who_likes_you_and_match_instantly": "誰があなたを好きで、すぐにマッチするのを見てください",
+  "see_who_likes_you_and_match_instantly": "誰があなたが好きで、すぐにマッチするのを見てください",
   "buy_more_top_picks": "さらにトップピックを購入します",
-  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "あなたのようなトップピックへのフルアクセスを取得し、無制限のいいね！",
+  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "あなたのようなトップピックへのフルアクセスを取得して、無制限のいいね！",
   "see_as_many_likes_as_you_want": "あなたが望むだけ多くの好きなものを見てください",
   "1_free_boost_every_month": "毎月1つの無料ブースト",
   "choose_who_see_you": "誰があなたに会うかを選んでください",
@@ -294,9 +294,9 @@
   "nope": "いいえ",
   "supper_like": "夕食のように",
   "add_living": "生活を追加します",
-  "99+_like": "99+ wike",
-  "for_you": "あなたのために",
   "create_new": "新しく作る",
+  "99+_like": "99+ like",
+  "for_you": "あなたのために",
   "months": "数ヶ月",
   "usd/months": "USD/月",
   "sale": "セール",
@@ -317,6 +317,8 @@
   "please_provide_more_details_about_what_you_are_reporting": "あなたが報告しているものの詳細を提供してください",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "終了する場合は、アカウントを再登録してすべての情報を削除する必要があります。",
   "invalid_date_of_birth": "無効な生年月日",
+  "save": "保存",
+  "find_someone_that_also_looking_for_love_as_you": "あなたのように愛を探している人を見つけてください",
   "are_you_sure_you_want_to_sign_out?": "サインアウトしたいですか？",
   "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "互換性のあるユーザーは、最後に識別された場所で引き続きお客様に会います。",
   "delete_my_account": "アカウントを削除します",
@@ -329,5 +331,17 @@
   "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "写真検証が完了すると、基本的な顔認識情報または「テンプレート」を保持します（通常は24時間以内に完了します）。私たちはあなたのセルフィービデオを保存しません。",
   "invalid_image": "無効な画像",
   "your_photo_does_not_match.please_select_a_photo_again": "あなたの写真は一致しません。もう一度写真を選択してください",
-  "learn_more_about_how_it_works": "それがどのように機能するかについて詳しく知ります"
+  "learn_more_about_how_it_works": "それがどのように機能するかについて詳しく知ります",
+  "before_you_continue...": "あなたが続ける前に...",
+  "prepare_the_space": "スペースを準備します",
+  "choose_a_place_with_enough_light": "十分な光のある場所を選択してください",
+  "avoid_glare_and_backlit": "まぶしさやバックライトを避けてください",
+  "prepare_the_pose": "ポーズを準備します",
+  "looking_directly_at_the_camera": "カメラを直接見ています",
+  "remove_hats,_sunglasses,_and_face_coverings": "帽子、サングラス、顔の覆いを取り除きます",
+  "oh!": "おお！",
+  "we_cannot_record_your_video._please_try_again.": "あなたのビデオを録画することはできません。もう一度やり直してください。",
+  "increase_screen_brightness": "画面の明るさを高めます",
+  "photo_verified": "検証済みの写真",
+  "please_choose_a_reason": "理由を選択してください"
 }
