--- a/src/locales/ms.json
+++ b/src/locales/ms.json
@@ -141,14 +141,14 @@
   "balance_recommendations": "Cadangan keseimbangan",
   "see_the_most_relevant_people_to_you_(default_settings)": "Lihat orang yang paling relevan kepada anda (tetapan lalai)",
   "recently_active": "Baru -baru ini aktif",
-  "see_the_most_recently_active_people_first": "Lihat orang yang paling baru aktif terlebih dahulu",
+  "see_the_most_recently_active_people_first": "Lihat orang yang paling aktif baru -baru ini",
   "standard": "Standard",
   "only_be_shown_to_certain_types_of_people_for_individual_recommendations": "Hanya ditunjukkan kepada jenis orang tertentu untuk cadangan individu",
   "only_people_i've_liked": "Hanya orang yang saya suka",
   "only_people_you_have_liked_will_see_me": "Hanya orang yang anda suka akan melihat saya",
   "only_wi-fi_only": "Hanya Wi-Fi sahaja",
   "on_wi-fi_and_mobile_data": "Pada Wi-Fi dan data mudah alih",
-  "never_auto_play_videos": "Jangan sesekali bermain video",
+  "never_auto_play_videos": "Tidak pernah bermain video automatik",
   "show_me_top_picks": "Tunjukkan kepada saya pilihan utama",
   "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Menghidupkan ini akan membolehkan anda ditunjukkan sebagai pilihan utama yang dipaparkan kepada pengguna lain berhampiran anda",
   "activity_status": "Status aktiviti",
@@ -172,8 +172,8 @@
   "about_me_-_maximize_500_words": "Mengenai saya - memaksimumkan 500 perkataan",
   "interest": "Minat",
   "out_of_5": "daripada 5",
-  "search_interest": "Minat carian",
-  "dating_purposes": "Tujuan temu janji",
+  "search_interest": "Minat cari",
+  "dating_purposes": "Tujuan dating",
   "i'm_looking_for": "saya sedang mencari",
   "empty": "kosong",
   "now_i'm_looking_for...": "Sekarang saya mencari ...",
@@ -240,7 +240,7 @@
   "interests": "Kepentingan",
   "my_gender": "Jantina saya",
   "my_orientation": "orientasi saya",
-  "version_x.y.z": "Versi X.Y.Z",
+  "version_{number}": "Versi {nombor}",
   "km": "km",
   "mi": "mi",
   "live_at_{nameAddress}": "Hidup di {nameaddress}",
@@ -250,7 +250,7 @@
   "don't_worry_-_we_won't_tell_this_person": "Jangan risau - kami tidak akan memberitahu orang ini",
   "finding_people_near_you...": "Mencari orang berhampiran anda ...",
   "let's_be_friend": "Mari berkawan",
-  "find_someone_that_wants_to_be_friends": "Cari seseorang yang ingin berkawan",
+  "find_someone_that_wants_to_be_friends": "Cari seseorang yang mahu berkawan",
   "coffee_date": "Tarikh kopi",
   "find_someone_to_get_coffee_with": "Cari seseorang untuk mendapatkan kopi dengan",
   "looking_for_love": "Mencari cinta",
@@ -294,9 +294,9 @@
   "nope": "Nope",
   "supper_like": "Makan malam seperti",
   "add_living": "Tambah hidup",
+  "create_new": "Buat baru",
   "99+_like": "99+ suka",
   "for_you": "Untuk anda",
-  "create_new": "Buat baru",
   "months": "bulan",
   "usd/months": "USD/Bulan",
   "sale": "Jualan",
@@ -317,6 +317,8 @@
   "please_provide_more_details_about_what_you_are_reporting": "Sila berikan lebih banyak maklumat mengenai apa yang anda laporkan",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Jika anda keluar, anda perlu mendaftar semula akaun anda dan memadam semua maklumat.",
   "invalid_date_of_birth": "Tarikh lahir tidak sah",
+  "save": "Simpan",
+  "find_someone_that_also_looking_for_love_as_you": "Cari seseorang yang juga mencari cinta seperti anda",
   "are_you_sure_you_want_to_sign_out?": "Adakah anda pasti mahu mendaftar keluar?",
   "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Pengguna yang serasi akan terus melihat anda di lokasi yang dikenal pasti terakhir.",
   "delete_my_account": "Padamkan akaun saya",
@@ -329,5 +331,17 @@
   "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "Kami akan menyimpan maklumat pengiktirafan muka asas anda, atau \"templat,\" setelah selesai pengesahan foto (biasanya selesai dalam masa 24 jam). Kami tidak menyimpan video selfie anda.",
   "invalid_image": "Imej tidak sah",
   "your_photo_does_not_match.please_select_a_photo_again": "Foto anda tidak sepadan. Sila pilih foto lagi",
-  "learn_more_about_how_it_works": "Ketahui lebih lanjut mengenai bagaimana ia berfungsi"
+  "learn_more_about_how_it_works": "Ketahui lebih lanjut mengenai bagaimana ia berfungsi",
+  "before_you_continue...": "Sebelum anda meneruskan ...",
+  "prepare_the_space": "Sediakan ruang",
+  "choose_a_place_with_enough_light": "Pilih tempat dengan cahaya yang cukup",
+  "avoid_glare_and_backlit": "Elakkan silau dan backlit",
+  "prepare_the_pose": "Sediakan pose",
+  "looking_directly_at_the_camera": "Melihat terus di kamera",
+  "remove_hats,_sunglasses,_and_face_coverings": "Keluarkan topi, cermin mata hitam, dan penutup muka",
+  "oh!": "Oh!",
+  "we_cannot_record_your_video._please_try_again.": "Kami tidak dapat merakam video anda. Sila cuba lagi.",
+  "increase_screen_brightness": "Meningkatkan kecerahan skrin",
+  "photo_verified": "Foto disahkan",
+  "please_choose_a_reason": "Sila pilih alasan"
 }
