--- a/src/locales/nb.json
+++ b/src/locales/nb.json
@@ -5,7 +5,7 @@
   "log_in_with_facebook": "Logg inn med Facebook",
   "log_in_with_phone_number": "Logg inn med telefonnummer",
   "trouble_logging_in?": "Problemer med å logge inn?",
-  "by_clicking_'login',_you_agree_with_our_terms._learn_how_we_process_your_data_in_our": "Ved å klikke på \"Logg inn\", er du enig i våre vilkår. Lær hvordan vi behandler dataene dine i vår",
+  "by_clicking_'login',_you_agree_with_our_terms._learn_how_we_process_your_data_in_our": "Ved å klikke på 'Logg inn', er du enig i våre vilkår. Lær hvordan vi behandler dataene dine i vår",
   "privacy_policy": "Personvernregler",
   "and": "og",
   "cookies_policy": "Cookies Policy",
@@ -61,7 +61,7 @@
   "allow_location": "Tillat beliggenhet",
   "tell_me_more": "Fortell meg mer",
   "meet_people_nearby": "Møt mennesker i nærheten",
-  "you_location_will_be_used_to_show_potential_matches_near_you.": "Plasseringen din vil bli brukt til å vise potensielle kamper i nærheten.",
+  "you_location_will_be_used_to_show_potential_matches_near_you.": "Plasseringen vil bli brukt til å vise potensielle kamper i nærheten.",
   "want_to_avoid_someone_you_know_on_heartLink?": "Vil du unngå noen du kjenner på HeartLink?",
   "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Det er enkelt - del enhetens kontakt med HeartLink når du bruker denne funksjonen for å velge hvem du vil unngå",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Vi lagrer den blokkerte kontakten din for å hindre deg i å se hverandre hvis kontakten din har en konto med den samme informasjonen du gir. Du kan slutte å dele med oss ​​i innstillingene dine.",
@@ -71,7 +71,7 @@
   "report_{nameUser}": "Rapporter {nameUser}",
   "away": "borte",
   "my_anthem": "Min hymne",
-  "what_is_the_reason_for_your_report?": "Hva er årsaken til rapporten din?",
+  "what_is_the_reason_for_your_report?": "Hva er grunnen til rapporten din?",
   "please_choose_1_reason": "Vennligst velg 1 Årsak",
   "we_won't_let_puddink_know_that_you_reported_them": "Vi vil ikke gi puddink beskjed om at du rapporterte dem",
   "can_you_tell_us_what_happened?": "Kan du fortelle oss hva som skjedde?",
@@ -240,7 +240,7 @@
   "interests": "Interesser",
   "my_gender": "kjønnet mitt",
   "my_orientation": "Orienteringen min",
-  "version_x.y.z": "Versjon X.Y.Z",
+  "version_{number}": "Versjon {nummer}",
   "km": "km",
   "mi": "mi",
   "live_at_{nameAddress}": "Bor på {nameAddress}",
@@ -294,9 +294,9 @@
   "nope": "NEI",
   "supper_like": "Kveldsmat som",
   "add_living": "Legg til å leve",
+  "create_new": "Lag ny",
   "99+_like": "99+ som",
   "for_you": "For deg",
-  "create_new": "Lag ny",
   "months": "måneder",
   "usd/months": "USD/måneder",
   "sale": "Salg",
@@ -317,6 +317,8 @@
   "please_provide_more_details_about_what_you_are_reporting": "Gi mer informasjon om hva du rapporterer",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Hvis du avslutter, må du registrere kontoen din på nytt og slette all informasjon.",
   "invalid_date_of_birth": "Ugyldig fødselsdato",
+  "save": "Lagre",
+  "find_someone_that_also_looking_for_love_as_you": "Finn noen som også ser etter kjærlighet som deg",
   "are_you_sure_you_want_to_sign_out?": "Er du sikker på at du vil logge deg ut?",
   "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Kompatible brukere vil fortsette å se deg på det siste identifiserte stedet.",
   "delete_my_account": "Slett kontoen min",
@@ -329,5 +331,17 @@
   "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "Vi holder din grunnleggende ansiktsgjenkjenningsinformasjon, eller \"maler\", etter fullføring av fotoverifisering (vanligvis fullført innen 24 timer). Vi lagrer ikke selfie -videoene dine.",
   "invalid_image": "Ugyldig bilde",
   "your_photo_does_not_match.please_select_a_photo_again": "Bildet ditt stemmer ikke overens. Velg et bilde igjen",
-  "learn_more_about_how_it_works": "Lær mer om hvordan det fungerer"
+  "learn_more_about_how_it_works": "Lær mer om hvordan det fungerer",
+  "before_you_continue...": "Før du fortsetter ...",
+  "prepare_the_space": "Forbered plassen",
+  "choose_a_place_with_enough_light": "Velg et sted med nok lys",
+  "avoid_glare_and_backlit": "Unngå gjenskinn og bakgrunnsbelyst",
+  "prepare_the_pose": "Forbered posituren",
+  "looking_directly_at_the_camera": "Ser direkte på kameraet",
+  "remove_hats,_sunglasses,_and_face_coverings": "Fjern hatter, solbriller og ansiktsbelegg",
+  "oh!": "Åh!",
+  "we_cannot_record_your_video._please_try_again.": "Vi kan ikke spille inn videoen din. Vær så snill, prøv på nytt.",
+  "increase_screen_brightness": "Øk skjermens lysstyrke",
+  "photo_verified": "Foto bekreftet",
+  "please_choose_a_reason": "Vennligst velg en grunn"
 }
