--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -18,7 +18,7 @@
   "continue": "Kontynuować",
   "my_code_is": "Mój kod jest",
   "please_enter_code_sent_to": "Wprowadź kod wysłany do",
-  "resend_code": "Ponowne ponownie",
+  "resend_code": "Ponownie wyznacz kod",
   "invalid_code._please_try_again": "Zły kod. Proszę spróbuj ponownie",
   "what's_your_email?": "Jaki jest Twój adres e-mail?",
   "don't_lose_access_to_your_account,_verify_your_email": "Nie trać dostępu do swojego konta, sprawdź swój e -mail",
@@ -115,7 +115,7 @@
   "control_your_profile": "Kontroluj swój profil",
   "limit_what_others_see_with_dating_plus": "Ogranicz to, co inni widzą z randkowymi plus",
   "choose_who_sees_you": "Wybierz, kto cię widzi",
-  "only_be_shown_to_people_you've_liked": "Pokazano tylko osobom, które lubiłeś",
+  "only_be_shown_to_people_you've_liked": "Wyświetlaj się tylko osobom, które lubiłeś",
   "like_profile_around_the_world": "Jak profil na całym świecie",
   "passport_to_anywhere": "Paszport do dowolnego miejsca",
   "unlimited_rewinds": "Nieograniczone przewijanie",
@@ -150,7 +150,7 @@
   "on_wi-fi_and_mobile_data": "Na Wi-Fi i danych mobilnych",
   "never_auto_play_videos": "Nigdy nie automatycznie odtwarzaj filmy",
   "show_me_top_picks": "Pokaż mi najlepsze typy",
-  "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Włączenie tego pozwoli ci pokazać jako wyróżniony najlepszy wybór do innych użytkowników w pobliżu",
+  "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Włączenie tego pozwoli ci pokazać jako wyróżniony najlepszy wybór dla innych użytkowników w pobliżu",
   "activity_status": "Status aktywności",
   "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Pozwól innym członkom sprawdzić, czy byłeś niedawno aktywny w ciągu ostatnich 24 godzin na Heartlink. Jeśli to wyłączyłeś, nie będą w stanie zobaczyć twojego niedawno aktywnego statusu",
   "app_settings": "Ustawienia aplikacji",
@@ -171,7 +171,7 @@
   "about_me": "O MNIE",
   "about_me_-_maximize_500_words": "O mnie - zmaksymalizuj 500 słów",
   "interest": "ODSETKI",
-  "out_of_5": "z 5",
+  "out_of_5": "na 5",
   "search_interest": "Wyszukaj zainteresowanie",
   "dating_purposes": "Cele randkowe",
   "i'm_looking_for": "Szukam",
@@ -240,7 +240,7 @@
   "interests": "Zainteresowania",
   "my_gender": "Moja płeć",
   "my_orientation": "moja orientacja",
-  "version_x.y.z": "Wersja X.Y.Z",
+  "version_{number}": "Numer wersji}",
   "km": "km",
   "mi": "mi",
   "live_at_{nameAddress}": "Na żywo w {NameAddress}",
@@ -294,13 +294,13 @@
   "nope": "NIE",
   "supper_like": "Kolacja jak",
   "add_living": "Dodaj życie",
+  "create_new": "Tworzyć nowe",
   "99+_like": "99+ jak",
   "for_you": "Dla Ciebie",
-  "create_new": "Tworzyć nowe",
   "months": "miesiące",
   "usd/months": "USD/miesiące",
   "sale": "Sprzedaż",
-  "recuring_billing,_cancel_anytime": "Ogólność faktur, anuluj w dowolnym momencie",
+  "recuring_billing,_cancel_anytime": "Ogólność fakturowania, anuluj w dowolnym momencie",
   "sale_50%": "Sprzedaż 50%",
   "get_read_receipt": "Uzyskaj odczyt paragonu",
   "supper_likes": "Kolacja lubi",
@@ -313,10 +313,12 @@
   "get_platinum_package": "Zdobądź pakiet platynowy",
   "usd/each": "USD/każdy",
   "get_gold_package": "Zdobądź pakiet złota",
-  "search_language": "Wyszukaj język",
+  "search_language": "Szukaj języka",
   "please_provide_more_details_about_what_you_are_reporting": "Podaj więcej szczegółów na temat tego, co zgłaszasz",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Jeśli wyjdziesz, będziesz musiał ponownie zarejestrować swoje konto i usunąć wszystkie informacje.",
   "invalid_date_of_birth": "Nieprawidłowa data urodzenia",
+  "save": "Ratować",
+  "find_someone_that_also_looking_for_love_as_you": "Znajdź kogoś, kto również szuka miłości jak ty",
   "are_you_sure_you_want_to_sign_out?": "Czy na pewno chcesz się wylogować?",
   "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Kompatybilni użytkownicy będą nadal widzieć w ostatniej zidentyfikowanej lokalizacji.",
   "delete_my_account": "Usuń moje konto",
@@ -329,5 +331,17 @@
   "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "Będziemy przechowywać twoje podstawowe informacje o rozpoznawaniu twarzy lub „szablony” po zakończeniu weryfikacji zdjęcia (zwykle ukończonej w ciągu 24 godzin). Nie przechowujemy twoich filmów selfie.",
   "invalid_image": "Nieprawidłowy obraz",
   "your_photo_does_not_match.please_select_a_photo_again": "Twoje zdjęcie nie pasuje. Wybierz ponownie zdjęcie",
-  "learn_more_about_how_it_works": "Dowiedz się więcej o tym, jak to działa"
+  "learn_more_about_how_it_works": "Dowiedz się więcej o tym, jak to działa",
+  "before_you_continue...": "Zanim będziesz kontynuować ...",
+  "prepare_the_space": "Przygotuj przestrzeń",
+  "choose_a_place_with_enough_light": "Wybierz miejsce z wystarczającą ilością światła",
+  "avoid_glare_and_backlit": "Unikaj blasku i podświetlania",
+  "prepare_the_pose": "Przygotuj pozę",
+  "looking_directly_at_the_camera": "Patrząc bezpośrednio na aparat",
+  "remove_hats,_sunglasses,_and_face_coverings": "Usuń czapki, okulary przeciwsłoneczne i pokrycia twarzy",
+  "oh!": "Oh!",
+  "we_cannot_record_your_video._please_try_again.": "Nie możemy nagrać Twojego filmu. Proszę spróbuj ponownie.",
+  "increase_screen_brightness": "Zwiększ jasność ekranu",
+  "photo_verified": "Zdjęcie zweryfikowane",
+  "please_choose_a_reason": "Wybierz powód"
 }
