--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -33,7 +33,7 @@
   "don't_be_too_quick_to_give_out_personal_information.": "Не будь слишком быстрым, чтобы выделять личную информацию.",
   "date_safety_guidelines": "Руководства по безопасности даты",
   "play_it_cool": "Играй в крутой",
-  "respect_others_and_treat_them_as_you_would_like_to_be_treated": "Уважайте других и относитесь к ним так, как хотите, чтобы с вами обращались",
+  "respect_others_and_treat_them_as_you_would_like_to_be_treated": "Уважайте других и относитесь к ним так, как вы хотели бы относиться к вам",
   "be_proactive": "Быть инициативным",
   "always_report_bad_behavior": "Всегда сообщайте о плохом поведении",
   "i_agree": "Я согласен",
@@ -150,7 +150,7 @@
   "on_wi-fi_and_mobile_data": "На Wi-Fi и мобильные данные",
   "never_auto_play_videos": "Никогда не воспроизводите видео",
   "show_me_top_picks": "Покажи мне лучшие выборы",
-  "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Включение этого позволит вам показать в качестве фигурного выбора другим пользователям рядом с вами",
+  "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Включение этого позволит вам показать в качестве избранного лучшего выбора другим пользователям рядом с вами",
   "activity_status": "Статус деятельности",
   "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Позвольте другим участникам увидеть, были ли вы недавно активными в течение последних 24 часов на Heartlink. Если вы выключили это, они не смогут увидеть ваш недавно активного статуса",
   "app_settings": "Настройки приложения",
@@ -158,7 +158,7 @@
   "language": "Язык",
   "chose_the_language_you_want_to_display": "Выбрал язык, который вы хотите показать",
   "dark_theme": "Темная тема",
-  "choose_the_theme_you_like_most": "Выберите тему, которая вам больше всего нравится",
+  "choose_the_theme_you_like_most": "Выберите тему, которая вам нравится больше всего",
   "log_out": "ВЫЙТИ",
   "delete_account": "УДАЛИТЬ АККАУНТ",
   "add_video,_pic_or_logo_toget_4%_closer_to_completing_your_profile_and_you_may_even_get_more_likes": "Добавить видео, картинку или логотип, чтобы на 4% ближе к завершению вашего профиля, и вы даже можете получить больше лайков",
@@ -180,7 +180,7 @@
   "share_the_purpose_to_find_'that_person'": "Поделитесь цели, чтобы найти «этого человека»",
   "i_know_languages": "Я знаю языки",
   "the_language_i_know": "Язык, который я знаю",
-  "choose_up_to_5_languages_you_know_and_add_to_your_profile": "Выберите до 5 языков, которые вы знаете, и добавьте в свой профиль",
+  "choose_up_to_5_languages_you_know_and_add_to_your_profile": "Выберите до 5 языков, которые вы знаете и добавьте в свой профиль",
   "basic_information": "ОСНОВНАЯ ИНФОРМАЦИЯ",
   "add_more_info_so_people_can_see_your_amazing_pictures": "Добавьте больше информации, чтобы люди могли увидеть ваши удивительные фотографии",
   "what_is_your_zodiac_sign?": "Какой твой знак зодиака?",
@@ -226,7 +226,7 @@
   "show_instagram_photos": "Показать фотографии в Instagram",
   "connect_instagram": "Подключите Instagram",
   "choose_an_anthem": "Выберите гимн",
-  "my_top_spotify_artists": "Мои первые артисты Spotify",
+  "my_top_spotify_artists": "Мои первые художники Spotify",
   "connect_spotify": "Подключить Spotify",
   "gender": "ПОЛ",
   "sexual_orientation": "Сексуальная ориентация",
@@ -240,13 +240,13 @@
   "interests": "Интересы",
   "my_gender": "Мой пол",
   "my_orientation": "моя ориентация",
-  "version_x.y.z": "Версия X.Y.Z.",
+  "version_{number}": "Номер версии}",
   "km": "км",
-  "mi": "миора",
+  "mi": "мио",
   "live_at_{nameAddress}": "Живи в {nameaddress}",
   "{numberKilometers}_{unit}_away": "{numberKilometers} {Unit} прочь",
   "verified": "Проверенный",
-  "heartLink": "Сердцевязки",
+  "heartLink": "Heartlink",
   "don't_worry_-_we_won't_tell_this_person": "Не волнуйся - мы не скажем этому человеку",
   "finding_people_near_you...": "Поиск людей рядом с вами ...",
   "let's_be_friend": "Давай будем друзьями",
@@ -268,7 +268,7 @@
   "no_romance": "Нет романтики",
   "love_novels": "Любовные романы",
   "answer_question": "Отвечать на вопрос",
-  "optimise_pairing": "Оптимизировать сочетание",
+  "optimise_pairing": "Оптимизировать спаривание",
   "connecting": "Соединение",
   "the_best_dinner_is_at:": "Лучший ужин - на:",
   "on_the_tray_and_watch_tv": "На подносе и смотрите телевизор",
@@ -277,13 +277,13 @@
   "likes_you": "ВЫ НРАВИТЕСЬ",
   "prioritized_likes": "Приоритетные лайки",
   "everyone_you_like_will_see_you_soon": "Все, что вам нравится, скоро увидят вас",
-  "match_instantly_with_people_who_already_like_you": "Мгновенно сопоставьте с людьми, которые уже нравятся вам",
+  "match_instantly_with_people_who_already_like_you": "Мгновенно сопоставьте с людьми, которые уже любит вас",
   "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Включая лучшие выборы, неограниченные лайки, 1 безразличный рост каждый месяц, 5 бесплатный ужин, как каждую неделю, перемотка и паспорт",
   "message_before_matching": "Сообщение перед совпадением",
   "99+_people_already_like_you": "99+ человек уже любят вас",
   "see_who_likes_you_and_match_instantly": "Посмотрите, кто любит вас, и мгновенно соответствует",
   "buy_more_top_picks": "Купить больше лучших выборов",
-  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "Получите полный доступ к лучшим выборам, как вы, отправьте неограниченное количество лайков и многое другое",
+  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "Получите полный доступ к лучшим выборам, как и вы, отправьте неограниченное количество лайков и многое другое",
   "see_as_many_likes_as_you_want": "Смотрите столько лайков, сколько хотите",
   "1_free_boost_every_month": "1 бесплатный повышение каждый месяц",
   "choose_who_see_you": "Выберите, кто тебя увидит",
@@ -292,11 +292,11 @@
   "online_now": "Сейчас в сети",
   "like": "НРАВИТЬСЯ",
   "nope": "НЕА",
-  "supper_like": "Ужин, как",
+  "supper_like": "Ужин вроде",
   "add_living": "Добавить жизнь",
+  "create_new": "Создавать новое",
   "99+_like": "99+ нравится",
   "for_you": "Для тебя",
-  "create_new": "Создавать новое",
   "months": "месяцы",
   "usd/months": "Доллар США/месяцы",
   "sale": "Распродажа",
@@ -317,6 +317,8 @@
   "please_provide_more_details_about_what_you_are_reporting": "Пожалуйста, предоставьте более подробную информацию о том, что вы сообщаете",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Если вы выйдете в выход, вам придется перерегистрировать свою учетную запись и удалить всю информацию.",
   "invalid_date_of_birth": "Неверная дата рождения",
+  "save": "Сохранять",
+  "find_someone_that_also_looking_for_love_as_you": "Найдите кого -то, кто также ищет любовь, как вы",
   "are_you_sure_you_want_to_sign_out?": "Вы уверены, что хотите выйти?",
   "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Совместимые пользователи будут продолжать видеть вас в последнем идентифицированном месте.",
   "delete_my_account": "Удалите мой аккаунт",
@@ -329,5 +331,17 @@
   "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "Мы сохраним вашу основную информацию о распознавании лиц или «шаблоны» после завершения проверки фотографий (обычно завершаются в течение 24 часов). Мы не храним ваши видео селфи.",
   "invalid_image": "Неверное изображение",
   "your_photo_does_not_match.please_select_a_photo_again": "Ваша фотография не совпадает. Пожалуйста, снова выберите фото",
-  "learn_more_about_how_it_works": "Узнайте больше о том, как это работает"
+  "learn_more_about_how_it_works": "Узнайте больше о том, как это работает",
+  "before_you_continue...": "Прежде чем продолжить ...",
+  "prepare_the_space": "Подготовьте пространство",
+  "choose_a_place_with_enough_light": "Выберите место с достаточным светом",
+  "avoid_glare_and_backlit": "Избегайте бликов и подсветки",
+  "prepare_the_pose": "Подготовьте позу",
+  "looking_directly_at_the_camera": "Глядя прямо на камеру",
+  "remove_hats,_sunglasses,_and_face_coverings": "Удалить шляпы, солнцезащитные очки и покрытия лица",
+  "oh!": "Ой!",
+  "we_cannot_record_your_video._please_try_again.": "Мы не можем записать ваше видео. Пожалуйста, попробуйте еще раз.",
+  "increase_screen_brightness": "Увеличить яркость экрана",
+  "photo_verified": "Фотография проверена",
+  "please_choose_a_reason": "Пожалуйста, выберите причину"
 }
