--- a/src/locales/sk.json
+++ b/src/locales/sk.json
@@ -47,7 +47,7 @@
   "my_birthday_is": "Moje narodeniny sú",
   "your_age_will_be_public": "Váš vek bude verejný",
   "i_am_a": "Som",
-  "show_{nameInformation}_on_my_profile": "show {nameInformation} v mojom profile",
+  "show_{nameInformation}_on_my_profile": "Show {NameInformation} v mojom profile",
   "my_sexual_orientation_is": "Moja sexuálna orientácia je",
   "select_up_to_3": "Vyberte až 3",
   "skip": "Preskočiť",
@@ -55,7 +55,7 @@
   "let_everyone_know_what_you're_passionate_about,_by_adding_it_to_your_profile": "Dajte všetkým vedieť, o čom vás nadchne, pridaním do svojho profilu",
   "show_me_gender": "Ukáž mi pohlavie",
   "my_photos_are": "Moje fotografie sú",
-  "add_at_least_2_photos_to_continue": "Pridajte najmenej 2 fotografie, aby ste pokračovali",
+  "add_at_least_2_photos_to_continue": "Pridajte najmenej 2 fotografie, aby ste mohli pokračovať",
   "enable_location": "Povoliť umiestnenie",
   "you_will_need_to_enable_your_location_order_to_use_heartLinks": "Budete musieť povoliť, aby sa váš poradie umiestnili na používanie srdcových odkazov",
   "allow_location": "Povoliť umiestnenie",
@@ -93,7 +93,7 @@
   "silver_package": "Balenie striebra",
   "gold_package": "Balenie zlata",
   "level_up_everyone_action_you_take_on_heartLink": "Osoby na viac akcie, ktoré podniknete na Heartlink",
-  "get_read_receipt_package": "Získajte balík na prečítanie potvrdenia",
+  "get_read_receipt_package": "Získajte balík na prijatie na čítanie",
   "stay_up_to_date": "Zostaňte v aktuálnom stave",
   "know_when_your_messages_have_been_read_with_read_receipt": "Vedieť, kedy boli vaše správy čítané s potvrdením o čítaní",
   "most_popular": "NAJPOPULÁRNEJŠÍ",
@@ -108,7 +108,7 @@
   "get_supper_likes_package": "Získajte balík na večeru, ktorý sa vám páči",
   "stand_out_with_super_like": "Vyniká s super ako",
   "3x_chance_to_get_a_match": "3x šanca získať zápas",
-  "get_supper_likes": "Získajte večere páči sa",
+  "get_supper_likes": "Získajte večere, ktoré sa vám páči",
   "get_silver_package": "Získajte strieborné balenie",
   "unlimited_likes": "Neobmedzené hodnoty",
   "send_as_many_likes_as_you_want": "Pošlite toľko rád, koľko chcete",
@@ -138,7 +138,7 @@
   "we_use_these_preferences_to_find_matches._some_match_suggestions_may_not_fall_within_your_desired_parameters": "Tieto preferencie používame na nájdenie zápasov. Niektoré návrhy zápasu nemusia spadať do požadovaných parametrov",
   "control_who_you_see": "Ovládať, koho vidíš",
   "sliver_package": "Balenie",
-  "balance_recommendations": "Rovnovážne odporúčania",
+  "balance_recommendations": "Odporúčania vyváženia",
   "see_the_most_relevant_people_to_you_(default_settings)": "Pozrite sa na vás najrelevantnejších ľudí (predvolené nastavenia)",
   "recently_active": "Nedávno aktívny",
   "see_the_most_recently_active_people_first": "Pozrite sa najskôr najskôr aktívnych ľudí",
@@ -203,7 +203,7 @@
   "future_family": "Budúca rodina",
   "education": "Vzdelávanie",
   "vaccine_for_covid": "Vakcína",
-  "personality_type": "Osobnosť",
+  "personality_type": "Typ osobnosti",
   "communication_style": "Komunikačný štýl",
   "love_languages": "Láska jazyky",
   "life_style": "Životný štýl",
@@ -220,7 +220,7 @@
   "add_company": "Pridať spoločnosť",
   "school": "Školský",
   "add_school": "Pridať školu",
-  "update_information_school": "Aktualizujte informačnú školu",
+  "update_information_school": "Aktualizovať informačnú školu",
   "school_name": "Meno školy",
   "living_in": "ŽIŤ V",
   "show_instagram_photos": "Zobraziť fotografie Instagramu",
@@ -240,7 +240,7 @@
   "interests": "Záujmy",
   "my_gender": "moje pohlavie",
   "my_orientation": "moja orientácia",
-  "version_x.y.z": "Verzia X.Y.Z",
+  "version_{number}": "Verzia {number}",
   "km": "km",
   "mi": "mikrofón",
   "live_at_{nameAddress}": "Live at {NameDress}",
@@ -285,7 +285,7 @@
   "buy_more_top_picks": "Kúpte si viac najlepších tipov",
   "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "Získajte úplný prístup k najlepším výberom, ako ste vy, posielajte neobmedzené hodnoty a ďalšie",
   "see_as_many_likes_as_you_want": "Vidíte toľko rád, koľko chcete",
-  "1_free_boost_every_month": "1 bezplatná podpora každý mesiac",
+  "1_free_boost_every_month": "1 podpora zadarmo každý mesiac",
   "choose_who_see_you": "Vyberte si, kto ťa vidí",
   "5_free_supper_likes_very_week": "5 bezplatných večere má rád veľmi týždeň",
   "you're_3x_more_likely_to_get_a_match": "Je o 3x väčšia pravdepodobnosť, že získate zápas",
@@ -294,13 +294,13 @@
   "nope": "NIE",
   "supper_like": "Večera",
   "add_living": "Pridať bývanie",
+  "create_new": "Vytvor nový",
   "99+_like": "99+ ako",
   "for_you": "Pre teba",
-  "create_new": "Vytvor nový",
   "months": "mesiace",
   "usd/months": "USD/mesiace",
   "sale": "zľava",
-  "recuring_billing,_cancel_anytime": "Rekurzia fakturácie, zrušte kedykoľvek",
+  "recuring_billing,_cancel_anytime": "Rekurencia fakturácie, zrušte kedykoľvek",
   "sale_50%": "Predaj 50%",
   "get_read_receipt": "Získajte doklad o prečítaní",
   "supper_likes": "Večera má rád",
@@ -313,10 +313,12 @@
   "get_platinum_package": "Získajte platinový balíček",
   "usd/each": "USD/každý",
   "get_gold_package": "Získajte zlatý balík",
-  "search_language": "Výhľad",
+  "search_language": "Reč",
   "please_provide_more_details_about_what_you_are_reporting": "Uveďte ďalšie podrobnosti o tom, čo hlásíte",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Ak ukončíte, budete musieť znovu zaregistrovať svoj účet a odstrániť všetky informácie.",
   "invalid_date_of_birth": "Neplatný dátum narodenia",
+  "save": "Uložiť",
+  "find_someone_that_also_looking_for_love_as_you": "Nájdite niekoho, kto tiež hľadá lásku ako vy",
   "are_you_sure_you_want_to_sign_out?": "Ste si istý, že sa chcete prihlásiť?",
   "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Kompatibilní používatelia vás budú naďalej vidieť na poslednom identifikovanom mieste.",
   "delete_my_account": "Odstrániť môj účet",
@@ -328,6 +330,18 @@
   "our_face_recognition_technology_compares_your_face_in_selfie_videos_with_photos_in_your_profile._we'll_keep_two_screenshots_from_your_selfie_video_for_as_long_as_your_account_is_live_to_test_and_manage_your_photo_verification_feature._we_will_also_keep_the_results_of_the_process_(e.g._photo_verified_or_not).": "Naša technológia rozpoznávania tváre porovnáva vašu tvár vo videách selfie s fotografiami vo vašom profile. Z vášho videa selfie budeme uchovávať dve snímky obrazovky, pokiaľ je váš účet živý na testovanie a správu vašej funkcie overovania fotografií. Výsledky procesu tiež udržiavame (napr. Overené alebo nie).",
   "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "Po dokončení overovania fotografií (zvyčajne sa dokončené do 24 hodín) uchováme vaše základné informácie o rozpoznávaní tváre alebo „šablóny“. Neskladáme vaše selfie videá.",
   "invalid_image": "Neplatný obraz",
-  "your_photo_does_not_match.please_select_a_photo_again": "Vaša fotografia sa nezhoduje. Vyberte fotografiu znova",
-  "learn_more_about_how_it_works": "Dozviete sa viac o tom, ako to funguje"
+  "your_photo_does_not_match.please_select_a_photo_again": "Vaša fotografia sa nezhoduje. Vyberte znova fotografiu",
+  "learn_more_about_how_it_works": "Dozviete sa viac o tom, ako to funguje",
+  "before_you_continue...": "Predtým, ako budete pokračovať ...",
+  "prepare_the_space": "Pripraviť priestor",
+  "choose_a_place_with_enough_light": "Vyberte si miesto s dostatočným svetlom",
+  "avoid_glare_and_backlit": "Vyvarujte sa oslnenia a podsvietenia",
+  "prepare_the_pose": "Pripravte si pózu",
+  "looking_directly_at_the_camera": "Pozerať sa priamo na fotoaparát",
+  "remove_hats,_sunglasses,_and_face_coverings": "Odstráňte klobúky, slnečné okuliare a pokrytie tváre",
+  "oh!": "Oh!",
+  "we_cannot_record_your_video._please_try_again.": "Nemôžeme zaznamenať vaše video. Prosím skúste znova.",
+  "increase_screen_brightness": "Zvýšiť jas obrazovky",
+  "photo_verified": "Overená fotografia",
+  "please_choose_a_reason": "Vyberte si dôvod"
 }
