--- a/src/locales/sv.json
+++ b/src/locales/sv.json
@@ -12,7 +12,7 @@
   "my_number_is": "Mitt nummer är",
   "phone_number": "Telefonnummer",
   "please_enter_a_valid_phone_number": "var vänlig och slå in ett giltigt telefonnummer",
-  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "När du trycker på \"Fortsätt\" skickar HeartLink en text med verifieringskod. Meddelande och datahastigheter Mat gäller.",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "När du trycker på \"Fortsätt\" skickar HeartLink en text med verifieringskod. Meddelande och datahastigheter Mate gäller.",
   "the_verified_phone_number_can_be_used_to_log_in.": "Det verifierade telefonnumret kan användas för att logga in.",
   "learn_what_happens_when_your_number_changes.": "Lär dig vad som händer när ditt nummer ändras.",
   "continue": "Fortsätta",
@@ -143,14 +143,14 @@
   "recently_active": "Nyligen aktiv",
   "see_the_most_recently_active_people_first": "Se de senast aktiva människorna först",
   "standard": "Standard",
-  "only_be_shown_to_certain_types_of_people_for_individual_recommendations": "Visas bara för vissa typer av personer för enskilda rekommendationer",
+  "only_be_shown_to_certain_types_of_people_for_individual_recommendations": "Visas bara för vissa typer av människor för enskilda rekommendationer",
   "only_people_i've_liked": "Endast människor jag gillade",
   "only_people_you_have_liked_will_see_me": "Endast människor du har gillat kommer att se mig",
   "only_wi-fi_only": "Endast Wi-Fi",
   "on_wi-fi_and_mobile_data": "På Wi-Fi och mobildata",
   "never_auto_play_videos": "Aldrig automatiskt spela videor",
   "show_me_top_picks": "Visa mig toppval",
-  "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Att slå på detta gör att du kan visas som en presenterad toppval till andra användare nära dig",
+  "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Att slå på detta gör att du kan visas som en framtida toppval till andra användare nära dig",
   "activity_status": "Aktivitetsstatus",
   "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Låt andra medlemmar se om du nyligen var aktiv under den senaste 24 timmar på Heartlink. Om du har stängt av detta kommer de inte att kunna se din nyligen aktiva status",
   "app_settings": "App inställningar",
@@ -240,7 +240,7 @@
   "interests": "Intressen",
   "my_gender": "mitt kön",
   "my_orientation": "Min orientering",
-  "version_x.y.z": "Version X.Y.Z",
+  "version_{number}": "Versionsnummer}",
   "km": "km",
   "mi": "mi",
   "live_at_{nameAddress}": "Live på {nameaddress}",
@@ -294,9 +294,9 @@
   "nope": "Napp",
   "supper_like": "Kvällsmat",
   "add_living": "Lägg till levande",
+  "create_new": "Skapa ny",
   "99+_like": "99+ som",
   "for_you": "Till dig",
-  "create_new": "Skapa ny",
   "months": "månad",
   "usd/months": "USD/månader",
   "sale": "Försäljning",
@@ -317,6 +317,8 @@
   "please_provide_more_details_about_what_you_are_reporting": "Ange mer information om vad du rapporterar",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Om du lämnar måste du registrera ditt konto igen och ta bort all information.",
   "invalid_date_of_birth": "Ogiltigt födelsedatum",
+  "save": "Spara",
+  "find_someone_that_also_looking_for_love_as_you": "Hitta någon som också letar efter kärlek som du",
   "are_you_sure_you_want_to_sign_out?": "Är du säker på att du vill logga ut?",
   "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Kompatibla användare kommer att fortsätta se dig på den sista identifierade platsen.",
   "delete_my_account": "Ta bort mitt konto",
@@ -329,5 +331,17 @@
   "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "Vi kommer att behålla din grundläggande information om ansiktsigenkänning, eller \"mallar\", efter avslutad fotoperifiering (vanligtvis slutförd inom 24 timmar). Vi lagrar inte dina selfie -videor.",
   "invalid_image": "Ogiltig bild",
   "your_photo_does_not_match.please_select_a_photo_again": "Ditt foto matchar inte. Välj ett foto igen",
-  "learn_more_about_how_it_works": "Lär dig mer om hur det fungerar"
+  "learn_more_about_how_it_works": "Lär dig mer om hur det fungerar",
+  "before_you_continue...": "Innan du fortsätter ...",
+  "prepare_the_space": "Förbered utrymmet",
+  "choose_a_place_with_enough_light": "Välj en plats med tillräckligt med ljus",
+  "avoid_glare_and_backlit": "Undvik bländning och bakgrundsbelyst",
+  "prepare_the_pose": "Förbered ställningen",
+  "looking_directly_at_the_camera": "Ser direkt på kameran",
+  "remove_hats,_sunglasses,_and_face_coverings": "Ta bort hattar, solglasögon och ansiktsbeläggningar",
+  "oh!": "åh!",
+  "we_cannot_record_your_video._please_try_again.": "Vi kan inte spela in din video. Var god försök igen.",
+  "increase_screen_brightness": "Öka skärmens ljusstyrka",
+  "photo_verified": "Foto Verified",
+  "please_choose_a_reason": "Välj en anledning"
 }
