--- a/src/locales/th.json
+++ b/src/locales/th.json
@@ -12,7 +12,7 @@
   "my_number_is": "หมายเลขของฉันคือ",
   "phone_number": "หมายเลขโทรศัพท์",
   "please_enter_a_valid_phone_number": "กรุณากรอกหมายเลขโทรศัพท์ที่ถูกต้อง",
-  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "เมื่อคุณแตะ 'ดำเนินการต่อ' HeartLink จะส่งข้อความพร้อมรหัสการยืนยัน ใช้ข้อความและอัตราข้อมูล",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "เมื่อคุณแตะ 'ดำเนินการต่อ' HeartLink จะส่งข้อความพร้อมรหัสยืนยัน ใช้ข้อความและอัตราข้อมูล",
   "the_verified_phone_number_can_be_used_to_log_in.": "หมายเลขโทรศัพท์ที่ผ่านการตรวจสอบสามารถใช้ในการเข้าสู่ระบบ",
   "learn_what_happens_when_your_number_changes.": "เรียนรู้ว่าจะเกิดอะไรขึ้นเมื่อหมายเลขของคุณเปลี่ยนไป",
   "continue": "ดำเนินการต่อ",
@@ -28,7 +28,7 @@
   "welcome_to_heartLink": "ยินดีต้อนรับสู่ Heartlink",
   "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "โปรดปฏิบัติตามกฎของเราเพื่อให้มีความสนุกสนานมากขึ้นและสร้างชุมชนที่ยอดเยี่ยมด้วยกัน",
   "be_yourself": "เป็นตัวของตัวเอง",
-  "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "ตรวจสอบให้แน่ใจว่าภาพถ่ายอายุและชีวภาพของคุณเป็นจริงกับสิ่งที่คุณเป็น",
+  "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "ตรวจสอบให้แน่ใจว่ารูปถ่ายอายุและชีวภาพของคุณเป็นจริงกับสิ่งที่คุณเป็น",
   "stay_safe": "อยู่อย่างปลอดภัย",
   "don't_be_too_quick_to_give_out_personal_information.": "อย่าเร็วเกินไปที่จะให้ข้อมูลส่วนบุคคล",
   "date_safety_guidelines": "แนวทางความปลอดภัยวันที่",
@@ -240,7 +240,7 @@
   "interests": "ความสนใจ",
   "my_gender": "เพศของฉัน",
   "my_orientation": "การปฐมนิเทศของฉัน",
-  "version_x.y.z": "เวอร์ชัน x.y.z",
+  "version_{number}": "เวอร์ชัน {number}",
   "km": "กม.",
   "mi": "MI",
   "live_at_{nameAddress}": "อยู่ที่ {nameaddress}",
@@ -275,28 +275,28 @@
   "in_bed": "นอนอยู่บนเตียง",
   "verified_photo": "ภาพถ่ายที่ผ่านการตรวจสอบแล้ว",
   "likes_you": "ชอบคุณ",
-  "prioritized_likes": "ไลค์ลำดับความสำคัญ",
+  "prioritized_likes": "ไลค์จัดลำดับความสำคัญ",
   "everyone_you_like_will_see_you_soon": "ทุกคนที่คุณชอบจะพบคุณเร็ว ๆ นี้",
   "match_instantly_with_people_who_already_like_you": "จับคู่กับคนที่ชอบคุณอยู่แล้วทันที",
   "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "รวมถึงตัวเลือกด้านบน, ไลค์ไม่ จำกัด , 1 ฟรีเพิ่มทุกเดือน, อาหารมื้อเย็นฟรี 5 รายการเช่นทุกสัปดาห์, ย้อนกลับและหนังสือเดินทาง",
   "message_before_matching": "ข้อความก่อนจับคู่",
-  "99+_people_already_like_you": "99+ คนชอบคุณแล้ว",
+  "99+_people_already_like_you": "99+ คนชอบคุณอยู่แล้ว",
   "see_who_likes_you_and_match_instantly": "ดูว่าใครชอบคุณและจับคู่ทันที",
   "buy_more_top_picks": "ซื้อตัวเลือกยอดนิยมเพิ่มเติม",
   "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "รับการเข้าถึงตัวเลือกยอดนิยมอย่างคุณส่งไลค์ไม่ จำกัด และอื่น ๆ",
   "see_as_many_likes_as_you_want": "เห็นชอบมากเท่าที่คุณต้องการ",
   "1_free_boost_every_month": "1 เพิ่มฟรีทุกเดือน",
-  "choose_who_see_you": "เลือกใครเห็นคุณ",
+  "choose_who_see_you": "เลือกใครพบคุณ",
   "5_free_supper_likes_very_week": "5 อาหารมื้อเย็นฟรี 5 สัปดาห์",
-  "you're_3x_more_likely_to_get_a_match": "คุณมีแนวโน้มที่จะได้รับการจับคู่มากกว่า 3x",
+  "you're_3x_more_likely_to_get_a_match": "คุณมีแนวโน้มที่จะได้รับการแข่งขันมากกว่า 3x",
   "online_now": "ออนไลน์ตอนนี้",
   "like": "ชอบ",
   "nope": "ไม่",
   "supper_like": "อาหารมื้อเย็นชอบ",
   "add_living": "เพิ่มการใช้ชีวิต",
+  "create_new": "สร้างใหม่",
   "99+_like": "99+ ชอบ",
   "for_you": "สำหรับคุณ",
-  "create_new": "สร้างใหม่",
   "months": "เดือน",
   "usd/months": "USD/เดือน",
   "sale": "ขาย",
@@ -317,6 +317,8 @@
   "please_provide_more_details_about_what_you_are_reporting": "โปรดให้รายละเอียดเพิ่มเติมเกี่ยวกับสิ่งที่คุณกำลังรายงาน",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "หากคุณออกจากคุณจะต้องลงทะเบียนบัญชีของคุณอีกครั้งและลบข้อมูลทั้งหมด",
   "invalid_date_of_birth": "วันเดือนปีเกิดไม่ถูกต้อง",
+  "save": "บันทึก",
+  "find_someone_that_also_looking_for_love_as_you": "หาคนที่มองหาความรักเหมือนคุณ",
   "are_you_sure_you_want_to_sign_out?": "คุณแน่ใจว่าคุณต้องการที่จะออกจากระบบ?",
   "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "ผู้ใช้ที่เข้ากันได้จะยังคงพบคุณในตำแหน่งที่ระบุล่าสุด",
   "delete_my_account": "ลบบัญชีของฉัน",
@@ -329,5 +331,17 @@
   "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "เราจะเก็บข้อมูลการจดจำใบหน้าขั้นพื้นฐานของคุณหรือ \"แม่แบบ\" เมื่อเสร็จสิ้นการตรวจสอบภาพถ่าย (โดยปกติจะเสร็จสิ้นภายใน 24 ชั่วโมง) เราไม่เก็บวิดีโอเซลฟี่ของคุณ",
   "invalid_image": "ภาพที่ไม่ถูกต้อง",
   "your_photo_does_not_match.please_select_a_photo_again": "รูปภาพของคุณไม่ตรงกันโปรดเลือกรูปภาพอีกครั้ง",
-  "learn_more_about_how_it_works": "เรียนรู้เพิ่มเติมเกี่ยวกับวิธีการทำงาน"
+  "learn_more_about_how_it_works": "เรียนรู้เพิ่มเติมเกี่ยวกับวิธีการทำงาน",
+  "before_you_continue...": "ก่อนที่คุณจะดำเนินการต่อ ...",
+  "prepare_the_space": "เตรียมพื้นที่",
+  "choose_a_place_with_enough_light": "เลือกสถานที่ที่มีแสงเพียงพอ",
+  "avoid_glare_and_backlit": "หลีกเลี่ยงแสงจ้าและแสงไฟ",
+  "prepare_the_pose": "เตรียมท่าทาง",
+  "looking_directly_at_the_camera": "มองไปที่กล้องโดยตรง",
+  "remove_hats,_sunglasses,_and_face_coverings": "ถอดหมวกแว่นกันแดดและฝาครอบใบหน้า",
+  "oh!": "โอ้!",
+  "we_cannot_record_your_video._please_try_again.": "เราไม่สามารถบันทึกวิดีโอของคุณได้ กรุณาลองอีกครั้ง.",
+  "increase_screen_brightness": "เพิ่มความสว่างของหน้าจอ",
+  "photo_verified": "ตรวจสอบรูปภาพ",
+  "please_choose_a_reason": "โปรดเลือกเหตุผล"
 }
