--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -53,7 +53,7 @@
   "skip": "Atlamak",
   "my_interests_are": "İlgi alanlarım",
   "let_everyone_know_what_you're_passionate_about,_by_adding_it_to_your_profile": "Profilinize ekleyerek herkese tutkulu olduğunuzu herkese bildirin",
-  "show_me_gender": "Bana cinsiyet göster",
+  "show_me_gender": "Bana Cinsiyeti Göster",
   "my_photos_are": "Fotoğraflarım",
   "add_at_least_2_photos_to_continue": "Devam etmek için en az 2 fotoğraf ekleyin",
   "enable_location": "Yeri etkinleştir",
@@ -64,7 +64,7 @@
   "you_location_will_be_used_to_show_potential_matches_near_you.": "Konumunuz, yakınınızdaki potansiyel maçları göstermek için kullanılacaktır.",
   "want_to_avoid_someone_you_know_on_heartLink?": "HeartLink'te tanıdığınız birinden kaçınmak ister misiniz?",
   "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Kolaydır - Kaçınmak istediğiniz kimi seçmek için bu özelliği kullanırken cihazınızın HeartLink ile iletişimini paylaşın",
-  "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "İletişiminizin sağladığınız Infor ile bir hesabı varsa, birbirinizi görmenizi engellemek için tıkanmış kişinizi saklayacağız. Ayarlarınızda bizimle paylaşmayı bırakabilirsiniz.",
+  "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "İletişiminizin sağladığınız Infor ile bir hesabı varsa, birbirinizi görmenizi engellemek için engellenen kişinizi saklayacağız. Ayarlarınızda bizimle paylaşmayı bırakabilirsiniz.",
   "learn_more_here,_including_how_heartLink_process_your_contacts": "HeartLink'in kişilerinizi nasıl işlediğini de içeren daha fazla bilgi edinin",
   "share_{nameUser}_profile": "Paylaş {NameUser} Profili",
   "see_what_a_friend_thinks": "Bir arkadaşın ne düşündüğünü gör",
@@ -75,7 +75,7 @@
   "please_choose_1_reason": "Lütfen 1 Sebep Seçin",
   "we_won't_let_puddink_know_that_you_reported_them": "Puddink'e onları bildirdiğini bilmesine izin vermeyeceğiz",
   "can_you_tell_us_what_happened?": "Bize ne olduğunu söyleyebilir misin?",
-  "would_you_mind_sharing_more_details_with_us?": "Bizimle daha fazla ayrıntı paylaşmak ister misiniz?",
+  "would_you_mind_sharing_more_details_with_us?": "Bizimle daha fazla ayrıntı paylaşır mısınız?",
   "add_a_comment": "Yorum ekle",
   "are_you_sure_about_the_content_of_this_report?": "Bu raporun içeriğinden emin misiniz?",
   "let's_find_people_same_with_your_vibe...": "Vibe ile aynı insanları bulalım ...",
@@ -90,7 +90,7 @@
   "get_read_receipts": "Okuma Makbuzları Alın",
   "get_boost_profile": "Boost Profili Alın",
   "get_supper_like": "Akşam yemeği gibi",
-  "silver_package": "Gümüş paket",
+  "silver_package": "Gümüş paketi",
   "gold_package": "Altın paketi",
   "level_up_everyone_action_you_take_on_heartLink": "HeartLink'te aldığınız herkesi dengeleyin",
   "get_read_receipt_package": "Okuma Makbuzu Paketi Alın",
@@ -105,10 +105,10 @@
   "boost_my_profile": "Profilimi artır",
   "get_a_gold_package": "Altın Paketi Alın",
   "5_free_supper_like_weekly": "Haftalık gibi 5 ücretsiz akşam yemeği",
-  "get_supper_likes_package": "Akşam Yemeği Paketi Sever",
+  "get_supper_likes_package": "Akşam Yemeği Paketi Al",
   "stand_out_with_super_like": "Süper gibi öne çık",
   "3x_chance_to_get_a_match": "Bir maç alma şansı 3x",
-  "get_supper_likes": "Akşam Yemeği Sevin",
+  "get_supper_likes": "Akşam Yemeği Beğenme",
   "get_silver_package": "Gümüş Paketi Alın",
   "unlimited_likes": "Sınırsız beğeniler",
   "send_as_many_likes_as_you_want": "İstediğiniz kadar çok beğeni gönder",
@@ -240,13 +240,13 @@
   "interests": "İlgi alanları",
   "my_gender": "Cinsiyetim",
   "my_orientation": "benim yönelim",
-  "version_x.y.z": "Sürüm X.Y.Z",
+  "version_{number}": "Versiyon numarası}",
   "km": "km",
   "mi": "mi",
   "live_at_{nameAddress}": "{Nameaddress}",
   "{numberKilometers}_{unit}_away": "{NumberKilometers} {Unit} Away",
   "verified": "Doğrulanmış",
-  "heartLink": "Heartlink",
+  "heartLink": "HeartLink",
   "don't_worry_-_we_won't_tell_this_person": "Endişelenme - bu kişiye söylemeyeceğiz",
   "finding_people_near_you...": "Yakınınızdaki insanları bulmak ...",
   "let's_be_friend": "Arkadaş olalım",
@@ -294,9 +294,9 @@
   "nope": "HAYIR",
   "supper_like": "Akşam Yemeği",
   "add_living": "Yaşamak eklemek",
+  "create_new": "Yeni oluşturmak",
   "99+_like": "99+",
   "for_you": "Senin için",
-  "create_new": "Yeni oluşturmak",
   "months": "aylar",
   "usd/months": "USD/Ay",
   "sale": "Satış",
@@ -317,6 +317,8 @@
   "please_provide_more_details_about_what_you_are_reporting": "Lütfen rapor ettiğiniz hakkında daha fazla bilgi verin",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Çıkarsanız, hesabınızı yeniden kaydetmeniz ve tüm bilgileri silmeniz gerekir.",
   "invalid_date_of_birth": "Geçersiz doğum tarihi",
+  "save": "Kaydetmek",
+  "find_someone_that_also_looking_for_love_as_you": "Senin gibi aşk arayan birini bul",
   "are_you_sure_you_want_to_sign_out?": "Oturum açmak istediğinden emin misin?",
   "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Uyumlu kullanıcılar sizi en son belirlenen yerde görmeye devam edecektir.",
   "delete_my_account": "Hesabımı sil",
@@ -329,5 +331,17 @@
   "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "Fotoğraf doğrulamasını tamamladıktan sonra (genellikle 24 saat içinde tamamlanmıştır) temel yüz tanıma bilgilerinizi veya \"şablonları\" tutacağız. Selfie videolarınızı saklamıyoruz.",
   "invalid_image": "Geçersiz resim",
   "your_photo_does_not_match.please_select_a_photo_again": "Fotoğrafınız eşleşmiyor. Lütfen tekrar bir fotoğraf seçin",
-  "learn_more_about_how_it_works": "Nasıl çalıştığı hakkında daha fazla bilgi edinin"
+  "learn_more_about_how_it_works": "Nasıl çalıştığı hakkında daha fazla bilgi edinin",
+  "before_you_continue...": "Devam etmeden önce ...",
+  "prepare_the_space": "Alanı hazırlayın",
+  "choose_a_place_with_enough_light": "Yeterli ışığa sahip bir yer seçin",
+  "avoid_glare_and_backlit": "Parlamadan ve arkadan aydınlatmalı",
+  "prepare_the_pose": "Pozu hazırlayın",
+  "looking_directly_at_the_camera": "Doğrudan kameraya bakmak",
+  "remove_hats,_sunglasses,_and_face_coverings": "Şapkaları, güneş gözlüklerini ve yüz kaplamalarını çıkarın",
+  "oh!": "Ah!",
+  "we_cannot_record_your_video._please_try_again.": "Videonuzu kaydedemeyiz. Lütfen tekrar deneyin.",
+  "increase_screen_brightness": "Ekran parlaklığını artırın",
+  "photo_verified": "Fotoğraf doğrulandı",
+  "please_choose_a_reason": "Lütfen Bir Sebep Seçin"
 }
