--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -12,7 +12,7 @@
   "my_number_is": "Мій номер",
   "phone_number": "Номер телефону",
   "please_enter_a_valid_phone_number": "Будь ласка введіть дійсний номер телефону",
-  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Коли ви натискаєте \"продовження\", Heartlink надішле текст із кодом підтвердження. Застосовується повідомлення та швидкість передачі даних.",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Коли ви натискаєте \"продовження\", Heartlink надішле текст із кодом підтвердження. Застосовується повідомлення про повідомлення та швидкість передачі даних.",
   "the_verified_phone_number_can_be_used_to_log_in.": "Перевірений номер телефону можна використовувати для входу.",
   "learn_what_happens_when_your_number_changes.": "Дізнайтеся, що відбувається, коли змінюється ваш номер.",
   "continue": "Продовжувати",
@@ -64,7 +64,7 @@
   "you_location_will_be_used_to_show_potential_matches_near_you.": "Ви місце розташування будуть використані для показу потенційних матчів поблизу вас.",
   "want_to_avoid_someone_you_know_on_heartLink?": "Хочете уникнути когось, кого ви знаєте на Heartlink?",
   "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Це легко - поділіться контактом свого пристрою з серцевою лінією при використанні цієї функції, щоб вибрати кого ви хочете уникнути",
-  "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Ми зберігаємо ваш заблокований контакт, щоб заважати бачити один одного, якщо у вашому контакті є рахунок з тією ж інформацією, яку ви надаєте. Ви можете перестати ділитися з нами у своїх налаштуваннях.",
+  "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Ми зберігаємо ваш заблокований контакт, щоб не допустити бачити один одного, якщо ваш контакт має обліковий запис із тією ж інформацією, яку ви надаєте. Ви можете перестати ділитися з нами у своїх налаштуваннях.",
   "learn_more_here,_including_how_heartLink_process_your_contacts": "Дізнайтеся більше тут, включаючи те, як Heartlink обробляє ваші контакти",
   "share_{nameUser}_profile": "Поділитися {nameUser}",
   "see_what_a_friend_thinks": "Подивіться, що думає друг",
@@ -88,7 +88,7 @@
   "new_connections": "Нові зв’язки",
   "messages": "Повідомлення",
   "get_read_receipts": "Читайте квитанції",
-  "get_boost_profile": "Отримайте профіль Boost",
+  "get_boost_profile": "Отримайте профіль підсилення",
   "get_supper_like": "Отримайте вечерю, як",
   "silver_package": "Срібний пакет",
   "gold_package": "Золотий пакет",
@@ -240,7 +240,7 @@
   "interests": "Інтереси",
   "my_gender": "Моя стать",
   "my_orientation": "Моя орієнтація",
-  "version_x.y.z": "Версія X.Y.Z",
+  "version_{number}": "Версія {номер}",
   "km": "км",
   "mi": "мимо",
   "live_at_{nameAddress}": "Жити на {nameaddress}",
@@ -287,16 +287,16 @@
   "see_as_many_likes_as_you_want": "Побачте якомога більше лайків",
   "1_free_boost_every_month": "1 безкоштовний приріст щомісяця",
   "choose_who_see_you": "Виберіть, хто бачиш вас",
-  "5_free_supper_likes_very_week": "5 безкоштовна вечеря любить дуже тиждень",
+  "5_free_supper_likes_very_week": "5 безкоштовна вечеря дуже подобається тиждень",
   "you're_3x_more_likely_to_get_a_match": "Ви 3 рази більше шансів отримати матч",
   "online_now": "В Інтернеті зараз",
   "like": "ЛЮБЛЮ",
   "nope": "Нія",
   "supper_like": "Вечеря як",
   "add_living": "Додайте життя",
+  "create_new": "Створити новий",
   "99+_like": "99+",
   "for_you": "Для вас",
-  "create_new": "Створити новий",
   "months": "місяці",
   "usd/months": "USD/місяці",
   "sale": "Розпродаж",
@@ -313,10 +313,12 @@
   "get_platinum_package": "Отримайте платиновий пакет",
   "usd/each": "USD/кожен",
   "get_gold_package": "Отримайте золотий пакет",
-  "search_language": "Мови пошуку",
+  "search_language": "Пошук мови",
   "please_provide_more_details_about_what_you_are_reporting": "Будь ласка, надайте детальніше про те, про що ви повідомляєте",
-  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Якщо ви вийдете, вам доведеться повторно реєструвати свій обліковий запис та видалити всю інформацію.",
+  "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Якщо ви вийшли, вам доведеться повторно реєструвати свій обліковий запис та видалити всю інформацію.",
   "invalid_date_of_birth": "Недійсна дата народження",
+  "save": "Заощадити",
+  "find_someone_that_also_looking_for_love_as_you": "Знайдіть когось, хто також шукає кохання як ви",
   "are_you_sure_you_want_to_sign_out?": "Ви впевнені, що хочете підписатись?",
   "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Сумісні користувачі продовжуватимуть бачити вас в останньому ідентифікованому місці.",
   "delete_my_account": "Видаліть мій рахунок",
@@ -327,7 +329,19 @@
   "how_it_works": "Як це працює",
   "our_face_recognition_technology_compares_your_face_in_selfie_videos_with_photos_in_your_profile._we'll_keep_two_screenshots_from_your_selfie_video_for_as_long_as_your_account_is_live_to_test_and_manage_your_photo_verification_feature._we_will_also_keep_the_results_of_the_process_(e.g._photo_verified_or_not).": "Наша технологія розпізнавання обличчя порівнює ваше обличчя у селфі -відео з фотографіями у вашому профілі. Ми зберігаємо два скріншоти з вашого відео з селфі, поки ваш обліковий запис буде в прямому ефірі для тестування та управління функцією перевірки фотографій. Ми також збережемо результати процесу (наприклад, фотографія перевірена чи ні).",
   "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "Після завершення перевірки фотографій ми збережемо вашу основну інформацію про розпізнавання обличчя або \"шаблони\" (зазвичай завершені протягом 24 годин). Ми не зберігаємо ваші селфі відео.",
-  "invalid_image": "Недійсне зображення",
-  "your_photo_does_not_match.please_select_a_photo_again": "Ваша фотографія не відповідає. Будь ласка, знову виберіть фотографію",
-  "learn_more_about_how_it_works": "Дізнайтеся більше про те, як це працює"
+  "invalid_image": "Недійне зображення",
+  "your_photo_does_not_match.please_select_a_photo_again": "Ваша фотографія не відповідає. Будь ласка, виберіть фотографію ще раз",
+  "learn_more_about_how_it_works": "Дізнайтеся більше про те, як це працює",
+  "before_you_continue...": "Перш ніж продовжувати ...",
+  "prepare_the_space": "Підготуйте простір",
+  "choose_a_place_with_enough_light": "Виберіть місце з достатньою кількістю світла",
+  "avoid_glare_and_backlit": "Уникайте відблисків та підсвічування",
+  "prepare_the_pose": "Підготуйте позу",
+  "looking_directly_at_the_camera": "Дивлячись прямо на камеру",
+  "remove_hats,_sunglasses,_and_face_coverings": "Видаліть шапки, сонцезахисні окуляри та покриття для обличчя",
+  "oh!": "О!",
+  "we_cannot_record_your_video._please_try_again.": "Ми не можемо записати ваше відео. Будь ласка спробуйте ще раз.",
+  "increase_screen_brightness": "Збільшити яскравість екрану",
+  "photo_verified": "Фото перевірено",
+  "please_choose_a_reason": "Будь ласка, виберіть причину"
 }
