--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -3,7 +3,7 @@
   "we_hope_you_have_a_sweet_time_here": "Chúng tôi hy vọng bạn có một thời gian ngọt ngào ở đây",
   "log_in_with_google": "Đăng nhập bằng Google",
   "log_in_with_facebook": "Đăng nhập Facebook",
-  "log_in_with_phone_number": "Đăng nhập bằng số điện thoại",
+  "log_in_with_phone_number": "Đăng nhập số điện thoại",
   "trouble_logging_in?": "Rắc rối đăng nhập?",
   "by_clicking_'login',_you_agree_with_our_terms._learn_how_we_process_your_data_in_our": "Bằng cách nhấp vào 'Đăng nhập', bạn đồng ý với các điều khoản của chúng tôi. Tìm hiểu cách chúng tôi xử lý dữ liệu của bạn trong",
   "privacy_policy": "Chính sách bảo mật",
@@ -12,7 +12,7 @@
   "my_number_is": "Số của tôi là",
   "phone_number": "Số điện thoại",
   "please_enter_a_valid_phone_number": "Xin vui lòng nhập một số điện thoại hợp lệ",
-  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Khi bạn nhấn 'Tiếp tục', HeartLink sẽ gửi một văn bản với mã xác minh. Tốc độ thông điệp và dữ liệu áp dụng.",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "Khi bạn nhấn 'Tiếp tục', HeartLink sẽ gửi một văn bản với mã xác minh. Thông điệp và tốc độ dữ liệu áp dụng.",
   "the_verified_phone_number_can_be_used_to_log_in.": "Số điện thoại được xác minh có thể được sử dụng để đăng nhập.",
   "learn_what_happens_when_your_number_changes.": "Tìm hiểu những gì xảy ra khi số của bạn thay đổi.",
   "continue": "Tiếp tục",
@@ -22,7 +22,7 @@
   "invalid_code._please_try_again": "Mã không hợp lệ. Vui lòng thử lại",
   "what's_your_email?": "Email của bạn là gì?",
   "don't_lose_access_to_your_account,_verify_your_email": "Đừng mất quyền truy cập vào tài khoản của bạn, xác minh email của bạn",
-  "verify_instantly_by_connecting_your_google_account": "Xác minh ngay lập tức bằng cách kết nối tài khoản Google của bạn",
+  "verify_instantly_by_connecting_xyour_google_account": "Xác minh ngay lập tức bằng cách kết nối tài khoản Google của bạn",
   "i_want_to_receive_news,_updates_and_offers_from_heartLink": "Tôi muốn nhận tin tức, cập nhật và cung cấp từ HeartLink",
   "enter_email": "Nhập email",
   "welcome_to_heartLink": "Chào mừng bạn đến với Heartlink",
@@ -47,7 +47,7 @@
   "my_birthday_is": "Ngày sinh nhật tôi là",
   "your_age_will_be_public": "Tuổi của bạn sẽ được công khai",
   "i_am_a": "tôi là",
-  "show_{nameInformation}_on_my_profile": "Hiển thị {nameinformation} trên hồ sơ của tôi",
+  "show_{nameInformation}_on_my_profile": "Hiển thị {nameInformation} trên hồ sơ của tôi",
   "my_sexual_orientation_is": "Xu hướng tình dục của tôi là",
   "select_up_to_3": "Chọn tối đa 3",
   "skip": "Nhảy",
@@ -66,9 +66,9 @@
   "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Thật dễ dàng - Chia sẻ liên hệ của thiết bị với Heartlink khi sử dụng tính năng này để chọn người bạn muốn tránh",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Chúng tôi sẽ lưu trữ liên hệ bị chặn của bạn để ngăn bạn nhìn thấy nhau nếu liên hệ của bạn có tài khoản có cùng một thông tin bạn cung cấp. Bạn có thể ngừng chia sẻ với chúng tôi trong cài đặt của bạn.",
   "learn_more_here,_including_how_heartLink_process_your_contacts": "Tìm hiểu thêm ở đây, bao gồm cả cách thức xử lý trái tim của các liên hệ của bạn",
-  "share_{nameUser}_profile": "Chia sẻ {nameuser} Hồ sơ",
+  "share_{nameUser}_profile": "Chia sẻ {nameUser} Hồ sơ",
   "see_what_a_friend_thinks": "Xem những gì một người bạn nghĩ",
-  "report_{nameUser}": "Báo cáo {nameuser}",
+  "report_{nameUser}": "Báo cáo {nameUser}",
   "away": "xa",
   "my_anthem": "QUỐC CA CỦA TÔI",
   "what_is_the_reason_for_your_report?": "Lý do cho báo cáo của bạn là gì?",
@@ -240,10 +240,10 @@
   "interests": "Lợi ích",
   "my_gender": "Giới tính của tôi",
   "my_orientation": "định hướng của tôi",
-  "version_x.y.z": "Phiên bản X.Y.Z",
+  "version_{number}": "Phiên bản {number}",
   "km": "km",
   "mi": "mi",
-  "live_at_{nameAddress}": "Trực tiếp tại {nameaddress}",
+  "live_at_{nameAddress}": "Trực tiếp tại {nameAddress}",
   "{numberKilometers}_{unit}_away": "{numberKilometers} {unit}",
   "verified": "Đã xác minh",
   "heartLink": "Liên kết trái tim",
@@ -277,7 +277,7 @@
   "likes_you": "THÍCH BẠN",
   "prioritized_likes": "Thích ưu tiên",
   "everyone_you_like_will_see_you_soon": "Mọi người bạn thích sẽ sớm gặp lại bạn",
-  "match_instantly_with_people_who_already_like_you": "Phù hợp ngay lập tức với những người đã thích bạn",
+  "match_instantly_with_people_who_already_like_you": "Phù hợp ngay với những người đã thích bạn",
   "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Bao gồm các lựa chọn hàng đầu, lượt thích không giới hạn, tăng 1 free mỗi tháng, 5 bữa ăn tối miễn phí như mỗi tuần, tua lại và hộ chiếu",
   "message_before_matching": "Tin nhắn trước khi khớp",
   "99+_people_already_like_you": "Hơn 99 người đã thích bạn",
@@ -290,13 +290,13 @@
   "5_free_supper_likes_very_week": "5 Thích bữa tối miễn phí rất nhiều tuần",
   "you're_3x_more_likely_to_get_a_match": "Bạn có nhiều khả năng nhận được một trận đấu hơn gấp 3 lần",
   "online_now": "Trực tuyến ngay bây giờ",
-  "like": "GIỐNG",
+  "like": "Thích",
   "nope": "KHÔNG",
   "supper_like": "Bữa ăn tối như",
   "add_living": "Thêm cuộc sống",
+  "create_new": "Tạo mới",
   "99+_like": "99+ Thích",
   "for_you": "Cho bạn",
-  "create_new": "Tạo mới",
   "months": "tháng",
   "usd/months": "USD/tháng",
   "sale": "Doanh thu",
@@ -317,17 +317,31 @@
   "please_provide_more_details_about_what_you_are_reporting": "Vui lòng cung cấp thêm chi tiết về những gì bạn đang báo cáo",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Nếu bạn thoát, bạn sẽ phải đăng ký lại tài khoản của mình và xóa tất cả thông tin.",
   "invalid_date_of_birth": "Ngày sinh không hợp lệ",
+  "save": "Cứu",
+  "find_someone_that_also_looking_for_love_as_you": "Tìm một người cũng đang tìm kiếm tình yêu như bạn",
   "are_you_sure_you_want_to_sign_out?": "bạn có chắc chắn muốn đăng xuất không?",
   "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Người dùng tương thích sẽ tiếp tục gặp bạn ở vị trí được xác định cuối cùng.",
   "delete_my_account": "Xóa tài khoản của tôi đi",
   "if_you_want_to_keep_the_account_but_not_visible_to_others,_you_can_choose_to_hide_the_account._you_can_disable_this_feature_in_the_settings.": "Nếu bạn muốn giữ tài khoản nhưng không hiển thị cho người khác, bạn có thể chọn ẩn tài khoản. Bạn có thể vô hiệu hóa tính năng này trong cài đặt.",
   "please_verify": "Xin vui lòng xác minh",
   "help_us_protect_the_tinder_community_by_proving_you're_using_an_original_photo._you_just_need_to_record_a_selfie_video._if_your_selfie_video_matches_your_profile_photo,_you'll_be_verified!": "Giúp chúng tôi bảo vệ cộng đồng Tinder bằng cách chứng minh bạn đang sử dụng ảnh gốc. Bạn chỉ cần ghi lại một video selfie. Nếu video selfie của bạn phù hợp với ảnh hồ sơ của bạn, bạn sẽ được xác minh!",
-  "maybe_later": "Có lẽ sau này",
+  "maybe_later": "Có lẽ đi sau",
   "how_it_works": "Làm thế nào nó hoạt động",
   "our_face_recognition_technology_compares_your_face_in_selfie_videos_with_photos_in_your_profile._we'll_keep_two_screenshots_from_your_selfie_video_for_as_long_as_your_account_is_live_to_test_and_manage_your_photo_verification_feature._we_will_also_keep_the_results_of_the_process_(e.g._photo_verified_or_not).": "Công nghệ nhận dạng khuôn mặt của chúng tôi so sánh khuôn mặt của bạn trong video selfie với ảnh trong hồ sơ của bạn. Chúng tôi sẽ giữ hai ảnh chụp màn hình từ video selfie của bạn miễn là tài khoản của bạn được trực tiếp để kiểm tra và quản lý tính năng xác minh ảnh của bạn. Chúng tôi cũng sẽ giữ kết quả của quá trình (ví dụ: ảnh được xác minh hoặc không).",
-  "we'll_keep_your_basic_facial_recognition_information,_or_templates_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "Chúng tôi sẽ giữ thông tin nhận dạng khuôn mặt cơ bản của bạn hoặc mẫu, sau khi hoàn thành xác minh ảnh (thường được hoàn thành trong vòng 24 giờ). Chúng tôi không lưu trữ video selfie của bạn.",
+  "we'll_keep_your_basic_facial_recognition_information,_or_templates,_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "Chúng tôi sẽ giữ thông tin nhận dạng khuôn mặt cơ bản của bạn hoặc Mẫu, sau khi hoàn thành xác minh ảnh (thường được hoàn thành trong vòng 24 giờ). Chúng tôi không lưu trữ video selfie của bạn.",
   "invalid_image": "Hình ảnh không hợp lệ",
   "your_photo_does_not_match.please_select_a_photo_again": "Ảnh của bạn không khớp. Xin vui lòng chọn ảnh một lần nữa",
-  "learn_more_about_how_it_works": "Tìm hiểu thêm về cách nó hoạt động"
+  "learn_more_about_how_it_works": "Tìm hiểu thêm về cách nó hoạt động",
+  "before_you_continue...": "Trước khi bạn tiếp tục ...",
+  "prepare_the_space": "Chuẩn bị không gian",
+  "choose_a_place_with_enough_light": "Chọn một nơi có đủ ánh sáng",
+  "avoid_glare_and_backlit": "Tránh ánh sáng chói và đèn nền",
+  "prepare_the_pose": "Chuẩn bị tư thế",
+  "looking_directly_at_the_camera": "Nhìn thẳng vào máy ảnh",
+  "remove_hats,_sunglasses,_and_face_coverings": "Loại bỏ mũ, kính râm và lớp phủ mặt",
+  "oh!": "Ồ!",
+  "we_cannot_record_your_video._please_try_again.": "Chúng tôi không thể ghi lại video của bạn. Vui lòng thử lại.",
+  "increase_screen_brightness": "Tăng độ sáng màn hình",
+  "photo_verified": "Ảnh xác minh",
+  "please_choose_a_reason": "Vui lòng chọn một lý do"
 }
