--- a/src/locales/zh-rTW.json
+++ b/src/locales/zh-rTW.json
@@ -12,7 +12,7 @@
   "my_number_is": "我的電話號碼是",
   "phone_number": "電話號碼",
   "please_enter_a_valid_phone_number": "請輸入一個有效的電話號碼",
-  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "當您點擊“繼續”時，HeartLink將發送帶有驗證代碼的文本。消息和數據速率適用。",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "當您點擊“繼續”時，HeartLink將發送帶有驗證代碼的文本。消息和數據率伴侶適用。",
   "the_verified_phone_number_can_be_used_to_log_in.": "經過驗證的電話號碼可用於登錄。",
   "learn_what_happens_when_your_number_changes.": "了解當您的數字更改時會發生什麼。",
   "continue": "繼續",
@@ -28,7 +28,7 @@
   "welcome_to_heartLink": "歡迎來到Heartlink",
   "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "請遵守我們的規則，以獲得更多樂趣，並共同建立一個偉大的社區",
   "be_yourself": "做你自己",
-  "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "確保您的照片，年齡和生物忠於您的身份",
+  "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "確保您的照片，年齡和生物對自己是誰",
   "stay_safe": "注意安全",
   "don't_be_too_quick_to_give_out_personal_information.": "不要太快地提供個人信息。",
   "date_safety_guidelines": "日期安全指南",
@@ -43,7 +43,7 @@
   "apply": "申請",
   "my_name_is": "我的名字是",
   "your_name": "你的名字",
-  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "這就是它將出現在心臟鏈接中的方式，您將無法更改它",
+  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "這就是它會出現在心臟鏈接中的方式，您將無法更改它",
   "my_birthday_is": "我的生日是",
   "your_age_will_be_public": "您的年齡將是公開的",
   "i_am_a": "我是一個",
@@ -55,7 +55,7 @@
   "let_everyone_know_what_you're_passionate_about,_by_adding_it_to_your_profile": "通過將其添加到您的個人資料中，讓所有人都知道您對您的熱情",
   "show_me_gender": "告訴我性別",
   "my_photos_are": "我的照片是",
-  "add_at_least_2_photos_to_continue": "至少添加2張照片繼續",
+  "add_at_least_2_photos_to_continue": "添加至少2張照片以繼續",
   "enable_location": "啟用位置",
   "you_will_need_to_enable_your_location_order_to_use_heartLinks": "您將需要啟用您的位置訂單才能使用HeartLinks",
   "allow_location": "允許位置",
@@ -136,7 +136,7 @@
   "age_range": "年齡範圍",
   "show_me": "給我看看",
   "we_use_these_preferences_to_find_matches._some_match_suggestions_may_not_fall_within_your_desired_parameters": "我們使用這些偏好來查找匹配項。一些匹配建議可能不屬於您所需的參數",
-  "control_who_you_see": "控制您看到的人",
+  "control_who_you_see": "控制你看到的人",
   "sliver_package": "SLIVER包",
   "balance_recommendations": "平衡建議",
   "see_the_most_relevant_people_to_you_(default_settings)": "查看您最相關的人（默認設置）",
@@ -188,7 +188,7 @@
   "do_you_want_to_have_children?": "你想生孩子嗎？",
   "have_you_been_vaccinated_yet?": "您已經接種疫苗了嗎？",
   "what_is_your_personality_type?": "您的性格類型是什麼？",
-  "what_is_your_communication_style?": "您的溝通方式是什麼？",
+  "what_is_your_communication_style?": "您的溝通風格是什麼？",
   "when_love,_what_do_you_like_to_receive?": "當愛什麼時候，您喜歡收到什麼？",
   "style_of_life": "生活方式",
   "do_you_have_pets": "你有寵物嗎",
@@ -202,7 +202,7 @@
   "zodiac": "十二生肖",
   "future_family": "未來的家庭",
   "education": "教育",
-  "vaccine_for_covid": "疫苗用於共卷",
+  "vaccine_for_covid": "疫苗用於共vid",
   "personality_type": "個性類型",
   "communication_style": "溝通方式",
   "love_languages": "愛語言",
@@ -235,12 +235,12 @@
   "control_profile": "控製配置文件",
   "don't_show_my_age": "不要顯示我的年齡",
   "don't_show_my_distance": "不要顯示我的距離",
-  "show_{nameScream}_on_my_profile": "在我的個人資料上顯示{namesCream}",
+  "show_{nameScream}_on_my_profile": "在我的個人資料上顯示{namescream}",
   "you_are_not_enter_the_phone_number": "您沒有輸入電話號碼",
   "interests": "利益",
   "my_gender": "我的性別",
   "my_orientation": "我的方向",
-  "version_x.y.z": "版本X.Y.Z",
+  "version_{number}": "版本{數字}",
   "km": "公里",
   "mi": "mi",
   "live_at_{nameAddress}": "住在{nameaddress}",
@@ -294,9 +294,9 @@
   "nope": "沒有",
   "supper_like": "晚餐喜歡",
   "add_living": "增加生活",
+  "create_new": "創建新的",
   "99+_like": "99+喜歡",
   "for_you": "為你",
-  "create_new": "創建新的",
   "months": "月份",
   "usd/months": "美元/月",
   "sale": "銷售",
@@ -317,6 +317,8 @@
   "please_provide_more_details_about_what_you_are_reporting": "請提供有關您報告的內容的更多詳細信息",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "如果您退出，則必須重新註冊您的帳戶並刪除所有信息。",
   "invalid_date_of_birth": "無效的出生日期",
+  "save": "節省",
+  "find_someone_that_also_looking_for_love_as_you": "找到一個也在尋找愛情的人",
   "are_you_sure_you_want_to_sign_out?": "您確定要退出嗎？",
   "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "兼容的用戶將繼續在最後確定的位置與您見面。",
   "delete_my_account": "刪除我的賬戶",
@@ -329,5 +331,17 @@
   "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "完成照片驗證後（通常在24小時內完成）後，我們將保留您的基本面部識別信息或“模板”。我們不存儲您的自拍視頻。",
   "invalid_image": "無效的圖像",
   "your_photo_does_not_match.please_select_a_photo_again": "您的照片不匹配。請再次選擇照片",
-  "learn_more_about_how_it_works": "了解有關其工作原理的更多信息"
+  "learn_more_about_how_it_works": "了解有關其工作原理的更多信息",
+  "before_you_continue...": "在繼續之前...",
+  "prepare_the_space": "準備空間",
+  "choose_a_place_with_enough_light": "選擇一個有足夠光的地方",
+  "avoid_glare_and_backlit": "避免眩光和背光",
+  "prepare_the_pose": "準備姿勢",
+  "looking_directly_at_the_camera": "直接看相機",
+  "remove_hats,_sunglasses,_and_face_coverings": "卸下帽子，太陽鏡和臉部覆蓋物",
+  "oh!": "哦！",
+  "we_cannot_record_your_video._please_try_again.": "我們無法錄製您的視頻。請再試一次。",
+  "increase_screen_brightness": "增加屏幕亮度",
+  "photo_verified": "照片已驗證",
+  "please_choose_a_reason": "請選擇一個原因"
 }
