--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -12,7 +12,7 @@
   "my_number_is": "رقمي هو",
   "phone_number": "رقم التليفون",
   "please_enter_a_valid_phone_number": "يرجى إدخال رقم هاتف صالح",
-  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "عند النقر فوق \"متابعة\" ، سترسل HeartLink نصًا برمز التحقق. تنطبق معدلات الرسائل ومعدلات البيانات.",
+  "when_you_tap_'continue',_heartLink_will_send_a_text_with_verification_code._message_and_data_rates_mate_apply.": "عند النقر فوق \"متابعة\" ، سترسل HeartLink نصًا برمز التحقق. تنطبق معدلات الرسائل والبيانات.",
   "the_verified_phone_number_can_be_used_to_log_in.": "يمكن استخدام رقم الهاتف الذي تم التحقق منه لتسجيل الدخول.",
   "learn_what_happens_when_your_number_changes.": "تعرف على ما يحدث عندما يتغير رقمك.",
   "continue": "يكمل",
@@ -31,7 +31,7 @@
   "make_sure_your_photos,_age_and_bio_true_to_who_you_are": "تأكد",
   "stay_safe": "ابق آمنًا",
   "don't_be_too_quick_to_give_out_personal_information.": "لا تكن سريعًا جدًا في إعطاء المعلومات الشخصية.",
-  "date_safety_guidelines": "إرشادات السلامة التاريخ",
+  "date_safety_guidelines": "إرشادات سلامة التاريخ",
   "play_it_cool": "العبها بارد",
   "respect_others_and_treat_them_as_you_would_like_to_be_treated": "احترم الآخرين ومعاملتهم كما ترغب في معاملتك",
   "be_proactive": "كن استباقي",
@@ -57,7 +57,7 @@
   "my_photos_are": "صوري",
   "add_at_least_2_photos_to_continue": "أضف ما لا يقل عن صورتين للمتابعة",
   "enable_location": "تمكن موقع",
-  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "ستحتاج إلى تمكين طلب موقعك لاستخدام heartlinks",
+  "you_will_need_to_enable_your_location_order_to_use_heartLinks": "ستحتاج إلى تمكين طلب موقعك لاستخدام HeartLinks",
   "allow_location": "السماح للموقع",
   "tell_me_more": "اخبرني المزيد",
   "meet_people_nearby": "قابل الناس في مكان قريب",
@@ -73,7 +73,7 @@
   "my_anthem": "نشيد بلدي",
   "what_is_the_reason_for_your_report?": "ما هو سبب تقريرك؟",
   "please_choose_1_reason": "الرجاء اختيار سبب واحد",
-  "we_won't_let_puddink_know_that_you_reported_them": "لن ندع Puddink يعرف أنك أبلغت عنها",
+  "we_won't_let_puddink_know_that_you_reported_them": "لن ندع Puddink تعرف أنك أبلغت عنها",
   "can_you_tell_us_what_happened?": "هل يمكن أن تخبرنا بما حدث؟",
   "would_you_mind_sharing_more_details_with_us?": "هل تمانع في مشاركة المزيد من التفاصيل معنا؟",
   "add_a_comment": "اضف تعليق",
@@ -105,7 +105,7 @@
   "boost_my_profile": "تعزيز ملفي الشخصي",
   "get_a_gold_package": "احصل على حزمة ذهبية",
   "5_free_supper_like_weekly": "5 عشاء مجاني مثل أسبوعي",
-  "get_supper_likes_package": "احصل على الحزمة Leger Super",
+  "get_supper_likes_package": "احصل على حزمة Leger Super",
   "stand_out_with_super_like": "تبرز مع سوبر مثل",
   "3x_chance_to_get_a_match": "3x فرصة للحصول على مباراة",
   "get_supper_likes": "احصل على عشاء يحب",
@@ -118,7 +118,7 @@
   "only_be_shown_to_people_you've_liked": "يتم عرضها فقط على الأشخاص الذين أعجبتهم",
   "like_profile_around_the_world": "مثل الملف الشخصي حول العالم",
   "passport_to_anywhere": "جواز السفر إلى أي مكان",
-  "unlimited_rewinds": "عودة غير محدودة",
+  "unlimited_rewinds": "إرجاع غير محدود",
   "go_back_and_try_again": "عد وحاول مرة أخرى",
   "turn_off_ads": "أوقف إيقاف الإعلانات",
   "have_fun_without_interruptions": "استمتع بدون انقطاع",
@@ -224,7 +224,7 @@
   "school_name": "اسم المدرسة",
   "living_in": "يعيش في",
   "show_instagram_photos": "عرض صور Instagram",
-  "connect_instagram": "قم بتوصيل Instagram",
+  "connect_instagram": "توصيل Instagram",
   "choose_an_anthem": "اختر النشيد",
   "my_top_spotify_artists": "أفضل فناني سبوتيفي",
   "connect_spotify": "توصيل Spotify",
@@ -235,12 +235,12 @@
   "control_profile": "الملف الشخصي للتحكم",
   "don't_show_my_age": "لا تظهر عمري",
   "don't_show_my_distance": "لا تظهر مسافة بلدي",
-  "show_{nameScream}_on_my_profile": "عرض {namescream} في ملفي الشخصي",
+  "show_{nameScream}_on_my_profile": "عرض {namescream} في ملف التعريف الخاص بي",
   "you_are_not_enter_the_phone_number": "أنت لا تدخل رقم الهاتف",
   "interests": "الإهتمامات",
   "my_gender": "جنسي",
   "my_orientation": "توجيهي",
-  "version_x.y.z": "الإصدار X.Y.Z",
+  "version_{number}": "رقم الإصدار}",
   "km": "كم",
   "mi": "مي",
   "live_at_{nameAddress}": "العيش في {nameaddress}",
@@ -278,12 +278,12 @@
   "prioritized_likes": "إعجاب الأولوية",
   "everyone_you_like_will_see_you_soon": "كل من تحب سيراك قريبا",
   "match_instantly_with_people_who_already_like_you": "تطابق على الفور مع الأشخاص الذين يحبونك بالفعل",
-  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "بما في ذلك أفضل اللقطات ، الإعجابات غير المحدودة ، دفعة 1free كل شهر ، 5 عشاء مجاني مثل كل أسبوع ، الترجيع وجواز السفر",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "بما في ذلك أفضل اللقطات ، الإعجابات غير المحدودة ، تعزيز 1free كل شهر ، 5 عشاء مجاني مثل كل أسبوع ، الترجيع وجواز السفر",
   "message_before_matching": "رسالة قبل المطابقة",
   "99+_people_already_like_you": "أكثر من 99 شخصًا مثلك",
   "see_who_likes_you_and_match_instantly": "تعرف على من يحبك ويطابق على الفور",
   "buy_more_top_picks": "شراء المزيد من أفضل اللقطات",
-  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "احصل على إمكانية الوصول الكامل إلى أفضل اللقطات ، مثلك ، أرسل إعجابات غير محدودة وأكثر",
+  "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "احصل على إمكانية الوصول الكامل إلى أفضل اللقطات ، مثلك ، إرسال إعجاب غير محدود والمزيد",
   "see_as_many_likes_as_you_want": "شاهد العديد من الإعجابات كما تريد",
   "1_free_boost_every_month": "1 دفعة مجانية كل شهر",
   "choose_who_see_you": "اختر من يراك",
@@ -294,15 +294,15 @@
   "nope": "لا",
   "supper_like": "العشاء مثل",
   "add_living": "أضف المعيشة",
+  "create_new": "خلق جديد إبداع جديد",
   "99+_like": "99+ مثل",
   "for_you": "لك",
-  "create_new": "خلق جديد إبداع جديد",
   "months": "شهور",
   "usd/months": "دولار أمريكي/شهور",
   "sale": "أُوكَازيُون",
   "recuring_billing,_cancel_anytime": "توقيت الفواتير ، إلغاء في أي وقت",
   "sale_50%": "بيع 50 ٪",
-  "get_read_receipt": "احصل على استلام القراءة",
+  "get_read_receipt": "احصل على إيصال قراءة",
   "supper_likes": "العشاء يحب",
   "5_free_supper_like_weekly_": "5 عشاء مجاني مثل أسبوعي",
   "or": "أو",
@@ -317,6 +317,8 @@
   "please_provide_more_details_about_what_you_are_reporting": "يرجى تقديم المزيد من التفاصيل حول ما تقوم بالإبلاغ عنه",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "إذا خرجت ، فسيتعين عليك إعادة تسجيل حسابك وحذف جميع المعلومات.",
   "invalid_date_of_birth": "تاريخ ميلاد غير صالح",
+  "save": "يحفظ",
+  "find_someone_that_also_looking_for_love_as_you": "ابحث عن شخص يبحث أيضًا عن الحب مثلك",
   "are_you_sure_you_want_to_sign_out?": "هل أنت متأكد أنك تريد الخروج؟",
   "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "سيستمر المستخدمون المتوافقون في رؤيتك في الموقع المحدد الأخير.",
   "delete_my_account": "احذف حسابي",
@@ -329,5 +331,17 @@
   "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "سنحتفظ بمعلومات التعرف على الوجه الأساسية ، أو \"القوالب\" ، عند الانتهاء من التحقق من الصور (عادةً ما يتم الانتهاء منها خلال 24 ساعة). نحن لا نقوم بتخزين مقاطع الفيديو الخاصة بك.",
   "invalid_image": "صورة غير صالحة",
   "your_photo_does_not_match.please_select_a_photo_again": "صورتك لا تتطابق. please حدد صورة مرة أخرى",
-  "learn_more_about_how_it_works": "تعرف على المزيد حول كيفية عملها"
+  "learn_more_about_how_it_works": "تعرف على المزيد حول كيفية عملها",
+  "before_you_continue...": "قبل أن تستمر ...",
+  "prepare_the_space": "تحضير الفضاء",
+  "choose_a_place_with_enough_light": "اختر مكانًا مع إضاءة كافية",
+  "avoid_glare_and_backlit": "تجنب الوهج والإضاءة الخلفية",
+  "prepare_the_pose": "تحضير الوضع",
+  "looking_directly_at_the_camera": "النظر مباشرة إلى الكاميرا",
+  "remove_hats,_sunglasses,_and_face_coverings": "قم بإزالة القبعات والنظارات الشمسية وأغطية الوجه",
+  "oh!": "أوه!",
+  "we_cannot_record_your_video._please_try_again.": "لا يمكننا تسجيل الفيديو الخاص بك. حاول مرة اخرى.",
+  "increase_screen_brightness": "زيادة سطوع الشاشة",
+  "photo_verified": "تم التحقق من الصورة",
+  "please_choose_a_reason": "الرجاء اختيار سبب"
 }
