--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -5,7 +5,7 @@
   "log_in_with_facebook": "Kirjaudu sisään Facebookin kanssa",
   "log_in_with_phone_number": "Kirjaudu sisään puhelinnumerolla",
   "trouble_logging_in?": "Vaivaa sisäänkirjautumista sisään?",
-  "by_clicking_'login',_you_agree_with_our_terms._learn_how_we_process_your_data_in_our": "Napsauttamalla 'Kirjaudu sisään', hyväksyt ehdojemme kanssa. Opi kuinka käsittelemme tietosi",
+  "by_clicking_'login',_you_agree_with_our_terms._learn_how_we_process_your_data_in_our": "Napsauttamalla 'Kirjaudu sisään', hyväksyt ehdojamme. Opi kuinka käsittelemme tietosi",
   "privacy_policy": "Tietosuojakäytäntö",
   "and": "ja",
   "cookies_policy": "Evästeet",
@@ -32,7 +32,7 @@
   "stay_safe": "Pysy turvassa",
   "don't_be_too_quick_to_give_out_personal_information.": "Älä ole liian nopea antaa henkilökohtaisia ​​tietoja.",
   "date_safety_guidelines": "Päivämääräturvallisuusohjeet",
-  "play_it_cool": "Pelata",
+  "play_it_cool": "Pelaa se siistiä",
   "respect_others_and_treat_them_as_you_would_like_to_be_treated": "Kunnioita muita ja kohtele heitä niin kuin haluaisit tulla",
   "be_proactive": "Olla aktiivinen",
   "always_report_bad_behavior": "Ilmoita aina huonosta käytöksestä",
@@ -101,7 +101,7 @@
   "recurring_billing,_cancel_anytime": "Toistuva laskutus, peruuta milloin tahansa",
   "get_boost_package": "Hanki Boost -paketti",
   "skip_the_queue": "Hyppää jono",
-  "always_on_top_profile_in_your_area_for_30_mins_to_get_more_matches": "Aina alueellasi huippuprofiilissa 30 minuutin ajan saadaksesi lisää otteluita",
+  "always_on_top_profile_in_your_area_for_30_mins_to_get_more_matches": "Aina alueellasi parhaimmassa profiilissa 30 minuutin ajan saadaksesi lisää otteluita",
   "boost_my_profile": "Lisää profiiliani",
   "get_a_gold_package": "Hanki kultapaketti",
   "5_free_supper_like_weekly": "5 ilmaista illallista kuten viikoittain",
@@ -136,7 +136,7 @@
   "age_range": "Ikähaarukka",
   "show_me": "Näytä minulle",
   "we_use_these_preferences_to_find_matches._some_match_suggestions_may_not_fall_within_your_desired_parameters": "Käytämme näitä mieltymyksiä löytääksesi otteluita. Jotkut vastaavat ehdotukset eivät välttämättä kuulu haluamasi parametriisi",
-  "control_who_you_see": "Hallitse ketä näet",
+  "control_who_you_see": "Hallita ketä näet",
   "sliver_package": "Paketti",
   "balance_recommendations": "Tasapainon suositukset",
   "see_the_most_relevant_people_to_you_(default_settings)": "Katso sinulle merkityksellisimmät ihmiset (oletusasetukset)",
@@ -240,10 +240,10 @@
   "interests": "Kiinnostuksen kohteet",
   "my_gender": "Sukupuoleni",
   "my_orientation": "Oma suuntaus",
-  "version_x.y.z": "Versio x.y.z",
+  "version_{number}": "Versio {numero}",
   "km": "km",
   "mi": "mi",
-  "live_at_{nameAddress}": "Elää {nameaddress}",
+  "live_at_{nameAddress}": "Live osoitteessa {nameaddress}",
   "{numberKilometers}_{unit}_away": "{NumberKilometers} {yksikkö}",
   "verified": "Varmennettu",
   "heartLink": "Sydänsolku",
@@ -294,9 +294,9 @@
   "nope": "Ei",
   "supper_like": "Illallinen kuten",
   "add_living": "Lisätä eläviä",
+  "create_new": "Luo uusi",
   "99+_like": "99+ kuten",
   "for_you": "Sinulle",
-  "create_new": "Luo uusi",
   "months": "kuukaudet",
   "usd/months": "USD/Kuukausia",
   "sale": "Myynti",
@@ -317,8 +317,10 @@
   "please_provide_more_details_about_what_you_are_reporting": "Anna lisätietoja siitä, mitä ilmoitat",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Jos poistut, sinun on rekisteröitävä tilisi uudelleen ja poistettava kaikki tiedot.",
   "invalid_date_of_birth": "Virheellinen syntymäpäivä",
+  "save": "Tallentaa",
+  "find_someone_that_also_looking_for_love_as_you": "Etsi joku, joka etsii myös rakkautta kuin sinä",
   "are_you_sure_you_want_to_sign_out?": "Oletko varma, että haluat kirjautua ulos?",
-  "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Yhteensopivat käyttäjät näkevät sinut edelleen viimeisimmässä tunnistetussa paikassa.",
+  "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Yhteensopivat käyttäjät näkevät sinut edelleen viimeisessä tunnistetussa paikassa.",
   "delete_my_account": "Poista minun tilini",
   "if_you_want_to_keep_the_account_but_not_visible_to_others,_you_can_choose_to_hide_the_account._you_can_disable_this_feature_in_the_settings.": "Jos haluat pitää tilin, mutta et ole näkyvissä muille, voit piilottaa tilin. Voit poistaa tämän ominaisuuden käytöstä asetuksissa.",
   "please_verify": "Tarkista",
@@ -328,6 +330,17 @@
   "our_face_recognition_technology_compares_your_face_in_selfie_videos_with_photos_in_your_profile._we'll_keep_two_screenshots_from_your_selfie_video_for_as_long_as_your_account_is_live_to_test_and_manage_your_photo_verification_feature._we_will_also_keep_the_results_of_the_process_(e.g._photo_verified_or_not).": "Kasvojen tunnistustekniikkamme vertaa kasvosi selfie -videoissa valokuvien kanssa profiilissasi. Pidämme kaksi kuvakaappausta selfie -videostasi niin kauan kuin tilisi on suorana testaamaan ja hallitsemaan valokuvien vahvistusominaisuutta. Pidämme myös prosessin tulokset (esim. Valokuva vahvistettu tai ei).",
   "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "Pidämme perustiedot kasvojen tunnistustietosi tai \"malleja\" valokuvien tarkistuksen päätyttyä (yleensä valmistettu 24 tunnin sisällä). Emme tallenna selfie -videoitasi.",
   "invalid_image": "Virheellinen kuva",
-  "your_photo_does_not_match.please_select_a_photo_again": "Valokuvasi ei vastaa. Valitse valokuva uudelleen",
-  "learn_more_about_how_it_works": "Lisätietoja siitä, miten se toimii"
+  "learn_more_about_how_it_works": "Lisätietoja siitä, miten se toimii",
+  "before_you_continue...": "Ennen kuin jatkat ...",
+  "prepare_the_space": "Valmistaa tila",
+  "choose_a_place_with_enough_light": "Valitse paikka, jossa on tarpeeksi valoa",
+  "avoid_glare_and_backlit": "Vältä häikäisyä ja taustavalaistua",
+  "prepare_the_pose": "Valmistaa pose",
+  "looking_directly_at_the_camera": "Tarkastellaan suoraan kameraa",
+  "remove_hats,_sunglasses,_and_face_coverings": "Poista hatut, aurinkolasit ja kasvojen peitot",
+  "oh!": "Vai niin!",
+  "we_cannot_record_your_video._please_try_again.": "Emme voi tallentaa videota. Yritä uudelleen.",
+  "increase_screen_brightness": "Lisää näytön kirkkautta",
+  "photo_verified": "Kuva vahvistettu",
+  "please_choose_a_reason": "Valitse syy"
 }
