--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -19,7 +19,7 @@
   "my_code_is": "Kode saya adalah",
   "please_enter_code_sent_to": "Harap masukkan kode yang dikirim ke",
   "resend_code": "Ulang kode",
-  "invalid_code._please_try_again": "Kode salah. Silakan coba lagi",
+  "invalid_code._please_try_again": "Kode salah. Tolong coba lagi",
   "what's_your_email?": "apa e-mailmu?",
   "don't_lose_access_to_your_account,_verify_your_email": "Jangan kehilangan akses ke akun Anda, verifikasi email Anda",
   "verify_instantly_by_connecting_your_google_account": "Verifikasi secara instan dengan menghubungkan akun Google Anda",
@@ -43,7 +43,7 @@
   "apply": "Menerapkan",
   "my_name_is": "Nama saya adalah",
   "your_name": "Namamu",
-  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "Beginilah cara muncul dalam tautan, dan Anda tidak akan dapat mengubahnya",
+  "this_is_how_it_will_appear_in_heartLink,_and_you_will_not_able_to_change_it": "Ini adalah bagaimana itu akan muncul dalam hati, dan Anda tidak akan dapat mengubahnya",
   "my_birthday_is": "Ulang tahun saya adalah",
   "your_age_will_be_public": "Usia Anda akan menjadi publik",
   "i_am_a": "saya adalah seorang",
@@ -60,12 +60,12 @@
   "you_will_need_to_enable_your_location_order_to_use_heartLinks": "Anda perlu mengaktifkan pesanan lokasi Anda untuk menggunakan HeartLinks",
   "allow_location": "Izinkan lokasi",
   "tell_me_more": "Ceritakan lebih banyak",
-  "meet_people_nearby": "Temui orang di dekatnya",
+  "meet_people_nearby": "Bertemu orang di dekatnya",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "Lokasi Anda akan digunakan untuk menunjukkan kecocokan potensial di dekat Anda.",
   "want_to_avoid_someone_you_know_on_heartLink?": "Ingin menghindari seseorang yang Anda kenal di Heartlink?",
   "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Mudah - Bagikan kontak perangkat Anda dengan Heartlink saat menggunakan fitur ini untuk memilih yang ingin Anda hindari",
-  "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Kami akan menyimpan kontak yang diblokir untuk menghentikan Anda dari melihat satu sama lain jika kontak Anda memiliki akun dengan infor yang sama dengan yang Anda berikan. Anda dapat berhenti berbagi dengan kami di pengaturan Anda.",
-  "learn_more_here,_including_how_heartLink_process_your_contacts": "Pelajari lebih lanjut di sini, termasuk bagaimana proses jantung memproses kontak Anda",
+  "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Kami akan menyimpan kontak yang diblokir untuk menghentikan Anda dari bertemu satu sama lain jika kontak Anda memiliki akun dengan infor yang sama dengan yang Anda berikan. Anda dapat berhenti berbagi dengan kami di pengaturan Anda.",
+  "learn_more_here,_including_how_heartLink_process_your_contacts": "Pelajari lebih lanjut di sini, termasuk bagaimana cara memproses kontak Anda",
   "share_{nameUser}_profile": "Bagikan Profil {NameUser}",
   "see_what_a_friend_thinks": "Lihat apa yang dipikirkan teman",
   "report_{nameUser}": "Laporkan {NameUser}",
@@ -92,13 +92,13 @@
   "get_supper_like": "Dapatkan makan malam",
   "silver_package": "Paket perak",
   "gold_package": "Paket emas",
-  "level_up_everyone_action_you_take_on_heartLink": "Level semua tindakan yang Anda ambil dalam tink",
+  "level_up_everyone_action_you_take_on_heartLink": "Level semua orang tindakan yang Anda ambil dalam tink",
   "get_read_receipt_package": "Dapatkan Paket Baca Kwitansi",
   "stay_up_to_date": "Tetap terkini",
-  "know_when_your_messages_have_been_read_with_read_receipt": "Ketahui kapan pesan Anda telah dibaca dengan tanda terima baca",
+  "know_when_your_messages_have_been_read_with_read_receipt": "Tahu kapan pesan Anda telah dibaca dengan tanda terima baca",
   "most_popular": "Paling Populer",
   "read_receipt": "Baca tanda terima",
-  "recurring_billing,_cancel_anytime": "Penagihan berulang, batal kapan saja",
+  "recurring_billing,_cancel_anytime": "Penagihan berulang, batalkan kapan saja",
   "get_boost_package": "Dapatkan Paket Boost",
   "skip_the_queue": "Lewati antrian",
   "always_on_top_profile_in_your_area_for_30_mins_to_get_more_matches": "Selalu di profil teratas di area Anda selama 30 menit untuk mendapatkan lebih banyak kecocokan",
@@ -150,7 +150,7 @@
   "on_wi-fi_and_mobile_data": "Di Wi-Fi dan Data Seluler",
   "never_auto_play_videos": "Never Auto Putar Video",
   "show_me_top_picks": "Tunjukkan Pilihan Teratas",
-  "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Menghidupkan ini akan memungkinkan Anda untuk ditampilkan sebagai pilihan atas yang ditampilkan untuk pengguna lain di dekat Anda",
+  "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Menyalakan ini akan memungkinkan Anda untuk ditampilkan sebagai pilihan atas yang ditampilkan untuk pengguna lain di dekat Anda",
   "activity_status": "Status aktivitas",
   "allow_other_members_to_see_if_you_were_recently_active_within_the_last_24h_on_heartLink._if_you_have_turned_this_off,_they_will_not_be_able_to_see_your_recently_active_status": "Izinkan anggota lain untuk melihat apakah Anda baru -baru ini aktif dalam 24 jam terakhir tentang Heartlink. Jika Anda telah mematikan ini, mereka tidak akan dapat melihat status aktif Anda yang baru saja aktif",
   "app_settings": "Pengaturan aplikasi",
@@ -240,7 +240,7 @@
   "interests": "Minat",
   "my_gender": "Jenis kelamin saya",
   "my_orientation": "orientasi saya",
-  "version_x.y.z": "Versi X.Y.Z",
+  "version_{number}": "Versi {Number}",
   "km": "km",
   "mi": "mi",
   "live_at_{nameAddress}": "Tinggal di {nameaddress}",
@@ -255,7 +255,7 @@
   "find_someone_to_get_coffee_with": "Temukan seseorang untuk mendapatkan kopi",
   "looking_for_love": "Mencari cinta",
   "blind_date": "Kencan buta",
-  "open_hour_6pm_-_12pm_(local_time)": "Jam buka jam 6 sore - 12:00 (waktu setempat)",
+  "open_hour_6pm_-_12pm_(local_time)": "Jam terbuka 6 sore - 12:00 (waktu setempat)",
   "share_idea": "Berbagi ide",
   "answer_tough_questions_instead_of_opening_sentences!_your_responses_will_appear_on_the_blind_date_interface_and_can_be_used_to_start_a_conversation": "Jawab pertanyaan sulit alih -alih membuka kalimat! Respons Anda akan muncul di antarmuka tanggal buta dan dapat digunakan untuk memulai percakapan",
   "get_ready": "Siap-siap",
@@ -279,7 +279,7 @@
   "everyone_you_like_will_see_you_soon": "Semua orang yang Anda sukai akan segera melihat Anda",
   "match_instantly_with_people_who_already_like_you": "Cocokkan secara instan dengan orang -orang yang sudah menyukai Anda",
   "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Termasuk pilihan teratas, suka tanpa batas, 1 -free boost setiap bulan, 5 makan malam gratis seperti setiap minggu, mundur dan paspor",
-  "message_before_matching": "Pesan sebelum dicocokkan",
+  "message_before_matching": "Pesan sebelum mencocokkan",
   "99+_people_already_like_you": "99+ orang sudah menyukai Anda",
   "see_who_likes_you_and_match_instantly": "Lihat siapa yang menyukai Anda dan cocok secara instan",
   "buy_more_top_picks": "Beli lebih banyak pilihan top",
@@ -294,9 +294,9 @@
   "nope": "TIDAK",
   "supper_like": "Suka makan malam",
   "add_living": "Tambahkan hidup",
+  "create_new": "Membuat baru",
   "99+_like": "99+ suka",
   "for_you": "Untukmu",
-  "create_new": "Membuat baru",
   "months": "bulan",
   "usd/months": "USD/bulan",
   "sale": "Penjualan",
@@ -317,6 +317,8 @@
   "please_provide_more_details_about_what_you_are_reporting": "Harap berikan detail lebih lanjut tentang apa yang Anda laporkan",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Jika Anda keluar, Anda harus mendaftar ulang akun Anda dan menghapus semua informasi.",
   "invalid_date_of_birth": "Tanggal lahir tidak valid",
+  "save": "Menyimpan",
+  "find_someone_that_also_looking_for_love_as_you": "Temukan seseorang yang juga mencari cinta seperti Anda",
   "are_you_sure_you_want_to_sign_out?": "Apakah Anda yakin ingin keluar?",
   "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Pengguna yang kompatibel akan terus melihat Anda di lokasi yang diidentifikasi terakhir.",
   "delete_my_account": "Hapus akun Saya",
@@ -329,5 +331,17 @@
   "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "Kami akan menyimpan informasi pengenalan wajah dasar Anda, atau \"templat,\" setelah menyelesaikan verifikasi foto (biasanya selesai dalam waktu 24 jam). Kami tidak menyimpan video selfie Anda.",
   "invalid_image": "Gambar tidak valid",
   "your_photo_does_not_match.please_select_a_photo_again": "Foto Anda tidak cocok. Silakan pilih foto lagi",
-  "learn_more_about_how_it_works": "Pelajari lebih lanjut tentang cara kerjanya"
+  "learn_more_about_how_it_works": "Pelajari lebih lanjut tentang cara kerjanya",
+  "before_you_continue...": "Sebelum Anda melanjutkan ...",
+  "prepare_the_space": "Persiapkan ruang",
+  "choose_a_place_with_enough_light": "Pilih tempat dengan cahaya yang cukup",
+  "avoid_glare_and_backlit": "Hindari silau dan backlit",
+  "prepare_the_pose": "Siapkan pose",
+  "looking_directly_at_the_camera": "Melihat langsung ke kamera",
+  "remove_hats,_sunglasses,_and_face_coverings": "Hapus topi, kacamata hitam, dan penutup wajah",
+  "oh!": "Oh!",
+  "we_cannot_record_your_video._please_try_again.": "Kami tidak dapat merekam video Anda. Tolong coba lagi.",
+  "increase_screen_brightness": "Tingkatkan kecerahan layar",
+  "photo_verified": "Foto diverifikasi",
+  "please_choose_a_reason": "Pilih alasan"
 }
