--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -146,7 +146,7 @@
   "only_be_shown_to_certain_types_of_people_for_individual_recommendations": "개별 권장 사항을 위해 특정 유형의 사람들에게만 표시됩니다.",
   "only_people_i've_liked": "내가 좋아하는 사람들 만",
   "only_people_you_have_liked_will_see_me": "당신이 좋아하는 사람들만이 나를 볼 것입니다",
-  "only_wi-fi_only": "Wi-Fi 만",
+  "only_wi-fi_only": "만 Wi-Fi 만",
   "on_wi-fi_and_mobile_data": "Wi-Fi 및 모바일 데이터",
   "never_auto_play_videos": "동영상을 자동 재생하지 마십시오",
   "show_me_top_picks": "최고의 선택을 보여주세요",
@@ -205,7 +205,7 @@
   "vaccine_for_covid": "코비드 백신",
   "personality_type": "성격 유형",
   "communication_style": "커뮤니케이션 스타일",
-  "love_languages": "사랑 언어",
+  "love_languages": "언어를 사랑합니다",
   "life_style": "생활 양식",
   "pets_free": "애완 동물이 무료",
   "drink_beer": "맥주를 마시다",
@@ -240,7 +240,7 @@
   "interests": "이해",
   "my_gender": "내 성별",
   "my_orientation": "내 오리엔테이션",
-  "version_x.y.z": "버전 X.Y.Z",
+  "version_{number}": "버전 {번호}",
   "km": "km",
   "mi": "미",
   "live_at_{nameAddress}": "{nameaddress}에 살고 있습니다.",
@@ -278,25 +278,25 @@
   "prioritized_likes": "우선 순위가 좋아합니다",
   "everyone_you_like_will_see_you_soon": "당신이 좋아하는 모든 사람이 곧 당신을 뵙겠습니다",
   "match_instantly_with_people_who_already_like_you": "이미 당신을 좋아하는 사람들과 즉시 일치하십시오",
-  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "최고 픽, 무제한 좋아요, 매달 1 피트 부스트, 매주 5 개의 무료 저녁, 되감기 및 여권 포함",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "최고 픽, 무제한 좋아요, 매월 1 Free Boost, 매주 5 개의 무료 저녁, 되감기 및 여권 포함",
   "message_before_matching": "일치하기 전에 메시지",
   "99+_people_already_like_you": "99 명 이상의 사람들이 이미 당신을 좋아합니다",
   "see_who_likes_you_and_match_instantly": "당신을 좋아하는 사람을보고 즉시 일치하십시오",
   "buy_more_top_picks": "더 많은 최고 선택을 구입하십시오",
   "get_full_access_to_top_picks,_like_you,_send_unlimited_likes_&_more": "당신과 같은 상위 픽에 완전히 액세스 할 수 있습니다.",
   "see_as_many_likes_as_you_want": "원하는만큼 좋아하는 것을보십시오",
-  "1_free_boost_every_month": "매달 1 번 무료 부스트",
+  "1_free_boost_every_month": "매달 1 번의 무료 부스트",
   "choose_who_see_you": "당신을 보는 사람을 선택하십시오",
   "5_free_supper_likes_very_week": "5 개의 무료 만찬은 매우 일주일을 좋아합니다",
-  "you're_3x_more_likely_to_get_a_match": "당신은 3 배 더 경기를 할 가능성이 더 높습니다",
+  "you're_3x_more_likely_to_get_a_match": "당신은 3 배 더 경기를 할 가능성이 높습니다",
   "online_now": "지금 온라인",
   "like": "좋다",
   "nope": "아니요",
   "supper_like": "저녁 식사와 같은",
   "add_living": "생활을 추가하십시오",
+  "create_new": "새로운 창조",
   "99+_like": "99+ 좋아요",
   "for_you": "당신을 위한",
-  "create_new": "새로운 창조",
   "months": "달",
   "usd/months": "USD/개월",
   "sale": "판매",
@@ -317,6 +317,8 @@
   "please_provide_more_details_about_what_you_are_reporting": "보고 한 내용에 대한 자세한 내용을 제공하십시오",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "나가면 계정을 다시 등록하고 모든 정보를 삭제해야합니다.",
   "invalid_date_of_birth": "유효하지 않은 생년월일",
+  "save": "구하다",
+  "find_someone_that_also_looking_for_love_as_you": "당신처럼 사랑을 찾는 사람을 찾으십시오",
   "are_you_sure_you_want_to_sign_out?": "서명 하시겠습니까?",
   "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "호환되는 사용자는 마지막으로 식별 된 위치에서 계속 보게 될 것입니다.",
   "delete_my_account": "계정을 삭제하다",
@@ -329,5 +331,17 @@
   "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "사진 검증이 완료되면 (일반적으로 24 시간 이내에 완료) 기본 얼굴 인식 정보 또는 \"템플릿\"을 유지합니다. 우리는 당신의 셀카 비디오를 저장하지 않습니다.",
   "invalid_image": "잘못된 이미지",
   "your_photo_does_not_match.please_select_a_photo_again": "사진이 일치하지 않습니다. 사진을 다시 선택하십시오",
-  "learn_more_about_how_it_works": "작동 방식에 대해 자세히 알아보십시오"
+  "learn_more_about_how_it_works": "작동 방식에 대해 자세히 알아보십시오",
+  "before_you_continue...": "계속하기 전에 ...",
+  "prepare_the_space": "공간을 준비하십시오",
+  "choose_a_place_with_enough_light": "충분한 빛이있는 장소를 선택하십시오",
+  "avoid_glare_and_backlit": "눈부심과 백라이트를 피하십시오",
+  "prepare_the_pose": "포즈를 준비하십시오",
+  "looking_directly_at_the_camera": "카메라를 직접보고 있습니다",
+  "remove_hats,_sunglasses,_and_face_coverings": "모자, 선글라스 및 얼굴 덮개를 제거하십시오",
+  "oh!": "오!",
+  "we_cannot_record_your_video._please_try_again.": "우리는 귀하의 비디오를 녹음 할 수 없습니다. 다시 시도하십시오.",
+  "increase_screen_brightness": "화면 밝기를 증가시킵니다",
+  "photo_verified": "사진 검증",
+  "please_choose_a_reason": "이유를 선택하십시오"
 }
