--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -47,7 +47,7 @@
   "my_birthday_is": "Mijn verjaardag is",
   "your_age_will_be_public": "Uw leeftijd zal openbaar zijn",
   "i_am_a": "ik ben een",
-  "show_{nameInformation}_on_my_profile": "Toon {NameInformation} op mijn profiel",
+  "show_{nameInformation}_on_my_profile": "Toon {nameInformation} op mijn profiel",
   "my_sexual_orientation_is": "Mijn seksuele geaardheid is",
   "select_up_to_3": "Selecteer maximaal 3",
   "skip": "Overslaan",
@@ -92,7 +92,7 @@
   "get_supper_like": "Krijg het avondeten zoals",
   "silver_package": "Zilverpakket",
   "gold_package": "Goudpakket",
-  "level_up_everyone_action_you_take_on_heartLink": "Niveau een opeenstapeling van de actie die je onderneemt op hartlink",
+  "level_up_everyone_action_you_take_on_heartLink": "Niveau de actie van iedereen, die u onderneemt op Heartlink",
   "get_read_receipt_package": "Ontvang het gelezen ontvangstpakket",
   "stay_up_to_date": "Blijf op de hoogte",
   "know_when_your_messages_have_been_read_with_read_receipt": "Weet wanneer uw berichten zijn gelezen met leesbewijs",
@@ -102,7 +102,7 @@
   "get_boost_package": "Krijg een boostpakket",
   "skip_the_queue": "Sla de wachtrij over",
   "always_on_top_profile_in_your_area_for_30_mins_to_get_more_matches": "Altijd op het bovenste profiel in uw regio gedurende 30 minuten om meer wedstrijden te krijgen",
-  "boost_my_profile": "Stimuleer mijn profiel",
+  "boost_my_profile": "Boost mijn profiel",
   "get_a_gold_package": "Koop een goudpakket",
   "5_free_supper_like_weekly": "5 gratis avondmaal zoals wekelijks",
   "get_supper_likes_package": "Krijg het avondmaallikpakket",
@@ -118,7 +118,7 @@
   "only_be_shown_to_people_you've_liked": "Alleen worden getoond aan mensen die je leuk vond",
   "like_profile_around_the_world": "Zoals profiel over de hele wereld",
   "passport_to_anywhere": "Paspoort naar overal",
-  "unlimited_rewinds": "Onbeperkte terugspoelen",
+  "unlimited_rewinds": "Onbeperkt terugspoelen",
   "go_back_and_try_again": "Ga terug en probeer het opnieuw",
   "turn_off_ads": "Schakel advertenties uit",
   "have_fun_without_interruptions": "Veel plezier zonder onderbrekingen",
@@ -240,13 +240,13 @@
   "interests": "Belangen",
   "my_gender": "Mijn geslacht",
   "my_orientation": "Mijn oriëntatie",
-  "version_x.y.z": "Versie X.Y.Z",
+  "version_{number}": "Versienummer}",
   "km": "km",
   "mi": "mi",
   "live_at_{nameAddress}": "Leef bij {NameAddress}",
   "{numberKilometers}_{unit}_away": "{Numberkilometers} {eenheid} weg",
   "verified": "Geverifieerd",
-  "heartLink": "Hartverschiet",
+  "heartLink": "Hartzeer",
   "don't_worry_-_we_won't_tell_this_person": "Maak je geen zorgen - we zullen deze persoon niet vertellen",
   "finding_people_near_you...": "Mensen bij je in de buurt vinden ...",
   "let's_be_friend": "Laten we vrienden zijn",
@@ -292,11 +292,11 @@
   "online_now": "Nu online",
   "like": "LEUK VINDEN",
   "nope": "NEE",
-  "supper_like": "Avondmaal lijken",
+  "supper_like": "Avondmaal zoals",
   "add_living": "Voeg het leven toe",
+  "create_new": "Maak nieuw",
   "99+_like": "99+ Like",
   "for_you": "Voor jou",
-  "create_new": "Maak nieuw",
   "months": "maanden",
   "usd/months": "USD/maanden",
   "sale": "Verkoop",
@@ -317,8 +317,10 @@
   "please_provide_more_details_about_what_you_are_reporting": "Geef meer informatie over wat u meldt",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Als u verlaat, moet u uw account opnieuw registreren en alle informatie verwijderen.",
   "invalid_date_of_birth": "Ongeldige geboortedatum",
+  "save": "Redden",
+  "find_someone_that_also_looking_for_love_as_you": "Zoek iemand die ook op zoek is naar liefde als jij",
   "are_you_sure_you_want_to_sign_out?": "Weet je zeker dat je je wilt afmelden?",
-  "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Compatibele gebruikers zullen u blijven zien op de laatste geïdentificeerde locatie.",
+  "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Compatibele gebruikers blijven u op de laatste geïdentificeerde locatie zien.",
   "delete_my_account": "Verwijder mijn account",
   "if_you_want_to_keep_the_account_but_not_visible_to_others,_you_can_choose_to_hide_the_account._you_can_disable_this_feature_in_the_settings.": "Als u het account wilt behouden maar niet zichtbaar voor anderen wilt, kunt u ervoor kiezen om het account te verbergen. U kunt deze functie in de instellingen uitschakelen.",
   "please_verify": "Aub controleren",
@@ -329,5 +331,17 @@
   "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "We houden uw basisinformatie voor gezichtsherkenning of 'sjablonen' bij het voltooien van fotoverificatie (meestal binnen 24 uur voltooid). We slaan je selfie -video's niet op.",
   "invalid_image": "Ongeldige afbeelding",
   "your_photo_does_not_match.please_select_a_photo_again": "Uw foto komt niet overeen. Selecteer opnieuw een foto opnieuw",
-  "learn_more_about_how_it_works": "Lees meer over hoe het werkt"
+  "learn_more_about_how_it_works": "Lees meer over hoe het werkt",
+  "before_you_continue...": "Voordat je verder gaat ...",
+  "prepare_the_space": "Bereid de ruimte voor",
+  "choose_a_place_with_enough_light": "Kies een plaats met voldoende licht",
+  "avoid_glare_and_backlit": "Vermijd schittering en verlicht",
+  "prepare_the_pose": "Bereid de pose voor",
+  "looking_directly_at_the_camera": "Rechtstreeks naar de camera kijken",
+  "remove_hats,_sunglasses,_and_face_coverings": "Verwijder hoeden, zonnebrillen en gezichtsbekledingen",
+  "oh!": "Oh!",
+  "we_cannot_record_your_video._please_try_again.": "We kunnen uw video niet opnemen. Probeer het opnieuw.",
+  "increase_screen_brightness": "Verhoog de helderheid van het scherm",
+  "photo_verified": "Foto geverifieerd",
+  "please_choose_a_reason": "Kies een reden"
 }
