--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -5,7 +5,7 @@
   "log_in_with_facebook": "Entrar com o Facebook",
   "log_in_with_phone_number": "Faça login com o número de telefone",
   "trouble_logging_in?": "Problema fazer login?",
-  "by_clicking_'login',_you_agree_with_our_terms._learn_how_we_process_your_data_in_our": "Ao clicar em 'Login', você concorda com nossos termos. Aprenda como processamos seus dados em nosso",
+  "by_clicking_'login',_you_agree_with_our_terms._learn_how_we_process_your_data_in_our": "Ao clicar em 'Login', você concorda com nossos termos. Saiba como processamos seus dados em nosso",
   "privacy_policy": "Política de Privacidade",
   "and": "e",
   "cookies_policy": "Política de cookies",
@@ -64,7 +64,7 @@
   "you_location_will_be_used_to_show_potential_matches_near_you.": "Seu local será usado para mostrar possíveis correspondências perto de você.",
   "want_to_avoid_someone_you_know_on_heartLink?": "Quer evitar alguém que você conhece no HeartLink?",
   "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "É fácil - compartilhe o contato do seu dispositivo com o HeartLink ao usar esse recurso para escolher quem você deseja evitar",
-  "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Armazetaremos seu contato bloqueado para impedir que você se veja se o seu contato tiver uma conta com o mesmo Infor que você fornece. Você pode parar de compartilhar conosco em suas configurações.",
+  "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Armavaremos seu contato bloqueado para impedir que você se veja se o seu contato tiver uma conta com o mesmo Infor que você fornece. Você pode parar de compartilhar conosco em suas configurações.",
   "learn_more_here,_including_how_heartLink_process_your_contacts": "Saiba mais aqui, incluindo como o HeartLink processa seus contatos",
   "share_{nameUser}_profile": "Compartilhar {NameUser} perfil",
   "see_what_a_friend_thinks": "Veja o que um amigo pensa",
@@ -89,7 +89,7 @@
   "messages": "Mensagens",
   "get_read_receipts": "Obtenha recibos de leitura",
   "get_boost_profile": "Obtenha o perfil de impulso",
-  "get_supper_like": "Obtenha o jantar como",
+  "get_supper_like": "Pegue o jantar como",
   "silver_package": "Pacote de prata",
   "gold_package": "Pacote de ouro",
   "level_up_everyone_action_you_take_on_heartLink": "Level -up todos ações que você toma no HeartLink",
@@ -104,7 +104,7 @@
   "always_on_top_profile_in_your_area_for_30_mins_to_get_more_matches": "Sempre no perfil superior em sua área por 30 minutos para obter mais partidas",
   "boost_my_profile": "Aumente meu perfil",
   "get_a_gold_package": "Obtenha um pacote de ouro",
-  "5_free_supper_like_weekly": "5 Ceia grátis como semanalmente",
+  "5_free_supper_like_weekly": "5 Ceia grátis como semanal",
   "get_supper_likes_package": "Obtenha o pacote de curtidas de ceia",
   "stand_out_with_super_like": "Se destacar com super como",
   "3x_chance_to_get_a_match": "3x chance de conseguir uma partida",
@@ -132,7 +132,7 @@
   "no_data": "Sem dados",
   "add_language": "Adicione a linguagem",
   "maximum_distance": "Distância máxima",
-  "only_show_people_in_this_range": "Apenas mostre as pessoas nesta faixa",
+  "only_show_people_in_this_range": "Só mostre as pessoas nesse intervalo",
   "age_range": "Faixa etária",
   "show_me": "Mostre-me",
   "we_use_these_preferences_to_find_matches._some_match_suggestions_may_not_fall_within_your_desired_parameters": "Usamos essas preferências para encontrar correspondências. Algumas sugestões de correspondência podem não se enquadrar nos parâmetros desejados",
@@ -147,7 +147,7 @@
   "only_people_i've_liked": "Apenas pessoas que eu gostei",
   "only_people_you_have_liked_will_see_me": "Só pessoas que você gostou vão me ver",
   "only_wi-fi_only": "Apenas Wi-Fi",
-  "on_wi-fi_and_mobile_data": "Em dados wi-fi e móveis",
+  "on_wi-fi_and_mobile_data": "Em dados Wi-Fi e Mobile",
   "never_auto_play_videos": "Nunca vídeos de reprodução automática",
   "show_me_top_picks": "Mostre -me as melhores escolhas",
   "turning_this_on_will_allow_you_to_be_shown_as_a_featured_top_pick_to_other_users_near_you": "Ativar isso, permitirá que você seja mostrado como uma escolha superior em destaque para outros usuários perto de você",
@@ -240,7 +240,7 @@
   "interests": "Interesses",
   "my_gender": "O meu sexo",
   "my_orientation": "minha orientação",
-  "version_x.y.z": "Versão X.Y.Z",
+  "version_{number}": "Número da versão}",
   "km": "km",
   "mi": "mi",
   "live_at_{nameAddress}": "Viva em {nameaddress}",
@@ -255,7 +255,7 @@
   "find_someone_to_get_coffee_with": "Encontre alguém para tomar café",
   "looking_for_love": "Procurando por amor",
   "blind_date": "Encontro às cegas",
-  "open_hour_6pm_-_12pm_(local_time)": "Hora aberta 18:00 - 12:00 (horário local)",
+  "open_hour_6pm_-_12pm_(local_time)": "Hora aberta 18:00 às 12:00 (horário local)",
   "share_idea": "Compartilhe a ideia",
   "answer_tough_questions_instead_of_opening_sentences!_your_responses_will_appear_on_the_blind_date_interface_and_can_be_used_to_start_a_conversation": "Responda a perguntas difíceis em vez de abrir frases! Suas respostas aparecerão na interface de data cega e podem ser usadas para iniciar uma conversa",
   "get_ready": "Prepare-se",
@@ -278,7 +278,7 @@
   "prioritized_likes": "Curtidas priorizadas",
   "everyone_you_like_will_see_you_soon": "Todos que você gosta vão te ver em breve",
   "match_instantly_with_people_who_already_like_you": "Combine instantaneamente com pessoas que já gostam de você",
-  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Incluindo as principais escolhas, curtidas ilimitadas, impulso de 1Free todos os meses, 5 ceia grátis como toda semana, rebobinando e passaporte",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Incluindo as principais escolhas, curtidas ilimitadas, impulso 1 -livre todos os meses, 5 ceia grátis como toda semana, rebobinagem e passaporte",
   "message_before_matching": "Mensagem antes de corresponder",
   "99+_people_already_like_you": "Mais de 99 pessoas já gostam de você",
   "see_who_likes_you_and_match_instantly": "Veja quem gosta de você e combine instantaneamente",
@@ -294,9 +294,9 @@
   "nope": "NÃO",
   "supper_like": "Ceia como",
   "add_living": "Adicione viva",
+  "create_new": "Crie um novo",
   "99+_like": "99+ como",
   "for_you": "Para você",
-  "create_new": "Crie um novo",
   "months": "meses",
   "usd/months": "USD/meses",
   "sale": "Oferta",
@@ -317,6 +317,8 @@
   "please_provide_more_details_about_what_you_are_reporting": "Forneça mais detalhes sobre o que você está relatando",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Se você sair, terá que registrar novamente sua conta e excluir todas as informações.",
   "invalid_date_of_birth": "Data de nascimento inválida",
+  "save": "Salvar",
+  "find_someone_that_also_looking_for_love_as_you": "Encontre alguém que também procurando amor como você",
   "are_you_sure_you_want_to_sign_out?": "Você tem certeza que deseja sair?",
   "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Usuários compatíveis continuarão a vê -lo no último local identificado.",
   "delete_my_account": "Deletar minha conta",
@@ -329,5 +331,17 @@
   "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "Manteremos suas informações básicas de reconhecimento facial, ou \"modelos\", após a conclusão da verificação de fotos (geralmente concluída em 24 horas). Não armazenamos seus vídeos de selfie.",
   "invalid_image": "Imagem inválida",
   "your_photo_does_not_match.please_select_a_photo_again": "Sua foto não corresponde. Por favor, selecione uma foto novamente",
-  "learn_more_about_how_it_works": "Saiba mais sobre como funciona"
+  "learn_more_about_how_it_works": "Saiba mais sobre como funciona",
+  "before_you_continue...": "Antes de continuar ...",
+  "prepare_the_space": "Prepare o espaço",
+  "choose_a_place_with_enough_light": "Escolha um lugar com luz suficiente",
+  "avoid_glare_and_backlit": "Evite o brilho e a iluminação",
+  "prepare_the_pose": "Prepare a pose",
+  "looking_directly_at_the_camera": "Olhando diretamente para a câmera",
+  "remove_hats,_sunglasses,_and_face_coverings": "Remova chapéus, óculos de sol e revestimentos de rosto",
+  "oh!": "Oh!",
+  "we_cannot_record_your_video._please_try_again.": "Não podemos gravar seu vídeo. Por favor, tente novamente.",
+  "increase_screen_brightness": "Aumente o brilho da tela",
+  "photo_verified": "Foto verificada",
+  "please_choose_a_reason": "Escolha um motivo"
 }
