--- a/src/locales/ro.json
+++ b/src/locales/ro.json
@@ -53,7 +53,7 @@
   "skip": "Ocolire",
   "my_interests_are": "Interesele mele sunt",
   "let_everyone_know_what_you're_passionate_about,_by_adding_it_to_your_profile": "Spune -i pe toți ce te pasionează, adăugându -l la profilul tău",
-  "show_me_gender": "Arată -mi sex",
+  "show_me_gender": "Arată -mi genul",
   "my_photos_are": "Fotografiile mele sunt",
   "add_at_least_2_photos_to_continue": "Adăugați cel puțin 2 fotografii pentru a continua",
   "enable_location": "Activați locația",
@@ -68,7 +68,7 @@
   "learn_more_here,_including_how_heartLink_process_your_contacts": "Aflați mai multe aici, inclusiv modul în care se prelucrează legătura HeartLink Contacte",
   "share_{nameUser}_profile": "Partajează {NameSer} profil",
   "see_what_a_friend_thinks": "Vedeți ce crede un prieten",
-  "report_{nameUser}": "Raport {nameusUser}",
+  "report_{nameUser}": "Raport {namesuser}",
   "away": "departe",
   "my_anthem": "Imnul meu",
   "what_is_the_reason_for_your_report?": "Care este motivul raportului dvs.?",
@@ -111,7 +111,7 @@
   "get_supper_likes": "Ia -i cină",
   "get_silver_package": "Obțineți un pachet de argint",
   "unlimited_likes": "Like -uri nelimitate",
-  "send_as_many_likes_as_you_want": "Trimiteți cât de multe like -uri doriți",
+  "send_as_many_likes_as_you_want": "Trimiteți cât mai multe like -uri",
   "control_your_profile": "Controlați -vă profilul",
   "limit_what_others_see_with_dating_plus": "Limitați ceea ce văd alții cu Dating Plus",
   "choose_who_sees_you": "Alege cine te vede",
@@ -240,7 +240,7 @@
   "interests": "Interese",
   "my_gender": "Genul meu",
   "my_orientation": "Orientarea mea",
-  "version_x.y.z": "Versiunea X.Y.Z",
+  "version_{number}": "Versiunea numarul}",
   "km": "km",
   "mi": "MI",
   "live_at_{nameAddress}": "Trăiește la {nameaddress}",
@@ -255,7 +255,7 @@
   "find_someone_to_get_coffee_with": "Găsiți pe cineva cu care să luați cafea",
   "looking_for_love": "Căutând dragoste",
   "blind_date": "Întâlnire pe nevăzute",
-  "open_hour_6pm_-_12pm_(local_time)": "Ora deschisă 18:00 - 12:00 (ora locală)",
+  "open_hour_6pm_-_12pm_(local_time)": "Ora deschisă la ora 18:00 - 12:00 (ora locală)",
   "share_idea": "Împărtășește idee",
   "answer_tough_questions_instead_of_opening_sentences!_your_responses_will_appear_on_the_blind_date_interface_and_can_be_used_to_start_a_conversation": "Răspundeți la întrebări dure în loc să deschideți propoziții! Răspunsurile dvs. vor apărea pe interfața Blind Data și pot fi utilizate pentru a începe o conversație",
   "get_ready": "Pregateste-te",
@@ -278,7 +278,7 @@
   "prioritized_likes": "Prioritizate like -uri",
   "everyone_you_like_will_see_you_soon": "Toți cei care îți plac te vor vedea în curând",
   "match_instantly_with_people_who_already_like_you": "Se potrivește instantaneu cu oameni care deja vă plac",
-  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Inclusiv alegeri de top, like -uri nelimitate, impulsuri de 1Free în fiecare lună, 5 cină liberă ca în fiecare săptămână, derulare și pașaport",
+  "including_top_picks,_unlimited_likes,_1free_boost_every_month,_5_free_supper_like_every_week,_rewind_and_passport": "Inclusiv alegeri de top, like -uri nelimitate, impulsuri de 1Free în fiecare lună, 5 cină liberă ca în fiecare săptămână, demersuri și pașaport",
   "message_before_matching": "Mesaj înainte de potrivire",
   "99+_people_already_like_you": "99+ persoane deja ca tine",
   "see_who_likes_you_and_match_instantly": "Vedeți cine vă place și potriviți -vă instantaneu",
@@ -294,9 +294,9 @@
   "nope": "NU",
   "supper_like": "Cina ca",
   "add_living": "Adăugați traiul",
+  "create_new": "Creaza nou",
   "99+_like": "99+ ca",
   "for_you": "Pentru dumneavoastră",
-  "create_new": "Creaza nou",
   "months": "luni",
   "usd/months": "USD/luni",
   "sale": "Vânzare",
@@ -314,9 +314,11 @@
   "usd/each": "USD/fiecare",
   "get_gold_package": "Obțineți pachet de aur",
   "search_language": "Limba de căutare",
-  "please_provide_more_details_about_what_you_are_reporting": "Vă rugăm să furnizați mai multe detalii despre ceea ce raportați",
+  "please_provide_more_details_about_what_you_are_reporting": "Vă rugăm să oferiți mai multe detalii despre ceea ce raportați",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Dacă ieșiți, va trebui să vă înregistrați contul și să ștergeți toate informațiile.",
   "invalid_date_of_birth": "Data nașterii nevalide",
+  "save": "Salvați",
+  "find_someone_that_also_looking_for_love_as_you": "Găsiți pe cineva care caută și dragoste ca tine",
   "are_you_sure_you_want_to_sign_out?": "Ești sigur că vrei să te conectezi?",
   "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Utilizatorii compatibili vor continua să vă vadă în ultima locație identificată.",
   "delete_my_account": "Sterge contul meu",
@@ -329,5 +331,17 @@
   "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "Vă vom păstra informațiile de bază de recunoaștere facială sau „șabloane”, după finalizarea verificării foto (de obicei finalizate în 24 de ore). Nu vă stocăm videoclipurile selfie.",
   "invalid_image": "Imagine nevalide",
   "your_photo_does_not_match.please_select_a_photo_again": "Fotografia dvs. nu se potrivește. Vă rugăm să selectați din nou o fotografie",
-  "learn_more_about_how_it_works": "Aflați mai multe despre cum funcționează"
+  "learn_more_about_how_it_works": "Aflați mai multe despre cum funcționează",
+  "before_you_continue...": "Înainte de a continua ...",
+  "prepare_the_space": "Pregătiți spațiul",
+  "choose_a_place_with_enough_light": "Alegeți un loc cu suficientă lumină",
+  "avoid_glare_and_backlit": "Evitați strălucirea și retrogradarea",
+  "prepare_the_pose": "Pregătiți poza",
+  "looking_directly_at_the_camera": "Privind direct la cameră",
+  "remove_hats,_sunglasses,_and_face_coverings": "Îndepărtați pălăriile, ochelarii de soare și acoperirile pentru față",
+  "oh!": "Oh!",
+  "we_cannot_record_your_video._please_try_again.": "Nu vă putem înregistra videoclipul. Vă rugăm să încercați din nou.",
+  "increase_screen_brightness": "Creșteți luminozitatea ecranului",
+  "photo_verified": "Fotografie verificată",
+  "please_choose_a_reason": "Vă rugăm să alegeți un motiv"
 }
