--- a/src/locales/zh-rCN.json
+++ b/src/locales/zh-rCN.json
@@ -23,7 +23,7 @@
   "what's_your_email?": "您的电子邮件是什么？",
   "don't_lose_access_to_your_account,_verify_your_email": "不要失去访问您的帐户，请验证您的电子邮件",
   "verify_instantly_by_connecting_your_google_account": "通过连接Google帐户立即验证",
-  "i_want_to_receive_news,_updates_and_offers_from_heartLink": "我想从Heartlink那里收到新闻，更新和报价",
+  "i_want_to_receive_news,_updates_and_offers_from_heartLink": "我想收到新闻，更新和heartlink的报价",
   "enter_email": "输入电子邮件",
   "welcome_to_heartLink": "欢迎来到Heartlink",
   "please_follow_our_rules_to_have_more_fun_and_build_a_great_community_together": "请遵守我们的规则，以获得更多乐趣，并共同建立一个伟大的社区",
@@ -55,7 +55,7 @@
   "let_everyone_know_what_you're_passionate_about,_by_adding_it_to_your_profile": "通过将其添加到您的个人资料中，让所有人都知道您对您的热情",
   "show_me_gender": "告诉我性别",
   "my_photos_are": "我的照片是",
-  "add_at_least_2_photos_to_continue": "至少添加2张照片继续",
+  "add_at_least_2_photos_to_continue": "添加至少2张照片以继续",
   "enable_location": "启用位置",
   "you_will_need_to_enable_your_location_order_to_use_heartLinks": "您将需要启用您的位置订单才能使用HeartLinks",
   "allow_location": "允许位置",
@@ -63,7 +63,7 @@
   "meet_people_nearby": "认识附近的人",
   "you_location_will_be_used_to_show_potential_matches_near_you.": "您的位置将用于显示您附近的潜在比赛。",
   "want_to_avoid_someone_you_know_on_heartLink?": "想避免在心链接上认识的人吗？",
-  "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "这很容易 - 在使用此功能选择您想要避免的人时，请分享设备与HeartLink的联系",
+  "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "这很容易 - 在使用此功能选择您想避免的人时，请分享设备与HeartLink的联系",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "如果您的联系人的帐户与您提供的相同的Infor，我们将存储您的封锁联系人，以阻止您彼此见面。您可以在您的设置中停止与我们共享。",
   "learn_more_here,_including_how_heartLink_process_your_contacts": "在这里了解更多信息，包括如何进行心脏链接处理您的联系人",
   "share_{nameUser}_profile": "共享{nameuser}个人资料",
@@ -132,7 +132,7 @@
   "no_data": "没有数据",
   "add_language": "添加语言",
   "maximum_distance": "最大距离",
-  "only_show_people_in_this_range": "仅向人们展示该范围内的人",
+  "only_show_people_in_this_range": "仅显示该范围内的人",
   "age_range": "年龄范围",
   "show_me": "给我看看",
   "we_use_these_preferences_to_find_matches._some_match_suggestions_may_not_fall_within_your_desired_parameters": "我们使用这些偏好来查找匹配项。一些匹配建议可能不属于您所需的参数",
@@ -231,7 +231,7 @@
   "gender": "性别",
   "sexual_orientation": "性取向",
   "show_my_sexual_orientation_on_profile": "在个人资料上显示我的性取向",
-  "select_to_3": "选择到3",
+  "select_to_3": "选择3",
   "control_profile": "控制配置文件",
   "don't_show_my_age": "不要显示我的年龄",
   "don't_show_my_distance": "不要显示我的距离",
@@ -240,7 +240,7 @@
   "interests": "利益",
   "my_gender": "我的性别",
   "my_orientation": "我的方向",
-  "version_x.y.z": "版本X.Y.Z",
+  "version_{number}": "版本{数字}",
   "km": "公里",
   "mi": "mi",
   "live_at_{nameAddress}": "住在{nameaddress}",
@@ -294,9 +294,9 @@
   "nope": "没有",
   "supper_like": "晚餐喜欢",
   "add_living": "增加生活",
+  "create_new": "创建新的",
   "99+_like": "99+喜欢",
   "for_you": "为你",
-  "create_new": "创建新的",
   "months": "月份",
   "usd/months": "美元/月",
   "sale": "销售",
@@ -317,6 +317,8 @@
   "please_provide_more_details_about_what_you_are_reporting": "请提供有关您报告的内容的更多详细信息",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "如果您退出，则必须重新注册您的帐户并删除所有信息。",
   "invalid_date_of_birth": "无效的出生日期",
+  "save": "节省",
+  "find_someone_that_also_looking_for_love_as_you": "找到一个也在寻找爱情的人",
   "are_you_sure_you_want_to_sign_out?": "您确定要退出吗？",
   "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "兼容的用户将继续在最后确定的位置与您见面。",
   "delete_my_account": "删除我的账户",
@@ -329,5 +331,17 @@
   "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "完成照片验证后（通常在24小时内完成）后，我们将保留您的基本面部识别信息或“模板”。我们不存储您的自拍视频。",
   "invalid_image": "无效的图像",
   "your_photo_does_not_match.please_select_a_photo_again": "您的照片不匹配。请再次选择照片",
-  "learn_more_about_how_it_works": "了解有关其工作原理的更多信息"
+  "learn_more_about_how_it_works": "了解有关其工作原理的更多信息",
+  "before_you_continue...": "在继续之前...",
+  "prepare_the_space": "准备空间",
+  "choose_a_place_with_enough_light": "选择一个有足够光的地方",
+  "avoid_glare_and_backlit": "避免眩光和背光",
+  "prepare_the_pose": "准备姿势",
+  "looking_directly_at_the_camera": "直接看相机",
+  "remove_hats,_sunglasses,_and_face_coverings": "卸下帽子，太阳镜和脸部覆盖物",
+  "oh!": "哦！",
+  "we_cannot_record_your_video._please_try_again.": "我们无法录制您的视频。请再试一次。",
+  "increase_screen_brightness": "增加屏幕亮度",
+  "photo_verified": "照片已验证",
+  "please_choose_a_reason": "请选择一个原因"
 }
